--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,76 +1,24 @@
 ---
-title: 特鲁多中共傀儡已经无需掩盖的邪恶镇压（三）
+title: 不要再调侃乌克兰战争，给海外华人留条活路吧！
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2074571/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2074682/)
 
-编译：the world , weiwei
+撰稿人：Microkevin
 
-【接上篇：[特鲁多中共傀儡已经无需掩盖的邪恶镇压（二）](https://gnews.org/zh-hans/2074505/)】
+昨日，中国网民们在网上发表的调侃乌克兰战争和号称“收留乌克兰美女，年轻漂亮的优先”等歧视乌克兰女性和物化乌克兰女性的言论被乌克兰媒体翻译成当地文字传播至全国，这让在乌克兰华人和留学生深陷入排华绝境，有网文评论称：一乌克兰人拿着枪对着一华人发难，问他是不是中国人。该华人回答，不是。乌克兰人遂持枪离开。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16459624911.png)图片来自网络
+关于此等言论我想谈点自己的看法：
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2587-edited-2.png)banned.video
+首先，我无法确认乌克兰人持枪发难该华人是否和此言论有直接因果关系。不过这种言论至少给东欧排华事件的发生加了稻草。七哥说过未来排华最严重的地区之一就是东欧。我想说的是这些人不代表我们所有的中国人。大陆很多明智的网民对此类言论的也进行了抨击。我相信，很多不明真相的中国人只是被“驭民五术”蒙蔽了双眼，无法看清事物的因果关系。而我们新中国联邦人此时更应该加大宣传ccp邪恶洗脑统治，同时新中国联邦人的形象和行为发挥正面影响，减小排华事件发生的几率，保护所有的海内外中国人。让西方人理解我们的部分同胞只是因被洗脑而无法辨别真相，他们不能代表所有的中国人。
 
-看看他们现在对卡车司机做了什么？！戴上你的装备，到那里去，不要胆怯，挺直你的脊梁骨。因为现在是一个关键时刻，我们将在自由和法西斯主义之间做出选择；为了我们的孩子和孙子能生活在哪一种世界做出选择。
+我认为，我们中国人从心底是有善良的，是有正义，有情怀的。这就是为什么七哥带领的爆料革命和新中国联邦会有这么多海内外中国人誓死跟随。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16459625031.png)图片来自网络
+第二，我想对这些发此等言论调侃战争和对女性充满蔑视的言论的无知愚蠢的网民们说一句：徐州丰县锁链女的事情还没有落幕，你们就叫嚷着收留乌克兰美女，还得年轻漂亮的优先。还知道找年轻漂亮的看来你们也不傻，咱能不能有点同理心，设身处地的想想如果你们和你们的姐妹处于战争中，或者说ccp攻打台湾之后，大陆一定会被西方联合制裁，那时候ccp有14亿肉票在手肯定不会缺吃少穿，反而老百姓肯定是吃不上，喝不上，穿不上，恐怕到了那时候连孩子都没得吃，这时候如果阿富汗塔利班来叫嚣收留你们的姐妹，你们怎么想？
 
-现在已经不是站在边上看的时侯，加拿大的每个人只要能到那里就应该到那里去。去的人越多，参与的人越多，就会有更多的人看到，人们才有权力，而不是那个阴谋邪教集团。
+我还想问问你们这些发表此等言论的大陆网民，就凭你们吃饭是否加个鸡腿都得想半天，还有一堆车贷房贷等着还的主，能养得起你收留的这些乌克兰美女么？你们养不起她们是不是也把她们像徐州丰县锁链女一样锁起来当性奴呢？在发表此类评论的时候有没有想过你们也是女人生的，你们也有兄弟姐妹。人家在遭受战争之苦的时候你若无法雪中送炭，至少是不是应该献上一份应该的关怀和同情呢！你们知不知道如果台湾战事一起你们可能还不如乌克兰民众呢！至少乌克兰民众还有枪和吃的，你们这些人呢？
 
-你看看欧洲，比尔德伯格正在开会，警察在下面守着这个团体，这就是克劳斯-施瓦布和他的达沃斯团体，他的比尔德伯格团体。这些警察正在破坏他们自己的未来，  他们在那里，逐步逼近并攻击卡车司机的男人、女人和孩子。
-
-这些人是卑鄙的、可怕的人，他们是人类的耻辱。、
-
-你无法编造我们所看到的邪恶：强制打疫苗，股票价格暴跌，左派各种团体，整个名单上面的人都是允许在加拿大示威的，但其他任何人都会被逮捕。
-
-渥太华的警察和州警察，他们都可以免于注射疫苗。 然而卡车司机却被逼着去打疫苗，所以他们进了监狱，被打了一顿。想象一下，作为这些警察中的一员，当你们没有必要这样做的时候，你们却还要这样做 ？！
-
-大卫，请继续介绍我们现在所见证的这一历史性时刻。好吧，我们现在所看到的是一直以来隐藏在背景中的邪恶。就像我说的，如果没有必要，他们不想让你看到他们的真实面目。  但现在，由于卡车司机们所做的一切，他们不得不展现自己的邪恶。
-
-我们现在面临的是做出决策的时候。我们是要屈服，还是要一个可以持续生存的未来；你在屏幕上看到的来自渥太华的暴力将会是常态，还是我们要在沙子上画一条线跟邪恶划清界限。因为我已经说过很多次了，即将发生的邪恶，他们正在计划的邪恶，比你现在能想象的任何事情都要糟糕和极端。
-
-当人们说 ：“但是我这样做的后果是什么？”我可以告诉你，不去反抗的后果比现在站起来去反抗这件事本身要严重的多。我们必须看着我们孩子的眼睛，我们孙子的眼睛，然后我们必须每天早上照照镜子，如果我们对这些邪恶视而不见，或者站在一边不参与，我们就无法直视自己和孩子们的目光；我们越是等待，他们就会积累越多的权力和控制，使反抗越来越难。
-
-我们已经离开这种精神太久了。我们现在的情况是，我们必须面对他们，我们正在看着法西斯主义者的眼睛，他们就在加拿大，你还需要什么证据？
-
-邪教通过像世界经济论坛这样的东西，在运行一个全球议程，你现在在加拿大看到的就是他们下达的命令。  由于卡车司机的所作所为，加拿大政府中的法西斯分子必须对他们所面临的挑战和一个正义的榜样给邪恶带来的威胁作出反应。
-
-因此，由于这个原因，这就是我们在加拿大看到的，你将在世界各地看到的。我现播放一段新闻：
-
-新闻: 肖恩-汉尼提批判特鲁多—-
-
-让我们来看看今晚来自我们北方邻国的其他突发新闻。在短短几周内，加拿大所谓的总理懦弱，专制的独裁者贾斯汀-特鲁多现在单枪匹马地颠覆了公民自由，以压制一直以来的和平抗议，一个他不同意的真实的抗议。
-
-特鲁多曾经赞扬过暴力的BLM组织，那个组织当时在说，我们想要什么？我想要死掉的警察？我们什么时候想要我们现在想要？特鲁多甚至在2020年与他们一起下跪声援黑命贵。
-
-但现在他把自由车队中爱好和平的卡车司机当成了恐怖分子，从最实际的角度，他冻结了他们的银行账户，威胁要扣押他们的设备，扣押他们的生计，暂停吊销他们的执照，把他们扔进监狱，并威胁要罚款10万美元，而这是他们没有能力支付的。
-
-现在听听贾斯汀-特鲁多的司法部长的说法，他现在正威胁边境两边的人，如果他们正在向他所说的什么亲川普运动捐款，你们认为这是川普的错？看看吧。你刚刚把可能为此抗议捐款的人与在资助恐怖分子的人相提并论。
-
-我只是想在这里说清楚，先生！  这真的很重要。很多人说，我只是不喜欢你的疫苗授权，我现在捐赠给这个行动变成了非法的。
-
-我应该担心银行会冻结我的账户吗？  你对此的回答是什么？
-
-好吧，我想如果你是亲特川普运动的成员，为这种事情捐赠了数十万美元和数百万美元，那么你应该担心了。
-
-当然，这个疯子只是在听从加拿大小独裁者的命令。而那个小独裁者还同时声称他把抗议者当成恐怖分子是为了他们好，以保护他们不受新冠病毒的侵害。
-
-在现实中，特鲁多就是不能面对任何异议。  今天，他居然指责一位犹太议员支持纳粹，因为她支持了自由车队，这是多么的荒谬。
-
-犹太人议员说：“看看吧，议长先生，总理是什么时候迷失方向的？什么时候发生的？”特鲁多说：“保守党成员可以和挥舞纳粹标志的人站在一起。他们可以和挥舞的人站在一起。 ”
-
-新闻结束—-。
-
-这就是我们刚刚谈到的一个事实，这个政府它变得如此的糟糕。你将不得不选择一个阵营，而我们现在正处于这个时刻。
-
-因为几分钟前我用了一个词，一辆逃跑用车。而当人们的脑海中有一辆逃跑用的车，人们会压倒性地选择逃跑和逃离责任。
-
-【接下篇：特鲁多中共傀儡已经无需掩盖的邪恶镇压（四）】
-
-来源：【banned.video】[David Icke: Get Off Your Ass and Peacefully Resist Trudeau’s Implementation of Martial Law](https://banned.video/watch?id=621020761d2f041263777932)
-
-* * *
-
-审核：阿伯塔
-校对：小东
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-5.jpeg)
+最后再说一句，台海战事一触即发，到那个时候，ccp不会管老百姓的死活。到那个时候发表此类言论的网民们，恐怕不但没有机会收留乌克兰美女，连你们能不能活下来都是个问题。还是那句话。多一点同理心，给海外同胞留条活路，也给自己留条活路吧！ 同胞们！只有干掉ccp才能让所有中国人得救，让所有中国人有一个正确的信仰和价值观，才能杜绝这种可悲，可气，可恨的是事情发生。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
