--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,17 +1,15 @@
 ---
-title: 入侵乌克兰后的第一个周末 世界多地示威声援“停止战争”
+title: 俄罗斯爆发大规模反战示威 3000多人被拘捕
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074707/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074727/)
 
 撰稿：东京樱花团/向海
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-56.jpg)[图片来源](https://www.sponichi.co.jp/society/news/2022/02/27/jpeg/20220227s00042000215000p_view.jpg)
-俄罗斯入侵乌克兰后的第一个周末，欧洲、美国和日本相继举行抗议活动，民众愤怒。带着蓝色和黄色乌克兰国旗的参加者涌入每个国家的街道，高举指责俄罗斯“停止战争”“声援乌克兰”的标语。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片4-8.jpg)[图片来源](https://jp.reuters.com/article/ukraine-crisis-russia-protests-idJPKBN2KT3FQ)
+据莫斯科法新社时事报道，俄罗斯人权组织OVD Info 26日表示，在普京24日开始入侵乌克兰后的三天内，至少有3052名俄罗斯人因反战活动被当局拘留。
 
-26日，英国伦敦政府办公区挤满了示威者。 在法国，2万多人参加了在巴黎等地的示威游行。 在奥地利首都维也纳，市民们高举乌克兰国旗，高呼“停止入侵”和“停止轰炸”。
+OVD 信息，根据推特上的一篇帖子，仅26日就有467人在34个城市被拘留。
 
-信息来源：
-
-[**世界が抗議「戦争やめろ」　ウクライナ侵攻後初の週末**](https://news.yahoo.co.jp/articles/a784f00d479af2ad3e236633ad45def835e8b491)
+信息来源：[反戦活動で3000人超拘束　ロシア（時事通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/8991fd0ff0aa5d50112f6bdc82eafc7e2bf52042)
 
 *校对：东京樱花团/喜马拉雅的微尘*
 *发布：东京樱花团/tdownc2p*
