--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,25 +1,25 @@
 ---
-title: 疫苗倡导者却不支持全面疫苗计划，尤其是孩童
+title: 中国数位历史学家要求普京停战的联合声明被中共“秒删”
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2074695/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074712/)
 
-[撰稿日期]：2022.02.26
-[署名]：台湾宝岛农场dobi
-[新闻连接]：《https://www.epochtimes.com/b5/22/2/26/n13606046.htm》《https://gnews.org/zh-hant/1854776/》
-[正文]：
-据外媒报导，美多位前线医生、医学专家和疫苗受害者在1月24日相关会议上，都针对中共病毒疫苗的安全性，也就是是否应强制人民打疫苗以及孩童是否需要打疫苗等问题陆续表态和高度质疑。
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-20.jpg)[图片来源](https://mobile.twitter.com/wombie_w)
+26日，针对俄罗斯军事入侵乌克兰事件，中国数位历史学家联名发表了一份联合声明，呼吁俄罗斯政府和普京总统停止战争。
 
-亚伦·赫里亚蒂（Aaron Kheriaty）说：“相关公共卫生部门虽不想承认政策的失败，但事实是大规模接种疫苗并没有抑制病毒传播，甚至Omicron变种出现后，美感染人数更高达50-70%。”
+这份题为“俄罗斯入侵乌克兰与我们的态度”的声明是由南京大学孙江教授等五位历史学家联名在中国SNS上发出的。声明写道，我们强烈反对俄罗斯对乌克兰发动的战争，强烈谴责以武力入侵一个主权国家的行为，无论俄罗斯出于何种原因，其行为都是对现有国际安全体系的颠覆；我们坚决支持乌克兰人民的自卫行动，并强烈呼吁俄罗斯政府和普京总统停止战争，通过谈判解决冲突。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片3-21.png)
+该声明在社交媒体上疯传，但原文已无法查看，据信已被中共删除。
 
-曾是疫苗计划推手的保罗·亚历山大（Paul Alexander）博士说：“我是疫苗计划的倡导者，但我并不支持全面的疫苗计划，尤其是千万不要让孩童接种疫苗。”亚历山大更进一步补充说：“我们目前已汇整了150条证据支持我现在的说法。”
+25日，联合国安理会就美国等其他国家提交的要求俄罗斯军队立即撤出乌克兰的决议进行表决，中共国投了弃权票。
 
-赫里亚蒂说：其实在整个疫苗政策中，我们的公共卫生机构明显漠视了《纽伦堡法典（Nuremberg Code）》、《赫尔辛基宣言（Declaration of Helsinki）》、《贝尔蒙特报告（Belmont Report）》规范应保障受试者的自由和知情权的重要原则。
+秒删反战言论，相信中共的司马昭之心已世人皆知了！在世界各地人民都在为乌克兰人呐喊要求停战之时，中共国又一次无情地封上了同胞的嘴，活生生地把14亿同胞绑上死亡战车。
 
-承续赫里亚蒂的说法、对所有的疫苗接种者都可以说等同参与了一场国际性、骇人的人体实验，例如2020年，FDA利用紧急用户许可证（EUA)，在短短108天内就批准了疫苗的授权，尽管当时引发相关知情人士的强烈质疑，但疫苗仍强行上市、施打，因此接种者都是疫苗受试者，不仅研究伦理中知的权利被漠视，甚至可以说刻意被遮蔽了。
+信息源:[中国歴史学者ら 戦争停止求める声明を発表](https://news.yahoo.co.jp/articles/fc5c3bbb58b29e06549e7336386ba911259eef38)
 
-相信这一疫苗悲剧应只是冰山的一角而已，冰山下面还隐藏了尚未揭露、爆发的骇人内幕。然而，诚如以色列著名的免疫学家Ehud Qimron所言；“真相固然可能暂时不为公众所知，但数据洪流是无法阻挡的。最终，如果政府没有做好应急，愤怒的洪流必将颠覆社会。”且爆料革命所言：所有勇于揭露或试图力挽疫苗灾难狂澜、有良知的科学家、医生、学者或是疫苗受害者等都是值得肯定的，因为邪恶的疫苗计划必须愈快摧毁愈好，才能使这辆失控的列车停下来，避免更大的人类灾难。
-[新闻连接]：《https://www.epochtimes.com/b5/22/2/26/n13606046.htm》《https://gnews.org/zh-hant/1854776/》
-
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
