--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,24 +1,38 @@
 ---
-title: 不要再调侃乌克兰战争，给海外华人留条活路吧！
+title: 美欧达成协议将部分俄罗斯银行踢出SWIFT，并额外实施制裁
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2074682/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2074711/)
 
-撰稿人：Microkevin
+翻译:宫米叶
 
-昨日，中国网民们在网上发表的调侃乌克兰战争和号称“收留乌克兰美女，年轻漂亮的优先”等歧视乌克兰女性和物化乌克兰女性的言论被乌克兰媒体翻译成当地文字传播至全国，这让在乌克兰华人和留学生深陷入排华绝境，有网文评论称：一乌克兰人拿着枪对着一华人发难，问他是不是中国人。该华人回答，不是。乌克兰人遂持枪离开。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16459624911.png)图片来自网络
-关于此等言论我想谈点自己的看法：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2591-edited-2.png)news.yahoo.co.jp
 
-首先，我无法确认乌克兰人持枪发难该华人是否和此言论有直接因果关系。不过这种言论至少给东欧排华事件的发生加了稻草。七哥说过未来排华最严重的地区之一就是东欧。我想说的是这些人不代表我们所有的中国人。大陆很多明智的网民对此类言论的也进行了抨击。我相信，很多不明真相的中国人只是被“驭民五术”蒙蔽了双眼，无法看清事物的因果关系。而我们新中国联邦人此时更应该加大宣传ccp邪恶洗脑统治，同时新中国联邦人的形象和行为发挥正面影响，减小排华事件发生的几率，保护所有的海内外中国人。让西方人理解我们的部分同胞只是因被洗脑而无法辨别真相，他们不能代表所有的中国人。
+美国、英国、欧洲和加拿大26日同意将俄罗斯部分银行排除在国际银行间汇款和结算系统SWIFT(环球银行金融电信协会)之外，作为对俄罗斯继续入侵乌克兰的新制裁措施的一部分。
 
-我认为，我们中国人从心底是有善良的，是有正义，有情怀的。这就是为什么七哥带领的爆料革命和新中国联邦会有这么多海内外中国人誓死跟随。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16459625031.png)图片来自网络
-第二，我想对这些发此等言论调侃战争和对女性充满蔑视的言论的无知愚蠢的网民们说一句：徐州丰县锁链女的事情还没有落幕，你们就叫嚷着收留乌克兰美女，还得年轻漂亮的优先。还知道找年轻漂亮的看来你们也不傻，咱能不能有点同理心，设身处地的想想如果你们和你们的姐妹处于战争中，或者说ccp攻打台湾之后，大陆一定会被西方联合制裁，那时候ccp有14亿肉票在手肯定不会缺吃少穿，反而老百姓肯定是吃不上，喝不上，穿不上，恐怕到了那时候连孩子都没得吃，这时候如果阿富汗塔利班来叫嚣收留你们的姐妹，你们怎么想？
+联合声明由欧盟委员会、法国、德国、义大利、英国、加拿大和美国的首脑签署。制裁还包括俄罗斯央行有关外汇储备的限制，将在数日内执行。
 
-我还想问问你们这些发表此等言论的大陆网民，就凭你们吃饭是否加个鸡腿都得想半天，还有一堆车贷房贷等着还的主，能养得起你收留的这些乌克兰美女么？你们养不起她们是不是也把她们像徐州丰县锁链女一样锁起来当性奴呢？在发表此类评论的时候有没有想过你们也是女人生的，你们也有兄弟姐妹。人家在遭受战争之苦的时候你若无法雪中送炭，至少是不是应该献上一份应该的关怀和同情呢！你们知不知道如果台湾战事一起你们可能还不如乌克兰民众呢！至少乌克兰民众还有枪和吃的，你们这些人呢？
+声明说：“我们要让俄罗斯(为入侵乌克兰)负责。我们将共同努力，使这场战争对普京(总统)而言以战略性失败告终“，”除了我们今天宣布的措施外，我们还准备采取进一步措施，让俄罗斯承担攻击乌克兰的责任。“
 
-最后再说一句，台海战事一触即发，到那个时候，ccp不会管老百姓的死活。到那个时候发表此类言论的网民们，恐怕不但没有机会收留乌克兰美女，连你们能不能活下来都是个问题。还是那句话。多一点同理心，给海外同胞留条活路，也给自己留条活路吧！ 同胞们！只有干掉ccp才能让所有中国人得救，让所有中国人有一个正确的信仰和价值观，才能杜绝这种可悲，可气，可恨的是事情发生。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+欧盟委员会主席冯德莱恩说：“在俄罗斯军队攻击基辅和其他乌克兰城市的时，我们决定进一步让俄罗斯付出巨额的代价，那就是将俄罗斯孤立于国际金融体系和我们的经济之外。“
+
+她解释说，被踢出SWIFT的俄罗斯银行将无法进行全球大部分金融交易，这将有效阻止俄罗斯进出口。“这些银行将与国际金融体系分离，在全球开展业务的能力将受到打击。”
+
+具体俄罗斯哪些银行将被排除在SWIFT之外，目前还不明确。
+
+冯德莱恩表示，将阻止俄罗斯使用军费，冻结中央银行的交易并使其资产无法兑现。
+
+此外，“禁止俄罗斯新兴资本在我们的市场上使用金融资产”。
+
+
+
+来源：【news.yahoo.co.jp】[ロシア一部銀行のＳＷＩＦＴ排除で合意、米欧が追加制裁](https://news.yahoo.co.jp/articles/0e5f3f6cdd1eebcc37ac13ee1e58b8efd4182570)
+
+* * *
+
+审核: BryanW
+校对: 天天
+发布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-5.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
