--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,31 +1,25 @@
 ---
-title: 国人身陷乌克兰危局 中共却只顾作秀洗脑
+title: 疫苗倡导者却不支持全面疫苗计划，尤其是孩童
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074602/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2074695/)
 
-撰稿：东京樱花团/上善若水
+[撰稿日期]：2022.02.26
+[署名]：台湾宝岛农场dobi
+[新闻连接]：《https://www.epochtimes.com/b5/22/2/26/n13606046.htm》《https://gnews.org/zh-hant/1854776/》
+[正文]：
+据外媒报导，美多位前线医生、医学专家和疫苗受害者在1月24日相关会议上，都针对中共病毒疫苗的安全性，也就是是否应强制人民打疫苗以及孩童是否需要打疫苗等问题陆续表态和高度质疑。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/国人身陷乌克兰危局-中共却只顾作秀洗脑.png)
+亚伦·赫里亚蒂（Aaron Kheriaty）说：“相关公共卫生部门虽不想承认政策的失败，但事实是大规模接种疫苗并没有抑制病毒传播，甚至Omicron变种出现后，美感染人数更高达50-70%。”
 
-从“在明显处贴上中共国旗”到“不要随意亮明身份及展示具有识别性的标识”，俄罗斯攻打乌克兰以来，中共驻乌克兰大使馆先后发出了自相矛盾的两则安全提醒。
+曾是疫苗计划推手的保罗·亚历山大（Paul Alexander）博士说：“我是疫苗计划的倡导者，但我并不支持全面的疫苗计划，尤其是千万不要让孩童接种疫苗。”亚历山大更进一步补充说：“我们目前已汇整了150条证据支持我现在的说法。”
 
-中共国驻乌克兰大使馆2月26日凌晨在微信公众号上发布通知表示：”最近一段时间，随着乌俄战事不断升级，乌社会上极端行为增加，出言不逊甚至持枪射击，给我在乌中国公民造成安全风险。”
+赫里亚蒂说：其实在整个疫苗政策中，我们的公共卫生机构明显漠视了《纽伦堡法典（Nuremberg Code）》、《赫尔辛基宣言（Declaration of Helsinki）》、《贝尔蒙特报告（Belmont Report）》规范应保障受试者的自由和知情权的重要原则。
 
-该使馆还提醒道：尽量不要外出活动，远离军事设施、军队人员和持枪者，以减少安全风险；不要对正在发生的交火及人员进行拍摄，也不得在未征得对方同意情况下拍照；不要随意亮明身份及展示具有识别性的标识。
+承续赫里亚蒂的说法、对所有的疫苗接种者都可以说等同参与了一场国际性、骇人的人体实验，例如2020年，FDA利用紧急用户许可证（EUA)，在短短108天内就批准了疫苗的授权，尽管当时引发相关知情人士的强烈质疑，但疫苗仍强行上市、施打，因此接种者都是疫苗受试者，不仅研究伦理中知的权利被漠视，甚至可以说刻意被遮蔽了。
 
-其中”不要随意亮明身份”这条提醒尤其引人关注，因为就在俄罗斯开始攻打乌克兰的周四当天，中共驻乌克兰大使馆发布的提醒还包括：长途旅行时，可在车身明显处贴上中共国旗。
+相信这一疫苗悲剧应只是冰山的一角而已，冰山下面还隐藏了尚未揭露、爆发的骇人内幕。然而，诚如以色列著名的免疫学家Ehud Qimron所言；“真相固然可能暂时不为公众所知，但数据洪流是无法阻挡的。最终，如果政府没有做好应急，愤怒的洪流必将颠覆社会。”且爆料革命所言：所有勇于揭露或试图力挽疫苗灾难狂澜、有良知的科学家、医生、学者或是疫苗受害者等都是值得肯定的，因为邪恶的疫苗计划必须愈快摧毁愈好，才能使这辆失控的列车停下来，避免更大的人类灾难。
+[新闻连接]：《https://www.epochtimes.com/b5/22/2/26/n13606046.htm》《https://gnews.org/zh-hant/1854776/》
 
-就在中共官方大力宣传”中共之强大和国旗之重要”的同时，已有不少网民表示：“这种宣传非常不妥，在复杂的战地环境里亮身份，是非常不理智的行为。”也有人直接问道：”炸弹真的能识别国旗吗”。还有微博用户嘲笑道：“笑死了，就为了宣传所谓的民族自豪感，弃民众安全于不顾。大张旗鼓的告诉别人我们支持俄罗斯你们可以打我了。”
-
-现在，中共国驻乌克兰大使馆也改口提醒：“不要随意亮明身份及展示具有识别性的标识”。有网民表示不解：“昨天还是前天热搜国旗脱销，现在又不让亮明身份我国驻乌克兰使馆这波操作不太严谨啊”。还有推特用户释：“两个建议都是对的：前者对国内；后者对乌克兰华人。”
-
-信息来源：
-
-[中国驻乌克兰大使馆连忙改口为哪般？](https://www.dw.com/zh/%E4%B8%AD%E5%9B%BD%E9%A9%BB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%A4%A7%E4%BD%BF%E9%A6%86%E8%BF%9E%E5%BF%99%E6%94%B9%E5%8F%A3%E4%B8%BA%E5%93%AA%E8%88%AC/a-60929373)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
