--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,29 +1,42 @@
 ---
-title: 俄乌激战基辅 德国军援抗俄
+title: 乌克兰首都传激烈枪战俄罗斯否决安理会决议
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074559/)
+`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074641/)
 
-撰稿：东京樱花团/上善若水
+【玫瑰看新闻】每日快讯
+![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰首都传激烈枪战俄罗斯否决安理会决议.jpg)
+俄罗斯与乌克兰军队周六清晨在基辅多区爆发武装冲突，乌克兰军方称击落一架俄罗斯军机，乌总统呼吁保卫基辅，“不能失去首都”。同时，俄罗斯否决了联合国安理会一项谴责其行为的决议.
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/俄乌激战基辅-德国军援抗俄.png)[图片来源](https://gnews.org/wp-admin/post-new.php#imgrc=XcjphKyeUSJI8M)
+乌克兰首都基辅周六，2月26日，爆发多起战斗，且在一夜之间加剧。根据通讯社报导，基辅部分地区传出巨大炮声和枪声。
 
-俄罗斯进攻乌克兰，战事激化。基辅多地持续传出爆炸枪响声，2月27日凌晨，郊区一座储油槽传出巨大爆炸，火光冲天。同时，德国宣布将向乌运输武器，并与其他西方国家宣布最新制裁：将部分俄国银行踢出SWIFT。
+联合国安理会在纽约时间周五，2月25日，未能通过一项谴责俄罗斯入侵乌克兰并要求其无条件撤军的决议草案。作为安理会五个常任理事国之一的俄罗斯使用了否决权来阻止该决议。
 
-俄罗斯入侵乌克兰第四天，乌克兰卫生部长称，已有198名乌克兰人丧生，联合国估计过去48小时内有超过15万人逃离乌克兰。
+中共国、阿拉伯联合酋长国和印度则美国起草的案文投了弃权票。其余11个安理会成员投了赞成票。在投票前，美国和其他支持者也预期该决议不会通过，但认为这将凸显目前俄罗斯在国际上被孤立的状态。
 
-俄军兵临城下乌克兰首都基辅，冲突持续激化。26日入夜后，首都仍可以听见空袭警报不断回荡；不时可以听见枪支与爆炸声响。根据报导，基辅市内仍有少量俄罗斯军队。不过英国与美国表示，截至周六下午，大部分俄军仍在距离基辅市中心30公里外的地方。为
+[【援引连结】](https://www.dw.com/zh/%E7%83%8F%E5%85%8B%E8%98%AD%E9%A6%96%E9%83%BD%E5%82%B3%E6%BF%80%E7%83%88%E6%A7%8D%E6%88%B0-%E4%BF%84%E7%BE%85%E6%96%AF%E5%90%A6%E6%B1%BA%E5%AE%89%E7%90%86%E6%9C%83%E6%B1%BA%E8%AD%B0/a-60925415)
 
-基辅情况持续升温的同时，德国总理肖尔兹表示，德国将军援乌克兰1,000枚反坦克武器和500枚“刺针”地对空导弹。
 
-26日，美国、欧盟、英国、加拿大发表联合声明，表示已达成协议并承诺将切断多家俄罗斯银行与国际支付系统SWIFT的业务连结。同时，同意将对俄罗斯中央银行的国际储备进行限制。
 
-信息来源：
+**推出问题，敲出真相，爆料在路上！**
 
-[基辅战事持续紧张 德国军援乌克兰抗俄](https://www.dw.com/zh/%E5%9F%BA%E8%BC%94%E6%88%B0%E4%BA%8B%E6%8C%81%E7%BA%8C%E7%B7%8A%E5%BC%B5-%E5%BE%B7%E5%9C%8B%E8%BB%8D%E6%8F%B4%E7%83%8F%E5%85%8B%E8%98%AD%E6%8A%97%E4%BF%84/a-60931907)
+**请关注和订阅我们的以下账号：**
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
+**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
+
+**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
+
+**玫瑰看新闻YOUTUBE账号**：
+
+**玫瑰看新闻**
+
+**黑森林的故事**
+
+**ROSE NEWS**
+
+**【玫瑰看新闻】推特账号**：
+
+**ROSE NEWS (@ROSENEWS4)A**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
