--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,42 +1,25 @@
 ---
-title: 美国对普京等俄罗斯官员实施制裁 并将制裁俄罗斯直接投资基金
+title: 日本民众踊跃募捐支持乌克兰 反对俄罗斯军事侵略
 ---
-`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074378/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074517/)
 
-【玫瑰看新闻】每日快讯
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image005-2.png)
-白宫新闻发言人普萨基**25**日在推特发文称，财政部还将对国有的俄罗斯直接投资基金**RDIF**）实施** “**全面封锁制裁**”**。
+撰稿：东京樱花团/风翼
 
-路透社**2**月**25**日消息，** **美国财政部表示，美国在周五对俄罗斯总统普京、外长拉夫罗夫、国防部长绍伊和武装力量总参谋长瓦列里**·**格拉西莫夫实施制裁，原因是俄罗斯入侵乌克兰。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/日本民众踊跃募捐支持乌克兰-反对俄罗斯军事侵略.png)
 
-**美国财政部长耶伦在声明中说：**”**我们与我们的国际盟友和合作伙伴团结一致，确保俄罗斯为其进一步入侵乌克兰付出沉重的经济和外交代价。**”
+2020年2月25日，乌克兰驻日大使馆在推特上公布了募款账号，日本民纷纷踊跃捐助。
 
-**白宫发言人周五在一条推特上说，财政部还将对国有的俄罗斯直接投资基金**(RDIF)**实施** “**全面封锁制裁**”**。
+一天之内，有上千人留言并晒出了汇款证明，在汇款的日本人当中，有一次性汇款十万日元的，也有表示已将当天的打零工的工资3000日币全部捐出来的，还有只有1000日币的大学生捐款支持的。
 
-[【援引连结】](https://cn.reuters.com/article/us-teasury-department-putin-sanction-022-idCNKBS2KV03S)
+日本民众有留言表示，“不管是什么原因，军事侵略都是一种不应该被容忍的愚蠢行为。我们祝愿乌克兰人民迅速恢复正常。并捐款支持”。
 
+更有群众表示希望本国的自卫队员根据本人的意愿去帮助乌克兰人民。
 
+战争是愚蠢和残酷的，世界爱好和平的民众正用各种方式抗议俄罗斯的侵略战争行为。而深受战争之害的日本民众的反应，更能体现出人们希望和平，尊重生命的美好愿望。
 
-**推出问题，敲出真相，爆料在路上！**
-
-**请关注和订阅我们的以下账号：**
-
-**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
-
-**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
-
-**玫瑰看新闻YOUTUBE账号**：
-
-**玫瑰看新闻**
-
-**黑森林的故事**
-
-**ROSE NEWS**
-
-**【玫瑰看新闻】推特账号**：
-
-**ROSE NEWS (@ROSENEWS4)A**
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
