--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,17 +1,46 @@
 ---
-title: 俄罗斯军队已包围乌克兰的赫尔松和别尔江斯克两个城市
+title: 乌克兰总统誓言留守 俄罗斯军队向基辅挺进
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074738/)
+`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074774/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片5-9.png)（图片源自本文链接）
-2月27日法新社消息：俄罗斯国防部伊戈尔-科纳申科夫报道官27日, 通过媒体发表了一份声明表示，其军队在过去24小时内已 “完全包围 “了乌克兰南部城市赫尔松和东南部城市别尔江斯克。
+【玫瑰看新闻】每日快讯
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image013.png)2022年2月23日，乌克兰基辅，泽连斯基出席记者会
+路透社2月25日报导 ，乌克兰总统泽连斯基周五发誓要留在首都基辅。他的部队正在与向首都推进的俄罗斯入侵者作战，这是第二次世界大战以来对一个欧洲国家的最大规模攻击。
 
-信息来源：[ウクライナ2都市「完全包囲」 ロシア国防省（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/782e3f3af99d3414f130a3f60d1f2450d3daaac3)
+在总统普京宣战后，俄罗斯于周四发动了陆上、空中和海上的入侵。随着主要城市响起爆炸声和枪声，估计有10万人逃离。据报导，已有数十人死亡。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+美国和乌克兰官员说，俄罗斯的目的是占领基辅并推翻被普京视为美国傀儡的现政府。俄军在沿着从白俄罗斯到基辅的最短路线推进时，夺取了基辅北部的切尔诺贝利核电站。
+
+有关多条战线激烈交战的消息纷至沓来，联合国安理会周五将对一项决议草案进行表决，草案谴责俄罗斯入侵并要求立即撤军。
+
+全世界眼睁睁地看着俄罗斯侵略乌克兰，若继续软弱下去，整个欧洲的沦陷是迟早的事。
+
+
+
+[【援引连结】](https://cn.reuters.com/article/ukraine-zelenskiy-vow-stay-0225-idCNKBS2KU0D1)
+
+
+
+**推出问题，敲出真相，爆料在路上！**
+
+**请关注和订阅我们的以下账号：**
+
+**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
+
+**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
+
+**玫瑰看新闻YOUTUBE账号**：
+
+**玫瑰看新闻**
+
+**黑森林的故事**
+
+**ROSE NEWS**
+
+**【玫瑰看新闻】推特账号**：
+
+**ROSE NEWS (@ROSENEWS4)A**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
