--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,47 +1,31 @@
 ---
-title: 中共病毒实验室起源论被福奇掩盖
+title: 中共国没有资格举办奥运会
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2074049/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2074221/)
 
-**简评：**
+**简评****：**
 
-为什么致命的冠状病毒会迅速、突然地从中共国出现呢？来自美国国立卫生院的内部资讯显示：病毒初期，有人警告该机构负责人福奇，病毒可能来自中共政府控制的武汉病毒研究所。美国国家过敏和传染病研究所通过生态联盟间接资助了武汉实验室的功能增强实验，使得一些COVID病毒的特征看起来可能经过基因改造。福奇立即组织了一次多人参加的秘密电话会议，对武汉实验室泄露的怀疑被压制，福奇等人担心公开披露中共国的参与会对中共国的科学造成不必要的伤害。参加会议的科学家达成共识：1. 不写论文；2. 如果一定要写，不提实验室起源。但是有些免疫学家并没有被说服。他们无法相信在自然情况下会出现基因序列极不寻常的变化。
+对全世界的观众和运动员来说，奥林匹克是一种体育精神，是友谊、竞争和民族自豪感的体现。几年前，国际奥委会选择世界上最后的共产主义国家之一的中共国作为冬奥会的主办国。中共国是一个奴隶制国家，对民众持续犯有种族灭绝罪，并且在全球大瘟疫和几百万人死亡的病毒问题上，对全世界撒谎。新推出的所谓的《竞争法案》为联合国绿色气候基金提供数十亿美元，但是没有对中共国提出任何制裁和惩罚，也没有为调查中共掩盖COVID-19来源的真相提供资金。
 
-福奇等人提出病毒可能来源于武汉海鲜市场，但是中共当局关闭并彻底清理了海鲜市场，关键证据被破坏，或者隐藏于国际审查之外。仅仅4天后，五位参加过电话会议的多国研究人员撰写了初步研究结果：COVID不是实验室制造或故意操纵的病毒。但是越來越多的人认为，COVID-19起源于武汉实验室。一个多月后，两位与福奇密切联系的那份报告的作者，获得了福奇机构900万美金的科研资助。一个月之后，曾经资助武汉实验室进行病毒功能增强实验的生态健康联盟的彼特·达萨克，从福奇机构获得了750万美金的资助。
+国家紧急状态应对COVID应该不迟于今年结束。应该追究中共国在大流行上撒谎，以及侵犯人权的责任。中共政府使用麦克风和摄像头长期监视美国人，并任意逮捕和拘留美国人。中共政府收集世界级运动员的DNA样本和其他信息。有这样人权纪录的中共国不应该获得举办奥运会的殊荣。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/022606.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/022608.jpg)
 
-[GTV视频链接](https://gtv.org/video/id=61f5fe25d90bdd2085a264fc)
+[GETTR视频链接](https://gettr.com/post/psm3ckcc9a)
 
-**视频字幕：**
+[GTV视频链接](https://gtv.org/video/id=61ffcd34585ecc15d73e1274)
 
-为什么这一致命的病毒会如此迅速、如此突然地从中国的中部省份出现呢？
+**视频字幕****：**
 
-福克斯新闻获悉，来自美国国立卫生院的内部通讯显示：在危机初期，有人警告该机构传染病研究所负责人福奇，病毒可能来自中共国政府控制的实验室—- 武汉病毒研究所。1月27日福奇被告知，美国国家过敏和传染病研究所通过生态联盟间接资助了武汉实验室。生态联盟是一家总部在美国的非盈利科学组织，从事与新型冠状病毒有关的工作。1月31日，著名的病毒学家克里斯蒂安·安德森博士私下里告诉福奇，他与同事讨论过，一些COVID病毒的特征看起来可能经过工程改造，“基因序列与进化理论所期望的结果不一致”，意思是病毒可能经过基因改造。
+我今天站出来谈一谈，许多美国人都期待的每四年举办一次的冬季奥运会。几天后，全世界数百万人将收看自己国家参与的在中共国北京举行的第24届冬季奥运会。对全世界的观众和运动员来说，奥林匹克精神是一种体育精神、友谊、竞争和民族自豪感的体现。遗憾的是，几年前，国际奥委会选择的主办国是世界上最后的共产主义国家之一。（该国）在血汗工厂奴役工人、强迫少数民族妇女绝育、惩戒那些公开反对独裁的人、监禁和谋杀少数民族；在杀死几百万人口，并永久改变我们的生活方式的全球大瘟疫上对全世界撒谎。
 
-福奇立即作出反应，组织了一次多人参加的电话会议。他告诉国立卫生院副主任休·奥金客劳斯情况紧急，“我们很有必要一早通个电话，保持手机开机状态。好好读读我现在要发给你的这篇论文和我的邮件，你今天会有必须完成的任务”。当天晚些时候，奥金客劳斯证实，一项由NIAID资助的新型冠状病毒研究可能没有经过适当的生物安全审查和监督。他告诉福奇，他们的工作人员“正在确定我们是否与国外的这一项目有任何联系”。
+几乎每一种美国人认为理所当然的自由，在中共治下的中国都不存在。中共政府对自己的人民犯下无数侵犯人权的罪行，包括对维吾尔族穆斯林犯下的种族灭绝罪。直到今天，他们已阻止世界各地了解更多关于中共病毒起源的问题，这对我们的国家安全和公共健康非常重要。
 
-数小时后，福奇与全世界十几位病毒学家召开了电话会议。此次匆匆安排的会议，其会议记录被福克斯新闻获得，记录显示对武汉实验室泄露的怀疑被压制，因为他们认为公开披露中共国的参与会“极有可能损害科学和国际和谐，对此类指控的进一步辩论会不必要地让顶尖研究人员在工作时分心，并对整个科学，特别是对中共国的科学造成不必要的伤害”。
+同時，大多数人抛弃了数月的两党工作，决定推动一项不会通过的参议院决议，也不会形成法律的党派法案。此所谓的《竞争法案》中包括几个与中共国无关的条款。此法案为联合国绿色气候基金提供数十亿美元，它提到“争端”这个词比“中国”这个词还多。这一法案没有对中共国提出任何制裁和惩罚，也没有为调查中共掩盖COVID-19来源的真相提供资金。在1519页，这一法案允许总统使用紧急权力，直到总统宣布COVID-19国家紧急状态结束或直至2025年9月，正好是下一个总统大选结束的时候。
 
-但是有些免疫学家并没有被说服。麦克尔·法赞博士说，“我认为这里有问题，你怎么能够把这一切联系在一起？如何相信这一系列的巧合？你了解武汉实验室吗？你认为实验室事故和自然产生的可能性是什么？我认为是70:30，或60:40”。另外一个参会的科学家，杜兰大学的罗伯特·加里博士更加笃定，“我真的无法想像在自然情况下可能出现这样的情况，从蝙蝠病毒或相似的病毒变成新冠病毒，同时插入刚好4个胺基酸、12个核苷酸，这些都必须完全同时发生，才会获得这样的功能，并且同时不改变在S2蛋白上的其他胺基酸。 我搞不明白这在自然条件下是如何实现的。 当然，在实验室很容易可以生成你想要的完美的十二基础嵌入”。
+绝大多数美国人认为，很不幸COVID将伴随我们很长时间，希望获得透明的信息，以便我们能够学会与其共处之道，而不是生活在永远的恐惧中。国家紧急状态应该不迟于今年结束，国会应以两党合作的方式结束无休止的紧急权力。我们还应该采取行动，追究中共国在大流行问题上向世界撒谎，及其犯下的人权暴行之责任。众所周知，中共政府违背美国人的意愿，任意逮捕和拘留美国人，以敲诈我们的政府。中共政府长期监视美国人，到处使用麦克风和摄像头。他们没有隐私的概念，他们想尽办法收集我们世界级运动员的DNA样本和其他信息。我相信绝大多数中国人和我们一样，但是他们的政府的行为让我们没有理由相信他们。所以，我不认为有着这样人权纪录的中共国应该获得举办奥运会的殊荣。我为美国运动员、教练和后勤人员在国外期间的安全、健康和成功祈祷，并祝他们一切顺利。我知道他们一定会让我们骄傲。
 
-福奇和其他人提出病毒可能来源于武汉海鲜市场的证据，但是任何科学共识都因为—中共国当局关闭和彻底清理海鲜市场而变得复杂。关键证据被破坏，或者隐藏于国际审查之外。外部人员进入实验室也受到限制。 加里博士后来说，参加电话会议的科学家达成共识：“1、不要试图写论文，没必要；2、如果一定要写的话，不要提实验室起源，因为那只会帮助阴谋论者”。
-
-在那次会议上，福奇和他的老板—美国国立卫生院主任柯林斯再次被告知美国国务院的警告，武汉实验室的内部安全规程非常松懈。目前尚不清楚这些警告是否已汇报给白宫官员。无论如何，尽管病毒学家在那次会议上提出互相矛盾的证据，但柯林斯似乎深信不疑：“我认为自然起源的可能性更大，但是我同意你的观点，即需要立即召开鼓舞人心的专家会议（似乎世卫组织是唯一的选择），否则，阴谋论的声音将很快占据主导地位”。
-
-仅仅4天后，五位参加过福奇电话会议的美国、英国、澳大利亚的研究人员撰写了初步研究结果，他们放弃了早先病毒可能来自于实验室泄露的个人看法。尚不清楚是何种新证据促使他们180度大转弯，但是私人通讯显示，他们把多个版本的草稿发给福奇和柯林斯做编辑审批。纪录没有透露他们是否编辑了新的版本。 2月16号，第一版溯源公开稿发布到了网上。几周后3月17号，报告的最终版本发表在《自然医学》杂志，再次完全颠覆了那些病毒学家早些时候的邮件内容，“我们的分析清楚地表明，COVID不是实验室制造或故意操纵的病毒”。但这不足以削弱政府内外的多个消息来源，认为武汉实验室就是COVID来源，(4月15日) “多个消息来源称，中共国的这次隐瞒可能是有史以来代价最大的政府掩盖”。“越來越多的人认为，COVID-19起源于武汉实验室，不是作为一种生化武器，而是作为中共国向世界展示其发现和处理病毒方面的能力与美国一样好，甚至比美国更好”。当天，川普总统被问到有关病毒的报告。
-
-**川普总统：**“我们听到越来越多的故事，表明病毒的实验室来源，我们正在对所发生的这种可怕的情况进行调查”。
-
-**主持人：**第二天，4月16号，沮丧的柯林斯给福奇写了邮件，“想知道NIH能做什么来帮助平息这个具有破坏性的阴谋”。柯林斯的邮件包含了福克斯新闻网站这份特殊报告的链接。一天之后，福奇回信了，“现在我什么都不会做，这一热门话题会随着时间而退去”。但是几小时之后，在白宫的新闻记者会上，福奇博士公开支持“海鲜市场”理论。
-
-**福奇：**“现在病毒变异已经完全达到从一种动物跳到人类的程度”。
-
-**主持人：**我们现在得知，一个多月后，克里斯蒂安·安德森和罗伯特·加里，与福奇密切联系的那份报告的两位作者，获得了福奇机构900万美金的科研资助。一个月之后，生态健康联盟的彼特·达萨克，从福奇机构获得了750万美金的资助，当初生态健康联盟在武汉病毒研究所进行了美国资助的实验。
-
-*字幕：Vekap|听写：云岭|翻译：Roberts|校对：nights|简评/文字整理/编辑：胖丁*
-
-
+*字幕/听写：云岭|翻译：Roberts|校对：英国之声|简评/文字整理/编辑：胖丁*
 
 * * *
 
