--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,36 +1,17 @@
 ---
-title: 加拿大法院判定&#8221;国侨办&#8221;从事间谍活动 驳回中方前官员移民申请
+title: 俄罗斯军队已包围乌克兰的赫尔松和别尔江斯克两个城市
 ---
-`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074726/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074738/)
 
-【玫瑰看新闻】每日快讯
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image009-7.jpg)
-（禁闻网**2**月**26**日）加拿大法院判定**“**国侨办**“**从事间谍活动驳回中方前官员移民申请。加拿大法院首度判定国侨办从事间谍活动，违害加拿大利益。 近日，加拿大联邦法院以中共国务院侨务办公室涉嫌从事间谍活动为由，驳回了两名中共国公民的移民申请。这也是加拿大法院首度公开揭露并确认，中方侨务部门的统战活动危害加拿大国家安全。**
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片5-9.png)（图片源自本文链接）
+2月27日法新社消息：俄罗斯国防部伊戈尔-科纳申科夫报道官27日, 通过媒体发表了一份声明表示，其军队在过去24小时内已 “完全包围 “了乌克兰南部城市赫尔松和东南部城市别尔江斯克。
 
-**法庭文件显示，中共前国侨办官员张勇和妻子高玉霞由已经入籍加拿大的女儿担保申请移民。但加拿大移民官认定，张勇曾任职中共国侨办二十余年，涉嫌从事间谍活动。该官员引用有关**“**禁止从事间谍活动并损害加拿大利益的组织成员移民加拿大**”**的法律条文，认定中方国侨办属于该类组织，因此拒绝夫妇两人的移民申请。
+信息来源：[ウクライナ2都市「完全包囲」 ロシア国防省（ＡＦＰ＝時事） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/782e3f3af99d3414f130a3f60d1f2450d3daaac3)
 
-
-
-**推出问题，敲出真相，爆料在路上！**
-
-**请关注和订阅我们的以下账号：**
-
-**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
-
-**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
-
-**玫瑰看新闻YOUTUBE账号**：
-
-**玫瑰看新闻**
-
-**黑森林的故事**
-
-**ROSE NEWS**
-
-**【玫瑰看新闻】推特账号**：
-
-**ROSE NEWS (@ROSENEWS4)A**
-
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
