--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,21 +1,36 @@
 ---
-title: 入侵乌克兰后的第一个周末 世界多地示威声援“停止战争”
+title: 加拿大法院判定&#8221;国侨办&#8221;从事间谍活动 驳回中方前官员移民申请
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074707/)
+`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074726/)
 
-撰稿：东京樱花团/向海
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-56.jpg)[图片来源](https://www.sponichi.co.jp/society/news/2022/02/27/jpeg/20220227s00042000215000p_view.jpg)
-俄罗斯入侵乌克兰后的第一个周末，欧洲、美国和日本相继举行抗议活动，民众愤怒。带着蓝色和黄色乌克兰国旗的参加者涌入每个国家的街道，高举指责俄罗斯“停止战争”“声援乌克兰”的标语。
+【玫瑰看新闻】每日快讯
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image009-7.jpg)
+（禁闻网**2**月**26**日）加拿大法院判定**“**国侨办**“**从事间谍活动驳回中方前官员移民申请。加拿大法院首度判定国侨办从事间谍活动，违害加拿大利益。 近日，加拿大联邦法院以中共国务院侨务办公室涉嫌从事间谍活动为由，驳回了两名中共国公民的移民申请。这也是加拿大法院首度公开揭露并确认，中方侨务部门的统战活动危害加拿大国家安全。**
 
-26日，英国伦敦政府办公区挤满了示威者。 在法国，2万多人参加了在巴黎等地的示威游行。 在奥地利首都维也纳，市民们高举乌克兰国旗，高呼“停止入侵”和“停止轰炸”。
+**法庭文件显示，中共前国侨办官员张勇和妻子高玉霞由已经入籍加拿大的女儿担保申请移民。但加拿大移民官认定，张勇曾任职中共国侨办二十余年，涉嫌从事间谍活动。该官员引用有关**“**禁止从事间谍活动并损害加拿大利益的组织成员移民加拿大**”**的法律条文，认定中方国侨办属于该类组织，因此拒绝夫妇两人的移民申请。
 
-信息来源：
 
-[**世界が抗議「戦争やめろ」　ウクライナ侵攻後初の週末**](https://news.yahoo.co.jp/articles/a784f00d479af2ad3e236633ad45def835e8b491)
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+**推出问题，敲出真相，爆料在路上！**
+
+**请关注和订阅我们的以下账号：**
+
+**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
+
+**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
+
+**玫瑰看新闻YOUTUBE账号**：
+
+**玫瑰看新闻**
+
+**黑森林的故事**
+
+**ROSE NEWS**
+
+**【玫瑰看新闻】推特账号**：
+
+**ROSE NEWS (@ROSENEWS4)A**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
