--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,29 +1,24 @@
 ---
-title: 俄乌激战基辅 德国军援抗俄
+title: 不要再调侃乌克兰战争，给海外华人留条活路吧！
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074559/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2074682/)
 
-撰稿：东京樱花团/上善若水
+撰稿人：Microkevin
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/俄乌激战基辅-德国军援抗俄.png)[图片来源](https://gnews.org/wp-admin/post-new.php#imgrc=XcjphKyeUSJI8M)
+昨日，中国网民们在网上发表的调侃乌克兰战争和号称“收留乌克兰美女，年轻漂亮的优先”等歧视乌克兰女性和物化乌克兰女性的言论被乌克兰媒体翻译成当地文字传播至全国，这让在乌克兰华人和留学生深陷入排华绝境，有网文评论称：一乌克兰人拿着枪对着一华人发难，问他是不是中国人。该华人回答，不是。乌克兰人遂持枪离开。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16459624911.png)图片来自网络
+关于此等言论我想谈点自己的看法：
 
-俄罗斯进攻乌克兰，战事激化。基辅多地持续传出爆炸枪响声，2月27日凌晨，郊区一座储油槽传出巨大爆炸，火光冲天。同时，德国宣布将向乌运输武器，并与其他西方国家宣布最新制裁：将部分俄国银行踢出SWIFT。
+首先，我无法确认乌克兰人持枪发难该华人是否和此言论有直接因果关系。不过这种言论至少给东欧排华事件的发生加了稻草。七哥说过未来排华最严重的地区之一就是东欧。我想说的是这些人不代表我们所有的中国人。大陆很多明智的网民对此类言论的也进行了抨击。我相信，很多不明真相的中国人只是被“驭民五术”蒙蔽了双眼，无法看清事物的因果关系。而我们新中国联邦人此时更应该加大宣传ccp邪恶洗脑统治，同时新中国联邦人的形象和行为发挥正面影响，减小排华事件发生的几率，保护所有的海内外中国人。让西方人理解我们的部分同胞只是因被洗脑而无法辨别真相，他们不能代表所有的中国人。
 
-俄罗斯入侵乌克兰第四天，乌克兰卫生部长称，已有198名乌克兰人丧生，联合国估计过去48小时内有超过15万人逃离乌克兰。
+我认为，我们中国人从心底是有善良的，是有正义，有情怀的。这就是为什么七哥带领的爆料革命和新中国联邦会有这么多海内外中国人誓死跟随。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16459625031.png)图片来自网络
+第二，我想对这些发此等言论调侃战争和对女性充满蔑视的言论的无知愚蠢的网民们说一句：徐州丰县锁链女的事情还没有落幕，你们就叫嚷着收留乌克兰美女，还得年轻漂亮的优先。还知道找年轻漂亮的看来你们也不傻，咱能不能有点同理心，设身处地的想想如果你们和你们的姐妹处于战争中，或者说ccp攻打台湾之后，大陆一定会被西方联合制裁，那时候ccp有14亿肉票在手肯定不会缺吃少穿，反而老百姓肯定是吃不上，喝不上，穿不上，恐怕到了那时候连孩子都没得吃，这时候如果阿富汗塔利班来叫嚣收留你们的姐妹，你们怎么想？
 
-俄军兵临城下乌克兰首都基辅，冲突持续激化。26日入夜后，首都仍可以听见空袭警报不断回荡；不时可以听见枪支与爆炸声响。根据报导，基辅市内仍有少量俄罗斯军队。不过英国与美国表示，截至周六下午，大部分俄军仍在距离基辅市中心30公里外的地方。为
+我还想问问你们这些发表此等言论的大陆网民，就凭你们吃饭是否加个鸡腿都得想半天，还有一堆车贷房贷等着还的主，能养得起你收留的这些乌克兰美女么？你们养不起她们是不是也把她们像徐州丰县锁链女一样锁起来当性奴呢？在发表此类评论的时候有没有想过你们也是女人生的，你们也有兄弟姐妹。人家在遭受战争之苦的时候你若无法雪中送炭，至少是不是应该献上一份应该的关怀和同情呢！你们知不知道如果台湾战事一起你们可能还不如乌克兰民众呢！至少乌克兰民众还有枪和吃的，你们这些人呢？
 
-基辅情况持续升温的同时，德国总理肖尔兹表示，德国将军援乌克兰1,000枚反坦克武器和500枚“刺针”地对空导弹。
-
-26日，美国、欧盟、英国、加拿大发表联合声明，表示已达成协议并承诺将切断多家俄罗斯银行与国际支付系统SWIFT的业务连结。同时，同意将对俄罗斯中央银行的国际储备进行限制。
-
-信息来源：
-
-[基辅战事持续紧张 德国军援乌克兰抗俄](https://www.dw.com/zh/%E5%9F%BA%E8%BC%94%E6%88%B0%E4%BA%8B%E6%8C%81%E7%BA%8C%E7%B7%8A%E5%BC%B5-%E5%BE%B7%E5%9C%8B%E8%BB%8D%E6%8F%B4%E7%83%8F%E5%85%8B%E8%98%AD%E6%8A%97%E4%BF%84/a-60931907)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
+最后再说一句，台海战事一触即发，到那个时候，ccp不会管老百姓的死活。到那个时候发表此类言论的网民们，恐怕不但没有机会收留乌克兰美女，连你们能不能活下来都是个问题。还是那句话。多一点同理心，给海外同胞留条活路，也给自己留条活路吧！ 同胞们！只有干掉ccp才能让所有中国人得救，让所有中国人有一个正确的信仰和价值观，才能杜绝这种可悲，可气，可恨的是事情发生。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
