--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,42 +1,37 @@
 ---
-title: 紧急通告：新中国联邦开启乌克兰前线的人道救援行动
+title: 多国人权人士发起联署公开信 强烈要求取消彭丽媛联合国妇女特使称号
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2073017/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2073043/)
 
-整撰：奔跑吧黄小鸭
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-2-4.png)图片来源：GTV截图
-乌克兰战火硝烟，台海危机四伏。美东时间2022年2月26日19点时，郭文贵先生在GTV和Gettr平台上紧急直播，全面部署新中国联邦的一项人道救援行动。
+**撰稿：日本东京方舟农场  老孙**
 
-2022年北京冬奥会后，俄罗斯发动了对乌克兰的战争，中国共产党始终拒绝将俄罗斯的军事行动称作“侵略”。在联合国常任理事国针对俄罗斯违反《联合国宪章》的表决上，中国共产党支持俄罗斯，与民主国家背道而驰。
+2月25日，来自多个国家的人权活动人士发表联署公开信，对被授予联合国教科文组织特使称号的中共国第一夫人彭丽媛女士在铁链女事件中的态度极其不满，强烈要求联合国教科文组织取消其促进女童和妇女教育特使称号。
 
-乌克兰境内约有6000多名华人同胞，尽管中共驻乌克兰大使馆宣布计划分批撤侨，但实际上，中共并没有对当地的中国公民实施有效的保护，而仅限于少数地方官员打着国家救援的名义，选择性地营救与自己有关系的亲友。在这场残酷无情的战争中，中国共产党彻底地抛弃了人民。
+公开信全文如下：
 
-战争最大的受害者永远是无辜的平民，本着最基本的人道主义精神，新中国联邦做出重大的决定，将竭尽所能救助我们的中国同胞以及深陷战火的国际友人。
+**联合国教科文组织总干事奥德蕾·****阿祖莱阁下:**
 
-2020年6月4日在美国成立的新中国联邦，是以揭露中国共产党非法、邪恶本质与欺骗行径为目标，由追求实现新中国法治、民主和自由这一共同信仰的人群自发组成的民间团体。
+2014年3月27日，中国国家主席习近平的夫人彭丽媛女士被联合国教科文组织授予“促进女童和妇女教育特使”。
 
-新中国联邦一直呼吁中国共产党不代表中国，中国共产党不代表中国人民，致力于维护中国几千年创造的文化、维护中国人爱好和平和勤劳、勇敢、善良的形象，维护中国人的财富、人身安全和基本的人权，并始终坚持与邪恶作斗争。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-29.jpeg)（图片取自自由亚洲）
 
-在全球正酝酿巨大危机的紧要关头，新中国联邦在联合国的国际救援组织之下，由法治社会、法制基金主导，喜马拉雅联盟委员会协调、全球喜马拉雅农场联合起来统一行动，全面参与赴乌克兰前线开展对以新中国联邦同胞、中国同胞及亲友、美国朋友优先的紧急人道救援。
+从2021年12月5日徐州铁链女事件爆发以来，虽然整个世界都已为之震惊悲愤，中国官方也已经就此事件发布了五个公告，但是迄今为止，彭丽媛女士作为联合国教科文组织授予的“促进女童和妇女教育特使”，对这位自幼被凌辱、苦难中度过二十余载的八孩母亲竟然未置一词。
 
-新中国联邦无意评论战争的对错是非，救援工作不涉及政治立场，不分种族和宗教信仰，只为需要帮助的人提供人道救援。对于不能离开乌克兰的人，也会给予一定的人道救援物资。
+中国每年被贩卖、虐待的妇女、儿童多达上万，却从未见过彭丽媛女士对如此严重的侵犯妇女和女童权益的恶性人权事件表达过任何关切。彭女士未能敦促中国政府遵守和落实“消除对妇女一切形式歧视公约”和“儿童权利公约”，和中国关于保护妇女儿童的相关法律，在这些方面完全未见她做任何努力。
 
-本次救援工作的具体措施包括：
+由此可见，彭女士已完全不适合担当联合国教科文组织授予的促进女童和妇女教育特使了。如果再让彭女士担任女童和妇女特使，将会严重辱没联合国教科文组织的名声，也会让彭丽媛的女童和妇女特使沦为世人的笑柄。
 
-- 初步拟定10架以和平用途的大力神和军事运输飞机执行救援行动，飞机上面标有“国际救援组织”、“新中国联邦”、“法制基金”和“法制社会”的标志和旗帜；
-- 救援任务自下周五前开始执行，计划每天2架飞机（平均每架飞机每次能输送350-500人）；
-- 这些载有医疗、药品、食品，衣物及儿童用品等救援物资的飞机，将在乌克兰首都基辅和基辅周围的几个机场降落，卸除救援物资；
-- 迅速安排救援目标人员登机，返回美国或飞至欧洲某国（对中国公民免签）；
-- 救援目标人员安全落地后，将得到30天的相应生活补助。
+有鉴于此，我们一群关心妇女和女童权益的人士发起全球公开联署，促请联合国教科文组织免去彭丽媛女士“促进女童和妇女教育特使”称号并发布公告，昭告天下，以儆效尤。
 
-
-此外，新中国联邦会在帕劳共和国（即帛琉共和国）建立一个救援基地，很快将用同样的方式救援和安置台湾同胞，未来国内极有可能成为重灾区，国内同胞务请务必先行做好准备，保护好自己，保护好家人。
-
-这是新中国联邦第一次高度参与的国际人道救援行动，绝对不允许个人超越国际救援法律范围、不听从指定单位及人员统一指挥的行为，否则将自行承担一切后果。
+截止本文发稿，已有45名多国知名人权人士联署，第一批联署名单将于2022年3月5日中华人民共和国第十三届全国人民代表大会第五次会议召开之日发送联合国教科文组织（法国巴黎）、联合国人权理事会（瑞士日内瓦）、中国全国人大、全国政协、全国妇联和一些国际人权组织。
 
 参考链接：
+1. [https://wqw2010.blogspot.com/2022/02/joint-letter-urging-unesco-to-revoke.html](https://wqw2010.blogspot.com/2022/02/joint-letter-urging-unesco-to-revoke.html)
+2.[https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/cm2-02252022101104.html](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/cm2-02252022101104.html)
 
-[2022年2月26日 紧急直播：救援乌克兰和台湾战友的方案 – G|TV (gtv.org)](https://gtv.org/video/id=621ab888a391e321a0c853e5)
+**素材采编：**老孙
+**编辑： ** 青城道姑
+**发布：  **文曦
 
  
 
