--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,26 +1,34 @@
 ---
-title: 樱花FM&#124;医生插漫画预防奥米克戎感染扩散
+title: 樱花FM&#124;中日财经爆:历史最高8.7万亿土地收入 中共拙劣的财富洗劫
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2074783/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2074866/)
 
 音频：东京樱花团/战友520
-![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-23.png)
-制定过“克服新冠病毒感染说明书”的是诹访中央医院的玉井道裕医生。从去年开始，将“冠状病毒的基本知识、为了防止感染要做的事情等”（通过该院网站）与漫画插图一起整理出来，进行了数次公开。在社交媒体上也经常以“容易理解”的方式扩散开来。
 
-1月18日公开的“Omicron篇”开头道:“Omicron是弱毒。没什么大不了的……”并嘱咐了以下信息。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/历史最高8.7万亿土地收入-中共拙劣的财富洗劫.png)
 
-“在Omicron的大流行中，世界上还有Omicron更充裕的东西。那是信息。不要太害怕，不要太甜。让我们正确应对！”说明书介绍了大流行奥米克戎的3个因素，以及与美国的情况、三角洲等地的差异，并强调感染力强、潜伏期短等特点，虽然与三角洲相比，重症化的危险较小，但“有人会死亡”。“重症化的概率不是0。这还不至于像‘风’那么轻”，并提醒人们注意，并强调基本的感染对策。“如果这个时期感冒了（in流行地区）→就当得了冠状病毒吧”，“口罩、换气、洗手都是有效的。请避免比现在更紧密的联系”，最后这样诉苦道。“流行病中最可怕的是什么？病毒会变异吗？没有疫苗和治疗药物吗？我个人认为这是没有信息的事情。”如果没有情报，恐惧会加倍增加。为了不让Omicron侵害到心灵，用正确的信息这一‘心灵盾牌’来渡过第6波！”
+1月28日，中共财政部公开2021年财政收支情况。其中，国有土地使用权出让收入87051亿元，同比增长3.5%，创历史新高。大约相当于地方一般公共预算本级收入（约11.11万亿元）的78%。自1998年中国住房市场化改革启动后，土地出让收入从507亿元增至87051亿元，增长了170倍，而同期GPD仅增长了14倍。这也显示出地方财政收入对土地出让收入的绝对依赖。
 
-诹访中央医院宣传负责人说:“为了不引起误会，请阅读完整。”
+而2021年是房企大规模债务违约元年，大量房地产标杆企业均陷入债务危机，流动性严重不足，面临破产重组。可就在这种大规模债务违约下，土地出让收入还创历史新高，谁在买地？
+
+从2021年1—12月国央企及民营企业拿地金额的分布情况来看，国央企在土地市场的参与度有明显提升，上半年多保持在50%左右，至12月国央企拿地的权益金额占比已高至82.5%。首批集中供地时期，即4—6月，国央企的权益拿地金额占比上升至50%左右；第二批集中供地时期，即9月，国央企占比高达79.3%； 第三批集中供地时期，即10—12月，各地的城投、城建企业占据了拿地的主流，国央企占比高达88%。这会产生什么影响？
+
+国央企拿地的集中度有极大提高，民企基本上被挤出了土地市场，市场参与者实质就只有一个，中国共产党，他自己玩左右手互搏。中共模拟了一个土地市场，价格自定，供应量自定，参与者就是代笔党的利益的各个地方政府和各个不同的国央企。这些参与者能炮制出任意巨额交易，并通过银行、股市和债券市场融资，将人民的财富转移至国央企，再转移到政府手里。为什么要产生如此巨额的交易量？
+
+一是，中共国房地产总市值超100万亿美元，中共国GDP超过17万亿美元，支撑如此天量市值，就必须要有一定的增长，即为虚假繁荣的必须；二是，地方政府正在大量流失税收，只有通过卖地才能保持基本的运营收入；三是，做大水池定向回收人民手中的钞票，绑架中国人民，为党买单。这会产生什么后果？
+
+随着房地产业即将出现的断崖式崩塌，企业必定出现债务违约，银行贷款无法收回，房企股票价格暴跌，债券无人接手，整个链条上就只有一个倒霉蛋，中国人民，财富面临直接清零的巨大风险。巨额土地出让收入实质就是政府自导自演“合法”洗劫人民财富所得，直接不还钱了，比货币增发还彻底。
 
 文字版原文：
-[医生插漫画预防奥米克戎感染扩散 – GNEWS](https://gnews.org/zh-hans/1933071/)
-
-编辑：东京樱花团/asket
-发布：东京樱花团/yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图-2022-02-24-151921-2.png)
 
 
+| [中日财经爆┃历史最高8.7万亿土地收入 中共拙劣的财富洗劫 – GNEWS](https://gnews.org/zh-hans/1932410/) |
+| --- |
+
+
+*编辑：东京樱花团/asket
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/新二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
