--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,38 +1,19 @@
 ---
-title: 美欧达成协议将部分俄罗斯银行踢出SWIFT，并额外实施制裁
+title: 俄罗斯爆发大规模反战示威 3000多人被拘捕
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2074711/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074727/)
 
-翻译:宫米叶
+撰稿：东京樱花团/向海
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片4-8.jpg)[图片来源](https://jp.reuters.com/article/ukraine-crisis-russia-protests-idJPKBN2KT3FQ)
+据莫斯科法新社时事报道，俄罗斯人权组织OVD Info 26日表示，在普京24日开始入侵乌克兰后的三天内，至少有3052名俄罗斯人因反战活动被当局拘留。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2591-edited-2.png)news.yahoo.co.jp
+OVD 信息，根据推特上的一篇帖子，仅26日就有467人在34个城市被拘留。
 
-美国、英国、欧洲和加拿大26日同意将俄罗斯部分银行排除在国际银行间汇款和结算系统SWIFT(环球银行金融电信协会)之外，作为对俄罗斯继续入侵乌克兰的新制裁措施的一部分。
+信息来源：[反戦活動で3000人超拘束　ロシア（時事通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/8991fd0ff0aa5d50112f6bdc82eafc7e2bf52042)
 
-联合声明由欧盟委员会、法国、德国、义大利、英国、加拿大和美国的首脑签署。制裁还包括俄罗斯央行有关外汇储备的限制，将在数日内执行。
-
-声明说：“我们要让俄罗斯(为入侵乌克兰)负责。我们将共同努力，使这场战争对普京(总统)而言以战略性失败告终“，”除了我们今天宣布的措施外，我们还准备采取进一步措施，让俄罗斯承担攻击乌克兰的责任。“
-
-欧盟委员会主席冯德莱恩说：“在俄罗斯军队攻击基辅和其他乌克兰城市的时，我们决定进一步让俄罗斯付出巨额的代价，那就是将俄罗斯孤立于国际金融体系和我们的经济之外。“
-
-她解释说，被踢出SWIFT的俄罗斯银行将无法进行全球大部分金融交易，这将有效阻止俄罗斯进出口。“这些银行将与国际金融体系分离，在全球开展业务的能力将受到打击。”
-
-具体俄罗斯哪些银行将被排除在SWIFT之外，目前还不明确。
-
-冯德莱恩表示，将阻止俄罗斯使用军费，冻结中央银行的交易并使其资产无法兑现。
-
-此外，“禁止俄罗斯新兴资本在我们的市场上使用金融资产”。
-
-
-
-来源：【news.yahoo.co.jp】[ロシア一部銀行のＳＷＩＦＴ排除で合意、米欧が追加制裁](https://news.yahoo.co.jp/articles/0e5f3f6cdd1eebcc37ac13ee1e58b8efd4182570)
-
-* * *
-
-审核: BryanW
-校对: 天天
-发布：花羽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-5.jpeg)
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
