--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,25 +1,38 @@
 ---
-title: 疫苗倡导者却不支持全面疫苗计划，尤其是孩童
+title: 美欧达成协议将部分俄罗斯银行踢出SWIFT，并额外实施制裁
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2074695/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2074711/)
 
-[撰稿日期]：2022.02.26
-[署名]：台湾宝岛农场dobi
-[新闻连接]：《https://www.epochtimes.com/b5/22/2/26/n13606046.htm》《https://gnews.org/zh-hant/1854776/》
-[正文]：
-据外媒报导，美多位前线医生、医学专家和疫苗受害者在1月24日相关会议上，都针对中共病毒疫苗的安全性，也就是是否应强制人民打疫苗以及孩童是否需要打疫苗等问题陆续表态和高度质疑。
+翻译:宫米叶
 
-亚伦·赫里亚蒂（Aaron Kheriaty）说：“相关公共卫生部门虽不想承认政策的失败，但事实是大规模接种疫苗并没有抑制病毒传播，甚至Omicron变种出现后，美感染人数更高达50-70%。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2591-edited-2.png)news.yahoo.co.jp
 
-曾是疫苗计划推手的保罗·亚历山大（Paul Alexander）博士说：“我是疫苗计划的倡导者，但我并不支持全面的疫苗计划，尤其是千万不要让孩童接种疫苗。”亚历山大更进一步补充说：“我们目前已汇整了150条证据支持我现在的说法。”
+美国、英国、欧洲和加拿大26日同意将俄罗斯部分银行排除在国际银行间汇款和结算系统SWIFT(环球银行金融电信协会)之外，作为对俄罗斯继续入侵乌克兰的新制裁措施的一部分。
 
-赫里亚蒂说：其实在整个疫苗政策中，我们的公共卫生机构明显漠视了《纽伦堡法典（Nuremberg Code）》、《赫尔辛基宣言（Declaration of Helsinki）》、《贝尔蒙特报告（Belmont Report）》规范应保障受试者的自由和知情权的重要原则。
+联合声明由欧盟委员会、法国、德国、义大利、英国、加拿大和美国的首脑签署。制裁还包括俄罗斯央行有关外汇储备的限制，将在数日内执行。
 
-承续赫里亚蒂的说法、对所有的疫苗接种者都可以说等同参与了一场国际性、骇人的人体实验，例如2020年，FDA利用紧急用户许可证（EUA)，在短短108天内就批准了疫苗的授权，尽管当时引发相关知情人士的强烈质疑，但疫苗仍强行上市、施打，因此接种者都是疫苗受试者，不仅研究伦理中知的权利被漠视，甚至可以说刻意被遮蔽了。
+声明说：“我们要让俄罗斯(为入侵乌克兰)负责。我们将共同努力，使这场战争对普京(总统)而言以战略性失败告终“，”除了我们今天宣布的措施外，我们还准备采取进一步措施，让俄罗斯承担攻击乌克兰的责任。“
 
-相信这一疫苗悲剧应只是冰山的一角而已，冰山下面还隐藏了尚未揭露、爆发的骇人内幕。然而，诚如以色列著名的免疫学家Ehud Qimron所言；“真相固然可能暂时不为公众所知，但数据洪流是无法阻挡的。最终，如果政府没有做好应急，愤怒的洪流必将颠覆社会。”且爆料革命所言：所有勇于揭露或试图力挽疫苗灾难狂澜、有良知的科学家、医生、学者或是疫苗受害者等都是值得肯定的，因为邪恶的疫苗计划必须愈快摧毁愈好，才能使这辆失控的列车停下来，避免更大的人类灾难。
-[新闻连接]：《https://www.epochtimes.com/b5/22/2/26/n13606046.htm》《https://gnews.org/zh-hant/1854776/》
+欧盟委员会主席冯德莱恩说：“在俄罗斯军队攻击基辅和其他乌克兰城市的时，我们决定进一步让俄罗斯付出巨额的代价，那就是将俄罗斯孤立于国际金融体系和我们的经济之外。“
 
+她解释说，被踢出SWIFT的俄罗斯银行将无法进行全球大部分金融交易，这将有效阻止俄罗斯进出口。“这些银行将与国际金融体系分离，在全球开展业务的能力将受到打击。”
+
+具体俄罗斯哪些银行将被排除在SWIFT之外，目前还不明确。
+
+冯德莱恩表示，将阻止俄罗斯使用军费，冻结中央银行的交易并使其资产无法兑现。
+
+此外，“禁止俄罗斯新兴资本在我们的市场上使用金融资产”。
+
+
+
+来源：【news.yahoo.co.jp】[ロシア一部銀行のＳＷＩＦＴ排除で合意、米欧が追加制裁](https://news.yahoo.co.jp/articles/0e5f3f6cdd1eebcc37ac13ee1e58b8efd4182570)
+
+* * *
+
+审核: BryanW
+校对: 天天
+发布：花羽
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-5.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
