--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,42 +1,21 @@
 ---
-title: 乌克兰首都传激烈枪战俄罗斯否决安理会决议
+title: 乌克兰将组建外国军队，呼吁国外志愿者加入
 ---
-`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074641/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074703/)
 
-【玫瑰看新闻】每日快讯
-![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰首都传激烈枪战俄罗斯否决安理会决议.jpg)
-俄罗斯与乌克兰军队周六清晨在基辅多区爆发武装冲突，乌克兰军方称击落一架俄罗斯军机，乌总统呼吁保卫基辅，“不能失去首都”。同时，俄罗斯否决了联合国安理会一项谴责其行为的决议.
+撰稿：东京樱花团/待命（文晓）
 
-乌克兰首都基辅周六，2月26日，爆发多起战斗，且在一夜之间加剧。根据通讯社报导，基辅部分地区传出巨大炮声和枪声。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰将组建外国军队，呼吁国外志愿者加入.png)（图片源自本文链接）
 
-联合国安理会在纽约时间周五，2月25日，未能通过一项谴责俄罗斯入侵乌克兰并要求其无条件撤军的决议草案。作为安理会五个常任理事国之一的俄罗斯使用了否决权来阻止该决议。
+2月27日路透社基辅消息： 2月27日，乌克兰总统泽伦斯基27日表示，国家正在被俄罗斯军队入侵，他将组建一支由其它国家志愿者组成的国际部队。
 
-中共国、阿拉伯联合酋长国和印度则美国起草的案文投了弃权票。其余11个安理会成员投了赞成票。在投票前，美国和其他支持者也预期该决议不会通过，但认为这将凸显目前俄罗斯在国际上被孤立的状态。
+总统泽伦斯基说：这将是你们支持我们国家的一个重要标志。
 
-[【援引连结】](https://www.dw.com/zh/%E7%83%8F%E5%85%8B%E8%98%AD%E9%A6%96%E9%83%BD%E5%82%B3%E6%BF%80%E7%83%88%E6%A7%8D%E6%88%B0-%E4%BF%84%E7%BE%85%E6%96%AF%E5%90%A6%E6%B1%BA%E5%AE%89%E7%90%86%E6%9C%83%E6%B1%BA%E8%AD%B0/a-60925415)
+信息来源：[ウクライナ、外国人部隊編成へ　国外から志願募集（ロイター） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/f43412a138ccc9bf66a0cd8bca50b0a2ed43d646)
 
-
-
-**推出问题，敲出真相，爆料在路上！**
-
-**请关注和订阅我们的以下账号：**
-
-**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
-
-**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
-
-**玫瑰看新闻YOUTUBE账号**：
-
-**玫瑰看新闻**
-
-**黑森林的故事**
-
-**ROSE NEWS**
-
-**【玫瑰看新闻】推特账号**：
-
-**ROSE NEWS (@ROSENEWS4)A**
-
+*校对：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
