--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,25 +1,42 @@
 ---
-title: 日本民众踊跃募捐支持乌克兰 反对俄罗斯军事侵略
+title: 乌克兰首都传激烈枪战俄罗斯否决安理会决议
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074517/)
+`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074641/)
 
-撰稿：东京樱花团/风翼
+【玫瑰看新闻】每日快讯
+![](https://assets.gnews.org/wp-content/uploads/2022/02/乌克兰首都传激烈枪战俄罗斯否决安理会决议.jpg)
+俄罗斯与乌克兰军队周六清晨在基辅多区爆发武装冲突，乌克兰军方称击落一架俄罗斯军机，乌总统呼吁保卫基辅，“不能失去首都”。同时，俄罗斯否决了联合国安理会一项谴责其行为的决议.
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/日本民众踊跃募捐支持乌克兰-反对俄罗斯军事侵略.png)
+乌克兰首都基辅周六，2月26日，爆发多起战斗，且在一夜之间加剧。根据通讯社报导，基辅部分地区传出巨大炮声和枪声。
 
-2020年2月25日，乌克兰驻日大使馆在推特上公布了募款账号，日本民纷纷踊跃捐助。
+联合国安理会在纽约时间周五，2月25日，未能通过一项谴责俄罗斯入侵乌克兰并要求其无条件撤军的决议草案。作为安理会五个常任理事国之一的俄罗斯使用了否决权来阻止该决议。
 
-一天之内，有上千人留言并晒出了汇款证明，在汇款的日本人当中，有一次性汇款十万日元的，也有表示已将当天的打零工的工资3000日币全部捐出来的，还有只有1000日币的大学生捐款支持的。
+中共国、阿拉伯联合酋长国和印度则美国起草的案文投了弃权票。其余11个安理会成员投了赞成票。在投票前，美国和其他支持者也预期该决议不会通过，但认为这将凸显目前俄罗斯在国际上被孤立的状态。
 
-日本民众有留言表示，“不管是什么原因，军事侵略都是一种不应该被容忍的愚蠢行为。我们祝愿乌克兰人民迅速恢复正常。并捐款支持”。
+[【援引连结】](https://www.dw.com/zh/%E7%83%8F%E5%85%8B%E8%98%AD%E9%A6%96%E9%83%BD%E5%82%B3%E6%BF%80%E7%83%88%E6%A7%8D%E6%88%B0-%E4%BF%84%E7%BE%85%E6%96%AF%E5%90%A6%E6%B1%BA%E5%AE%89%E7%90%86%E6%9C%83%E6%B1%BA%E8%AD%B0/a-60925415)
 
-更有群众表示希望本国的自卫队员根据本人的意愿去帮助乌克兰人民。
 
-战争是愚蠢和残酷的，世界爱好和平的民众正用各种方式抗议俄罗斯的侵略战争行为。而深受战争之害的日本民众的反应，更能体现出人们希望和平，尊重生命的美好愿望。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
+**推出问题，敲出真相，爆料在路上！**
+
+**请关注和订阅我们的以下账号：**
+
+**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
+
+**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
+
+**玫瑰看新闻YOUTUBE账号**：
+
+**玫瑰看新闻**
+
+**黑森林的故事**
+
+**ROSE NEWS**
+
+**【玫瑰看新闻】推特账号**：
+
+**ROSE NEWS (@ROSENEWS4)A**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
