--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,48 +1,31 @@
 ---
-title: 文贵天成——文贵先生谈“孟建柱”（十）
+title: 国人身陷乌克兰危局 中共却只顾作秀洗脑
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2074418/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074602/)
 
-整理：小儿
-编辑：skyandmoon
+撰稿：东京樱花团/上善若水
 
-- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/02/10-35.png)图片来源：雅典娜设计组（614）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/国人身陷乌克兰危局-中共却只顾作秀洗脑.png)
 
+从“在明显处贴上中共国旗”到“不要随意亮明身份及展示具有识别性的标识”，俄罗斯攻打乌克兰以来，中共驻乌克兰大使馆先后发出了自相矛盾的两则安全提醒。
 
-**郭文贵先生2017****年5****月1****日与刘彦平通话（续）**
+中共国驻乌克兰大使馆2月26日凌晨在微信公众号上发布通知表示：”最近一段时间，随着乌俄战事不断升级，乌社会上极端行为增加，出言不逊甚至持枪射击，给我在乌中国公民造成安全风险。”
 
-郭：我准备28年了，不是开玩笑的。书记，现在我头上就盖了21条罪，有本事三年把我定个罪。还公布马建副部长行贿罪，这又帮了我一个大忙！首先我行贿罪得给钱啊，他得给我权力啊，行贿最基本的特征就是我给你钱，你给我权力，权钱交易，就像当年抓王有杰一样，抓到后，中纪委说我给他多少多少钱，最后一查是我没给他钱。郭文贵瞎话连篇？怎么威胁？把曾庆红给牵出来，谁能录视频？你说这视频是公安部某部门干的，孟建柱书记不知道？王岐山不知道？
+该使馆还提醒道：尽量不要外出活动，远离军事设施、军队人员和持枪者，以减少安全风险；不要对正在发生的交火及人员进行拍摄，也不得在未征得对方同意情况下拍照；不要随意亮明身份及展示具有识别性的标识。
 
-你说王岐山书记是查纪委的，就查郭文贵商人，全人类都知道王岐山是查我的，到处说要弄死我，他见了美国人都说郭文贵不是好东西，你还替王岐山说话，你觉得不浪费你时间吗？他见到美国人说我是个骗子，一分钱没有，说盘古都不是他的，别听他胡说。用得着他一个国家领导人对我这样吗？
+其中”不要随意亮明身份”这条提醒尤其引人关注，因为就在俄罗斯开始攻打乌克兰的周四当天，中共驻乌克兰大使馆发布的提醒还包括：长途旅行时，可在车身明显处贴上中共国旗。
 
-孟建柱书记亲自给人家说，郭文贵就是个骗子，骗你们的钱，赶紧给钱拿回来。用得着这么说嘛？你还把他当成国家领导，周永康也是国家领导人，令计划也是国家领导人，不都是一百多斤啊，他被抓起来连狗都不如！孟建柱和王岐山他什么都不是，他代表不了国家，代表不了这两百多万的干警，他代表不了，书记！不要认为他的职务就是他的伟大，他是个人！当他不配代表这个国家的时候，我就不把他当成领导人了！孟建柱用得着带着十几个（人）跑到中东，去把我毁成那样吗？我还能尊重他吗？孙力军跟我见有什么用呢？天天拿着钱到美国乱挥霍，美国人都知道，这些我们都盯着呢，他到美国来干什么事情都盯着呢！我不能跟你说这是谁说的，我得给人家承诺，这个事情越搞越大，我说我也不想，但是很多事情是我控制不了的，不是你想去控制就能控制得了的。
+就在中共官方大力宣传”中共之强大和国旗之重要”的同时，已有不少网民表示：“这种宣传非常不妥，在复杂的战地环境里亮身份，是非常不理智的行为。”也有人直接问道：”炸弹真的能识别国旗吗”。还有微博用户嘲笑道：“笑死了，就为了宣传所谓的民族自豪感，弃民众安全于不顾。大张旗鼓的告诉别人我们支持俄罗斯你们可以打我了。”
 
-我从认识你到现在，我说哪句话（会假），现在你往回看，有时候有些情绪的表达，但是我那些不是认真的。我的律师明确告诉我，任何签署卷宗案情的事情，律师必须在场。现在美国分的特别清楚，我的私人律师、商务律师，还有我的刑事律师。我今天就很明确，我的律师团队现在楼下，我随时可以叫他们上来，我告诉他们，我现在就是友好配合，和友方讲清楚，（还）不到法律的程度，所以我不希望把事情失去控制，我也不想。但是我还是那句话，毕竟孟建柱是你的老大，王岐山是你的老大，他们要干啥，不可能告诉你的……
+现在，中共国驻乌克兰大使馆也改口提醒：“不要随意亮明身份及展示具有识别性的标识”。有网民表示不解：“昨天还是前天热搜国旗脱销，现在又不让亮明身份我国驻乌克兰使馆这波操作不太严谨啊”。还有推特用户释：“两个建议都是对的：前者对国内；后者对乌克兰华人。”
 
-郭：都对，但是就一件事情你们从来没有考虑过，为什么我走到今天？未来我想走哪是不是我说了算！今天我问你刘书记，我愿意走到今天吗？但凡你有一点的常识，你也能看出来这件事是什么案子，王岐山和孟建柱这么折腾，他们没罪吗？傅政华没罪吗？李友没罪吗？就郭文贵有罪？还得说清楚，郭文贵的立功全都不算数？然后孙力军每次都是偶然来美国？然后跟美国谈电信的事情？难道郭文贵就这么笨吗？不是我不想，我怎么想？就是提出来要帮助我保护我，两年半以前在迈阿密，CIA的人还来找我，我说我不接受，也不给你们谈，我把电话给律师，让律师给他们说，再说的话我就告你！但是我到现在，我没办法，已经三年过去了，人家又来了，又来给我做交换，这是两边的信息，他们能一起撒谎？美国人和中国人一起撒谎，说郭文贵我们干一件事，你觉得可能吗？这您不知道，这天下人家都知道！
+信息来源：
 
-资料来源：郭先生GTV和盖特直播视频
+[中国驻乌克兰大使馆连忙改口为哪般？](https://www.dw.com/zh/%E4%B8%AD%E5%9B%BD%E9%A9%BB%E4%B9%8C%E5%85%8B%E5%85%B0%E5%A4%A7%E4%BD%BF%E9%A6%86%E8%BF%9E%E5%BF%99%E6%94%B9%E5%8F%A3%E4%B8%BA%E5%93%AA%E8%88%AC/a-60929373)
 
-往期回顾：
-[文•贵天成——文贵先生谈“孟建柱”（一）](https://gnews.org/zh-hans/2050956/)
-[文•贵天成——文贵先生谈“孟建柱”（二）](https://gnews.org/zh-hans/2050401/)
-[文•贵天成——文贵先生谈“孟建柱”（三）](https://gnews.org/zh-hans/2050410/)
-[文•贵天成——文贵先生谈“孟建柱”（四）](https://gnews.org/zh-hans/2050392/)
-[文·贵天成——文贵先生谈“孟建柱”（五）](https://gnews.org/zh-hans/2050653/)
-[文•贵天成——文贵先生谈“孟建柱”（六）](https://gnews.org/zh-hans/2069519/)
-[文•贵天成——文贵先生谈“孟建柱”（七）](https://gnews.org/zh-hans/2069991/)
-[文贵天成——-文贵先生谈“孟建柱”（八）](https://gnews.org/zh-hans/2074302/)
-[文贵天成——-文贵先生谈“孟建柱”（九）](https://gnews.org/zh-hans/2074376/)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
