--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,42 +1,29 @@
 ---
-title: 美国对普京等俄罗斯官员实施制裁 并将制裁俄罗斯直接投资基金
+title: 俄乌激战基辅 德国军援抗俄
 ---
-`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/2074378/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074559/)
 
-【玫瑰看新闻】每日快讯
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image005-2.png)
-白宫新闻发言人普萨基**25**日在推特发文称，财政部还将对国有的俄罗斯直接投资基金**RDIF**）实施** “**全面封锁制裁**”**。
+撰稿：东京樱花团/上善若水
 
-路透社**2**月**25**日消息，** **美国财政部表示，美国在周五对俄罗斯总统普京、外长拉夫罗夫、国防部长绍伊和武装力量总参谋长瓦列里**·**格拉西莫夫实施制裁，原因是俄罗斯入侵乌克兰。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/俄乌激战基辅-德国军援抗俄.png)[图片来源](https://gnews.org/wp-admin/post-new.php#imgrc=XcjphKyeUSJI8M)
 
-**美国财政部长耶伦在声明中说：**”**我们与我们的国际盟友和合作伙伴团结一致，确保俄罗斯为其进一步入侵乌克兰付出沉重的经济和外交代价。**”
+俄罗斯进攻乌克兰，战事激化。基辅多地持续传出爆炸枪响声，2月27日凌晨，郊区一座储油槽传出巨大爆炸，火光冲天。同时，德国宣布将向乌运输武器，并与其他西方国家宣布最新制裁：将部分俄国银行踢出SWIFT。
 
-**白宫发言人周五在一条推特上说，财政部还将对国有的俄罗斯直接投资基金**(RDIF)**实施** “**全面封锁制裁**”**。
+俄罗斯入侵乌克兰第四天，乌克兰卫生部长称，已有198名乌克兰人丧生，联合国估计过去48小时内有超过15万人逃离乌克兰。
 
-[【援引连结】](https://cn.reuters.com/article/us-teasury-department-putin-sanction-022-idCNKBS2KV03S)
+俄军兵临城下乌克兰首都基辅，冲突持续激化。26日入夜后，首都仍可以听见空袭警报不断回荡；不时可以听见枪支与爆炸声响。根据报导，基辅市内仍有少量俄罗斯军队。不过英国与美国表示，截至周六下午，大部分俄军仍在距离基辅市中心30公里外的地方。为
 
+基辅情况持续升温的同时，德国总理肖尔兹表示，德国将军援乌克兰1,000枚反坦克武器和500枚“刺针”地对空导弹。
 
+26日，美国、欧盟、英国、加拿大发表联合声明，表示已达成协议并承诺将切断多家俄罗斯银行与国际支付系统SWIFT的业务连结。同时，同意将对俄罗斯中央银行的国际储备进行限制。
 
-**推出问题，敲出真相，爆料在路上！**
+信息来源：
 
-**请关注和订阅我们的以下账号：**
+[基辅战事持续紧张 德国军援乌克兰抗俄](https://www.dw.com/zh/%E5%9F%BA%E8%BC%94%E6%88%B0%E4%BA%8B%E6%8C%81%E7%BA%8C%E7%B7%8A%E5%BC%B5-%E5%BE%B7%E5%9C%8B%E8%BB%8D%E6%8F%B4%E7%83%8F%E5%85%8B%E8%98%AD%E6%8A%97%E4%BF%84/a-60931907)
 
-**新西兰伊甸农场盖特**：HTTPS://GETTR.COM/USER/HIMALAYANZ
-
-**【玫瑰看新闻】盖特**：HTTPS://GETTR.COM/USER/ROSENEWS
-
-**玫瑰看新闻YOUTUBE账号**：
-
-**玫瑰看新闻**
-
-**黑森林的故事**
-
-**ROSE NEWS**
-
-**【玫瑰看新闻】推特账号**：
-
-**ROSE NEWS (@ROSENEWS4)A**
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_0887.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
