--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,29 +1,42 @@
 ---
-title: 中共驻乌大使称撤侨还需等待 新中国联邦已启动救援计划
+title: 紧急通告：新中国联邦开启乌克兰前线的人道救援行动
 ---
-`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2072987/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2073017/)
 
-撰稿：日本东京方舟农场 Kevin wang
+整撰：奔跑吧黄小鸭
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-2-4.png)图片来源：GTV截图
+乌克兰战火硝烟，台海危机四伏。美东时间2022年2月26日19点时，郭文贵先生在GTV和Gettr平台上紧急直播，全面部署新中国联邦的一项人道救援行动。
 
-2月27日， 时值俄乌战乱加剧之际，乌克兰国内反华情绪又因中共在联合国安理会针对俄乌战争投下弃权票而高涨，在乌中国人急需撤离乌克兰，然而在乌中国人并未等到来自中共政府的撤侨飞机，甚至有消息称中共驻乌克兰大使范先荣已经提前逃离了乌克兰。所幸，在美成立的新中国联邦于27日早晨紧急启动了乌克兰救援计划。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/023.png)（图片来自网络）
-据中央社报道，中共驻乌克兰大使范先荣27日否认了他已提前逃离乌克兰的消息，但撤侨之事仍需要再等。
+2022年北京冬奥会后，俄罗斯发动了对乌克兰的战争，中国共产党始终拒绝将俄罗斯的军事行动称作“侵略”。在联合国常任理事国针对俄罗斯违反《联合国宪章》的表决上，中国共产党支持俄罗斯，与民主国家背道而驰。
 
-报道称，在俄乌战争爆发后，部分中国小粉红网友发文调侃戏谑，甚至表示要「收留乌克兰美女」。内容传到乌克兰后疑出现反华情绪，有中国留学生被当街泼水，还有人遭到不友善对待甚至威胁。
+乌克兰境内约有6000多名华人同胞，尽管中共驻乌克兰大使馆宣布计划分批撤侨，但实际上，中共并没有对当地的中国公民实施有效的保护，而仅限于少数地方官员打着国家救援的名义，选择性地营救与自己有关系的亲友。在这场残酷无情的战争中，中国共产党彻底地抛弃了人民。
 
-令人欣慰的是，在美成立的新中国联邦于27日早晨紧急启动了乌克兰救援计划。
+战争最大的受害者永远是无辜的平民，本着最基本的人道主义精神，新中国联邦做出重大的决定，将竭尽所能救助我们的中国同胞以及深陷战火的国际友人。
 
-新中国联邦创始人郭文贵先生在紧急直播中宣布，新中国联邦将与联合国救援组织一道，在乌克兰展开以中国同胞、美国友人为优先的无差别救援。第一批救援将派出2驾运输机预计下周五抵达乌克兰，后将陆续派出共计10驾运输机。本次行动由法制基金、法治社会发起，不涉及政治立场，无政治角色。
+2020年6月4日在美国成立的新中国联邦，是以揭露中国共产党非法、邪恶本质与欺骗行径为目标，由追求实现新中国法治、民主和自由这一共同信仰的人群自发组成的民间团体。
 
-此外，新中国联邦各农场联盟委员会将建立紧急救援小组，所有需要救援的人员请与联盟委员会联系，二十四小时内将得到回复。被救人员到欧洲后三十天内的吃穿用住全部由联盟委员会 法治基金、法治社会全面负责，三十天后需自理。此外，从第一批救援开始，新联邦将为临时滞乌人员安排物资发放。
+新中国联邦一直呼吁中国共产党不代表中国，中国共产党不代表中国人民，致力于维护中国几千年创造的文化、维护中国人爱好和平和勤劳、勇敢、善良的形象，维护中国人的财富、人身安全和基本的人权，并始终坚持与邪恶作斗争。
+
+在全球正酝酿巨大危机的紧要关头，新中国联邦在联合国的国际救援组织之下，由法治社会、法制基金主导，喜马拉雅联盟委员会协调、全球喜马拉雅农场联合起来统一行动，全面参与赴乌克兰前线开展对以新中国联邦同胞、中国同胞及亲友、美国朋友优先的紧急人道救援。
+
+新中国联邦无意评论战争的对错是非，救援工作不涉及政治立场，不分种族和宗教信仰，只为需要帮助的人提供人道救援。对于不能离开乌克兰的人，也会给予一定的人道救援物资。
+
+本次救援工作的具体措施包括：
+
+- 初步拟定10架以和平用途的大力神和军事运输飞机执行救援行动，飞机上面标有“国际救援组织”、“新中国联邦”、“法制基金”和“法制社会”的标志和旗帜；
+- 救援任务自下周五前开始执行，计划每天2架飞机（平均每架飞机每次能输送350-500人）；
+- 这些载有医疗、药品、食品，衣物及儿童用品等救援物资的飞机，将在乌克兰首都基辅和基辅周围的几个机场降落，卸除救援物资；
+- 迅速安排救援目标人员登机，返回美国或飞至欧洲某国（对中国公民免签）；
+- 救援目标人员安全落地后，将得到30天的相应生活补助。
+
+
+此外，新中国联邦会在帕劳共和国（即帛琉共和国）建立一个救援基地，很快将用同样的方式救援和安置台湾同胞，未来国内极有可能成为重灾区，国内同胞务请务必先行做好准备，保护好自己，保护好家人。
+
+这是新中国联邦第一次高度参与的国际人道救援行动，绝对不允许个人超越国际救援法律范围、不听从指定单位及人员统一指挥的行为，否则将自行承担一切后果。
 
 参考链接：
-1：[https://www.cna.com.tw/news/aopl/202202270034.aspx](https://www.cna.com.tw/news/aopl/202202270034.aspx)
-2：[https://gnews.org/zh-hans/2071995/](https://gnews.org/zh-hans/2071995/)
 
-素材采编：Kevin wang
-编辑：老孙
-发布：Linda
+[2022年2月26日 紧急直播：救援乌克兰和台湾战友的方案 – G|TV (gtv.org)](https://gtv.org/video/id=621ab888a391e321a0c853e5)
 
  
 
