--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,17 +1,26 @@
 ---
-title: 日本正式决定将部分俄罗斯银行从SWIFT剔除
+title: 樱花FM&#124;医生插漫画预防奥米克戎感染扩散
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2074748/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2074783/)
 
-撰稿：东京樱花团/麗子
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片6-5.jpg)
-27日晚，岸田首相声明，将数家俄罗斯银行从SWIFT剔除。
+音频：东京樱花团/战友520
+![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-23.png)
+制定过“克服新冠病毒感染说明书”的是诹访中央医院的玉井道裕医生。从去年开始，将“冠状病毒的基本知识、为了防止感染要做的事情等”（通过该院网站）与漫画插图一起整理出来，进行了数次公开。在社交媒体上也经常以“容易理解”的方式扩散开来。
 
-27日晚，岸田首相声明，由于俄罗斯侵略乌克兰，日俄关系也已难回到从前。日本将与七国集团与国际社会保持一致，对俄罗斯采取更严厉的制裁；西方国家今天上午发表的声明指出，将俄罗斯孤立于国际金融体系和全球经济之外，包括将某些俄罗斯银行排除在SWIFT之外，日本也将采取同样措施。同时，岸田首相强调，日本一直在与国际社会，包括七国集团保持密切合作，这一立场不会改变。
+1月18日公开的“Omicron篇”开头道:“Omicron是弱毒。没什么大不了的……”并嘱咐了以下信息。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+“在Omicron的大流行中，世界上还有Omicron更充裕的东西。那是信息。不要太害怕，不要太甜。让我们正确应对！”说明书介绍了大流行奥米克戎的3个因素，以及与美国的情况、三角洲等地的差异，并强调感染力强、潜伏期短等特点，虽然与三角洲相比，重症化的危险较小，但“有人会死亡”。“重症化的概率不是0。这还不至于像‘风’那么轻”，并提醒人们注意，并强调基本的感染对策。“如果这个时期感冒了（in流行地区）→就当得了冠状病毒吧”，“口罩、换气、洗手都是有效的。请避免比现在更紧密的联系”，最后这样诉苦道。“流行病中最可怕的是什么？病毒会变异吗？没有疫苗和治疗药物吗？我个人认为这是没有信息的事情。”如果没有情报，恐惧会加倍增加。为了不让Omicron侵害到心灵，用正确的信息这一‘心灵盾牌’来渡过第6波！”
+
+诹访中央医院宣传负责人说:“为了不引起误会，请阅读完整。”
+
+文字版原文：
+[医生插漫画预防奥米克戎感染扩散 – GNEWS](https://gnews.org/zh-hans/1933071/)
+
+编辑：东京樱花团/asket
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图-2022-02-24-151921-2.png)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
