--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: Hpay现在是转账系统 非商业系统
+title: HDO、 H-coin、GTV、GNEWs、Gettr、Gfashion 是灭共力量
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2078788/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2078797/)
 
 台灣寶島農場
 
