--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 如何专业推广Hpay
+title: Hpay现在是转账系统 非商业系统
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2078773/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2078788/)
 
 台灣寶島農場
 
