--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 如何专业推广Hpay
+title: HDO、 H-coin、GTV、GNEWs、Gettr、Gfashion 是灭共力量
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2078773/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2078797/)
 
 台灣寶島農場
 
