--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,19 +1,33 @@
 ---
-title: 意大利五十岁以上的人不向疫苗强制令低头——自2月初以来接种率下降70%
+title: 乌克兰战争是一场混合型高智商战争
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2082982/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083146/)
 
-#### 翻译                           意大利达芬奇农场                         小白鸽  
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-28-alle-19.15.37.png)图片来源：ilparagone.it
-政府进一步的限制50岁以上的人，甚至包括那些从严格意义上讲并不拒绝接种新冠疫苗者，他们都离开了疫苗接种中心。尽管德拉吉政府颁布了强制令，但疫苗接种宣传活动仍然停滞不前。正如《24小时太阳报》所解释的那样，“2月结束时，免疫接种量减少三分之一（92.9万）。这一下降趋势反应在50岁以上这一特殊观察群体。1月28日至2月4日期间， 该年龄组的16.7万人被说服接种疫苗，而在最新的政府报告中减少到仅40.293人（2月19日至25日）。按百分比计算， 下降了70%。
+**整理：北酒仙翁、hys
+编辑：Candy**
 
-所有可接种疫苗的人群， 儿童组（5岁至11岁）仍未接种任何新冠疫苗的人的数量最多。 直至6月15日，50岁以上的人只有在持有超级绿色通行证的前提下，才能进入工作场所。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-12.png)
 
-在对50岁以上人群的强制疫苗接种令生效前夕，有168.4万人尚未开始打新冠疫苗。开始时只说要打两针，然后变为三针，现在说秋天要打第四针。这是从未见过的现象。但是响应人数却在逐渐减少——接种数量从最初每周的167.802剂，到111.836剂， 再到73.935剂直至最近7天的48.293剂。
 
-原文链接：[https://www.ilparagone.it/attualita/vaccino-over-50-disertano-hub/](https://www.ilparagone.it/attualita/vaccino-over-50-disertano-hub/)
+郭先生：这种情况下叫什么战争？这是一个混合型的高智商战争，AI工程学、区块链学、导弹武器，就是工程学，全民的一个人心统一、一致对敌，而且非常自信，每个人都想做牺牲，因为他们觉得他跟俄罗斯这个死敌那种仇恨已经到了家了。他来打你，来把我们消灭，本能啊，而且自信自己会赢。
 
-编辑、上传：  Xiao   baige
+这几个所有的战争宣传，战争心理学、战争关系学、战争工程学，战争资源调配，然后打不对称的信息战，信息优先，特别是在心理上优先了：我是正义的，你是非正义的。你觉得世界上还有谁觉得乌克兰是坏蛋，俄罗斯是好人吗？人类都觉得俄罗斯是坏蛋，乌克兰是弱的。俄罗斯抓了乌克兰好多士兵没有一个视频出来的，但是乌克兰最早几个小时出一个：俄罗斯的士兵横尸在坦克旁边，士兵在路边光着屁股，还有女孩。那个俄罗斯士兵，多漂亮的女孩儿，死的多可惜呀！真是太残忍了！
+
+看了俄罗斯士兵被俘虏，这种在战争心理学叫什么，知道吗？这是不可抗拒，是不可抗拒的，这叫战争宣判心理学。对对方的心理打击叫宣判你死了，没有人不受影响的。 这是为什么现在俄罗斯的部队不允许看手机，完全不知道前方发生了什么。如果都能看到，马上就走了。
+
+就像咱们爆料革命对共产党一样： 七哥一出来爆料用了一招，保命、保财、报仇。很多人看不出这里的情况，中国人多少人想报仇，想报仇的人有多少？我第一天说干倒共产党！说，完了完了完了，你疯了吧？就像那个报道我的疯狂、滑稽，因为美国人才刚刚认识到我们爆料革命，他给你定义为你干共产党就像我家客厅被宣布我的主权一样，他根本不知道我们过去干啥，不知道现在共产党多怕我们，他不知道为什么盘古龙头变成龟头了，因为他无知，他是在酒杯里边见世界。
+
+所以当时我说的时候保命，谁不想保命？你告诉我当时所谓的反腐败就抓了100多万人，保财，谁不捂住自己的钱包？谁不捂自己的脑袋，你告诉我。报仇，你捂着脑袋、捂着钱包时，你不想想谁让我抱脑袋报仇的？当然是共产党啊，那就找共产党，还用说吗？这就是一个战争心理学你必须具备的素质，启发人的本能和消除人的本能。
+
+资料来源：2022.2.27GTV、GETTR文贵大直播
+
+***发布：Candy***
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
