--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,27 +1,43 @@
 ---
-title: 韩囯将从3月起停止中共病毒疫苗接种
+title: 有声&#124;白宫发布美欧关于SWIFT制裁俄罗斯的声明
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2082870/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2083020/)
 
-撰稿：銀河系农场-骄子
+配音：香草山农场 – 纳米
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
+2月26日，美国白宫网站，发表美国及其盟国针对俄罗斯进行制裁的最新声明，声明大致内容如下。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E6%88%AA%E5%B1%8F2022-02-27-%E4%B8%8B%E5%8D%8810.27.06.png)
+欧盟委员会、法国、德国、意大利、英国、加拿大和美国的领导人与乌克兰政府和乌克兰人民站在一起，谴责普京选择战争。俄罗斯需要为这场战争付出代价。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7D060BC2-5E5D-4938-91E6-4114EB063104.jpeg)
+随着俄罗斯军队对基辅和其他乌克兰城市发动攻击，欧盟委员会、法国、德国、意大利、英国、加拿大和美国的领导人与乌克兰政府和乌克兰人民站在一起，决定:
+
+1. 把选定的俄罗斯银行踢出SWIFT系统；
+2. 采取限制性措施，防止俄罗斯中央银行利用其国际储备破坏制裁的影响；
+3. 对助长乌克兰战争和俄罗斯政府有害活动的个人和实体采取行动，限制向其出售公民身份，阻止其进入我们国家的金融系统；
+4. 在下周启动一个跨大西洋特别工作组，查明和冻结在我们管辖范围内的受制裁个人和公司的资产。制裁更多的俄罗斯官员和与俄罗斯政府关系密切的精英及其家人以及他们的推动者，识别和冻结他们在我们管辖范围内持有的资产，以及和其他政府合作，阻止被制裁者在世界各地隐藏资产；
+5. 加强或协调打击虚假信息和其他形式的混合战争。
 
 
 
-韩国政府于2月28日周一表示，由于中共病毒疫苗的有效性存疑，政府决定从3月开始停止接种中共病毒疫苗。
 
-在中央灾害和安全对策会议上，政府宣布从3月1日周二起，将中共病毒疫苗通行证暂停使用，该通行证用途涵盖11种，包括餐馆、咖啡厅、大型活动和超过50人的集会。同时公共卫生中心、诊所和筛查诊所将停止签发中共病毒阴性证书，服务企业不再需要二维码验证程序。
+文字版原文：[白宫发布美欧关于SWIFT制裁俄罗斯的声明](https://gnews.org/zh-hans/2078401/)
 
-韩国政府最近因实施中共病毒疫苗强制面临一系列的诉讼，当地法院决定暂停疫苗通行证，韩国政府遂出此决定。
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-新闻來源：[http://www.koreabiomed.com/news/articleView.html?idxno=13210](http://www.koreabiomed.com/news/articleView.html?idxno=13210)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1064B0CE-D742-4020-848C-27D308EB3B74.jpeg)
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
 
-编輯/校対/发稿：玫瑰圓
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0D8243C6-6266-4598-8A2B-F53FE4CCC6E7.jpeg)
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
