--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,17 +1,27 @@
 ---
-title: 2022年2月28日，全球中共病毒疫情情况汇总
+title: 韩囯将从3月起停止中共病毒疫苗接种
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2082765/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2082870/)
 
-制作：DT新闻组
+撰稿：銀河系农场-骄子
 
-**中共的杀戮还在继续……**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7D060BC2-5E5D-4938-91E6-4114EB063104.jpeg)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7F93BB00-0EC3-4DD4-B8DC-64995A04C2E5.jpg)
 
-发稿：信心的选择
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-9.jpeg)
+韩国政府于2月28日周一表示，由于中共病毒疫苗的有效性存疑，政府决定从3月开始停止接种中共病毒疫苗。
+
+在中央灾害和安全对策会议上，政府宣布从3月1日周二起，将中共病毒疫苗通行证暂停使用，该通行证用途涵盖11种，包括餐馆、咖啡厅、大型活动和超过50人的集会。同时公共卫生中心、诊所和筛查诊所将停止签发中共病毒阴性证书，服务企业不再需要二维码验证程序。
+
+韩国政府最近因实施中共病毒疫苗强制面临一系列的诉讼，当地法院决定暂停疫苗通行证，韩国政府遂出此决定。
+
+新闻來源：[http://www.koreabiomed.com/news/articleView.html?idxno=13210](http://www.koreabiomed.com/news/articleView.html?idxno=13210)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1064B0CE-D742-4020-848C-27D308EB3B74.jpeg)
+
+编輯/校対/发稿：玫瑰圓
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/0D8243C6-6266-4598-8A2B-F53FE4CCC6E7.jpeg)
 
  
 
