--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,25 +1,29 @@
 ---
-title: 中共双标救援政策放任中国同胞自灭，还试图阻止新中国联邦实施救援
+title: 美国计划将俄罗斯加密货币纳入制裁清单
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/2083197/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2083361/)
 
-新西兰伊甸农场Gnews组 财经G乐部-亚伦
+**撰稿：日本东京方舟农场  海星**
 
-2月28日，郭文贵先生于Gettr视频中透露，中共一贯流氓的双标嘴脸在乌克兰救援上体现的淋漓尽致，同时，新中国联邦由法治基金和法治社会主导的紧急救援行动不要钱、只救人。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/a61b0e5723b8e94b.png)图片来源新西兰农场
+近期，针对俄罗斯日趋激烈的侵略行为，美国政府计划将加密货币纳入制裁清单。
 
+据《自由时报》报导，为了让俄罗斯对侵略乌克兰的行为付出相应代价，美国拜登政府正在考虑对其实施进一步经济制裁，将加密货币也纳入制裁清单。
 
-当前，全世界聚焦在激烈交战的俄乌战争，乌克兰正在发生人道灾难。然而，比爹亲娘亲的中共对困于乌克兰的中国公民提供两种处理方式，对于与自己有关联的亲友创造必要的救援条件，对于普通中国公民就以有导弹袭击危险为由无法实施救援。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-32.jpeg)（图片来源：Blockchain）
 
-即便新中国联邦的人道救援宣传工作还未全面铺开，但足已成功激怒中共。导致中共内部招集紧急会议，声称要坚决阻止新中国联邦调动强大的资源救援更多的中国同胞、美国友人等，要求放任在乌克兰的普通中国公民自生自灭。
+该报导称，中共官媒央视财经近期曝光俄罗斯政府及富豪为躲避多国制裁，将财富透过加密货币形式藏匿，总金额高达1兆美元。
 
-事实上，目前中共在乌克兰的所有救援行动只是安排了两台大客车，准备把有一定级别的中共官员及家人（小姨子、小舅子等）或相关联人员运送到波兰。与此相对的是，为了救援中国同胞、美国友人等，新中国联邦派去救援的是全世界最安全的大力神飞机，与联合国安保组织机构合作，配备合法而专业的军人护卫。但是，如此美好的救援行动遭到中共严令阻止，中共不出手相救自己的国民，现在还要阻挠中国同胞有别的求生机会。中共向来不允许中国普通人民享有人权，否则就无法继续奴役人民，这就是流氓的中国共产党。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/aba534e848c76767.png)图片来源新西兰农场
-乌克兰并不是中共控制的地域，必将无法阻挡任何正义、合法的救援行动。而且令人兴奋的是，因这次人道救援行动新中国联邦与世界很多国家和机构立即形成了对等的、合作的、互信的关系，并且很多人都在寻求与我们合作。比如，乌克兰的某个社团向新中国联邦求救，希望可以让一些人有偿地搭上救援飞机，新中国联邦回复是不要钱、只救人，尽可能的多救一个是一个，毕竟每个人都是鲜活的生命。
+该报导指出，以加密货币形式藏匿的资金虽然不易被发现，增加了欧美对俄罗斯实施经济制裁的难度，但美国政府早前便已有制裁加密货币的经验。去年9月，美国政府将涉嫌洗钱及勒索的俄罗斯加密货币交易所 SUEX OTC 和 Chatex 列入了黑名单，有效地遏制了犯罪分子通过加密货币转移或获取资金。
 
-历来有竞争事情才会向着好的方法发展，在乌克兰的人道救援上，新中国联邦的救援行动超过所有中共的部门和机构，成为乌克兰上空飘荡的唯一来自中国人的救援力量。
+此前，美国政府和盟国已共同宣布对俄罗斯实施经济制裁，将其部分银行从SWIFT系统中剔除。
 
-最后，如果因为新中国联邦的救援行动而促使中共国和美国加速救援乌克兰也将是功德一件。
+参考链接：
+1. [https://ec.ltn.com.tw/article/breakingnews/3843064](https://ec.ltn.com.tw/article/breakingnews/3843064)
+2. [https://gnews.org/zh-hans/2072270/](https://gnews.org/zh-hans/2072270/)
+
+素材采编：海星
+编辑：老孙
+发布：文曦
 
  
 
