--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,34 +1,63 @@
 ---
-title: 中共专家谈基因武器
+title: “我们将摧毁占领者”：泽连斯基向普京发出警告
 ---
-`XINYUAN` [轉載自GNews](https://gnews.org/zh-hans/2083170/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2083234/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/dna-gb29318204_1920-1.jpg)
-撰稿 : 澳喜农场 – XINYUAN
+**编译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰总统泽伦斯基：我们将摧毁入侵者.png)图片来源:dailymail.co.uk
+克里琴科对基辅居民实行宵禁，直到星期一，乌克兰平民死亡人数达到 219。
 
-这又是一个公开谈论基因武器消灭人口理论的中共国人，这个土豆上的短视频，是他在讲武堂上讲述现在的垃圾人口越来越多，而地球有限的资源已经无法承载这些垃圾人口，为了解决这些问题，必须要运用瘟疫和战争来清除人口。这明目张胆的演讲还是很让人震惊的。
+抵抗总统沃洛德米尔·泽连斯基(Volodmyr Zelensky)今天承诺要“摧毁占领者”，他说，他的国家军队已经成功击退了向基辅推进的俄罗斯军队。
 
-他是戴旭大校，在土豆上有个完整的频道，有很多军事方面的讲座，其中40分钟完整版的基因武器讲座，里面除了详细描述基因武器的优势之处，还描述了什么是基因武器？为什么被称为世界末日武器？应该如何看待基因武器等等。
+泽连斯基在给被围困国家人民的视频信息中，指责克里姆林宫试图夺取首都，推翻政府并建立一个“像顿涅茨克一样”的“傀儡”政权，这是战争贩子普京在发动全面入侵战争之前正式承认的两个分离主义地区之一。
 
-如果有一种武器，比核武器成本低，也不需要像导弹一样具有复杂的系统，更不需要像坦克飞机一样具有庞大的体积，但起到的作用完全可以与它们媲美，我们(中共)为什么不研究、发展、拥有它呢？它有像核武器一样强大的毁灭作用，但又不会像核武器一样具长期放射性污染。常规导弹可以攻击点状或特定目标，而基因武器不仅可以攻击一个地域广大的族群，还可以精确猎杀到个人。不仅可以覆盖到目前所有武器的运用空间，包括思想空间，还超越了这些空间。
+他称“我们打破了他们的企图”，并补充说：“我们国家的许多城市和地区都在进行战斗，我们知道，我们正在保护我们的国家、土地和孩子的未来。 基辅和首都周边主要城市还在我军的控制中。
 
-什么是基因武器？百度百科上是这么解释的。
-所谓的基因武器，是指利用基因工程技术研制的新型生物战剂，又称作第三代生物战剂。基因武器将是现代新概念武器的又一发展方向。
-基因武器，它运用先进的遗传工程这一新技术，用类似工程设计的办法，按人们的需要通过基因重组，在一些致病细菌或病毒中接入能对抗普通疫苗或药物的基因，或者在一些本来不会致病的微生物体内接入致病基因而制造成生物武器，尤其合成生物学的发展，可实现人工设计与合成自然界并不存在的生物或病毒等。它能改变非致病微生物的遗传物质，使其产生具有显著抗药性的致病菌，利用人种生化特征上的差异，使这种致病菌只对特定遗传特征的人们产生致病作用，从而有选择地消灭敌方有生力量。
+“每个乌克兰人都应该记住一件事：如果你能阻止并摧毁占领者——那就去做吧。 每个能够回到乌克兰的人——回来保卫乌克兰吧。”
 
-当年李自成之所以能轻松攻入北京，是因为当时天津的一场大鼠疫导致10室9空，连服兵役的人也没有，所以成就了李自成。而如今的基因武器超越了过去的生化武器，可以直接针对某个人开发。如果A国掌握了B国基因的特性，就可以在战争中以传染病的方式轻松的完成B国的种族灭绝。至少可以造成B国大面积的心理恐慌。甚至整个社会陷入瘫痪。基因武器很隐蔽，可以隐藏于片剂、饮用水、食品等，极不容易察觉。而且无法防范。
+与此同时，基辅的宵禁一直持续到周一早上 8 点，以确保最有效的城市防御和人民的安全。之前的每日宵禁时间是晚上 10 点到早上 7 点。
 
-前段时间炒的沸沸扬扬的华为5G事件中，华为公司在国际科技领域遭到围堵。而在另外一个更前沿、更隐蔽的科技领域，中共的黑手一直没有停止，网络安全公司Mandiant的数据显示，美国生物技术公司已成为中共支持的网络间谍活动的主要目标。
+市长维塔利·克里琴科说：“宵禁期间，街上的所有平民都将被视为敌人破坏或侦察组人员。”
 
-大纪元经查询报道，，截至2019年1月底，除了USCC确认的23家公司之外，中国大陆至少还有华大基因、世和基因（GeneSeeq）、燃石医学（Burning Rock）、至本医疗（OrigiMed）等公司获得CLIA实验室执照；另外还有一些公司正在向CMS申请CLIA执照。而获得CAP认证的中国实验室则更多，截至2019年2月，已有66间。
+此前，基辅的一座高层公寓楼今天早上被一枚毁灭性的导弹击中，导致乌克兰的平民死亡人数达到 198 人。
 
-另外，USCC也指出，近年来Quest Diagnostics、Anthem等美国医疗、保险公司被黑客攻击，导致成百上千万美国人的健康数据失窃，其中就有中共黑客的身影。也就是说，除了上述三种公开途径外，中共同时一直在使用黑客攻击这种见不得光的手段，获取美国人的生物数据。包括这次冬奥会对各国运动员各项生物指标的收集。
+俄罗斯国防部在推特上发布的情报更新中说，俄罗斯尚未获得对乌克兰领空的控制权，这大大降低了俄罗斯空军的效力。
 
-科技发展本来是造福人类的，但在中共这里，却变成了一发发射向普通民众的子弹，随着中共的邪恶膨胀，现在也确实是到了要被消灭的地步了。正像七哥一直以的呐喊: “共产党，你完蛋了！”
+但武装部队部长詹姆斯·赫佩今天表示，没有理由认为“完美的结局指日可待”，因为他警告说，冲突可能会持续数月。
 
-(本文只代表个人观点)
+他告诉BBC：“没有人应该认为这已经结束了。在乌克兰、它的武装部队和非常悲惨的乌克兰人民面前，从过去 48 小时内我们所看到，这将会是几天、几周、几个月的时间。”
 
+正如乌克兰军队说，他们今天已经击退了俄罗斯对其首都的袭击，泽连斯基在一段激情的视频中发誓，要留下来和他的人民继续战斗。
 
+“我就在这里。我们不会放下任何武器。我们将保卫我们的国家，因为我们的武器就是我们的真理，”他在办公室外说道，并谴责说他已经投降或逃跑的说法是虚假信息。
+
+身穿军装的总统补充说：“互联网上出现了很多虚假信息，称我呼吁我军放下武器，撤离正在进行中。”
+
+“事实是，这是我们的土地、我们的国家、我们的孩子，我们将保护这一切。 这就是我想告诉你的。荣耀归于乌克兰”
+
+今天令人震惊的画面显示，一枚导弹将朱利尼机场附近的一座塔楼撕裂，而内部的闭路电视也显示了该地点被击中后的破坏程度。
+
+图片显示，该建筑物的侧面至少有五层楼的洞被炸开，下面的街道上散落着碎石。据报道，有两人在轰炸中丧生。
+
+安东·赫拉申科还表示，俄罗斯谎称没有炮击民用基础设施，声称至少有 40 个此类地点遭到袭击。乌克兰周六晚些时候报道称，该国东部有 19 人在炮击中丧生。
+
+俄罗斯军队袭击造成平民死亡，迄今为止总数达到 219 人，其中包括三名儿童。
+
+乌克兰卫生部长今天表示，约有 1,200 人（包括 33 名儿童）受伤。
+
+与此同时，俄罗斯军队也向乌克兰的军事设施发射了一连串巡航导弹。
+
+来自世界各地的支持不断涌入，包括剑桥公爵和公爵夫人，他们说他们与乌克兰人民“站在一起”，为他们的未来“勇敢地战斗”。
+
+**新闻来源**：[dailymail.co.uk][‘We will destroy the occupiers’: Zelensky’s warning shot to Putin as Mayor Vitali Klitschko imposes a curfew on Kyiv residents until MONDAY and Ukrainian civilian death toll hits 219](https://www.dailymail.co.uk/news/article-10554483/Zelensky-fires-warning-shot-Putin-noose-tightens-Kyiv.html)
+
+* * *
+
+***审核：文乐
+校对：小东
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-9.jpeg)
 
 
 
