--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,15 @@
 ---
-title: 现在的中共，比胡温时代坏的太多! 惊现撤侨天价机票
+title: 中共做贼心虚 B站急删俄乌局势言论
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083161/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083198/)
 
-作者：东京樱花团｜Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2794.png)
-据【看中国】2022年2月27日综合报导，俄罗斯2月24日开始入侵乌克兰，当日中共国驻乌克兰大使馆紧急提示：车身贴上中国国旗，引发很多中国人欢呼。可24小时后又改口称不要亮明身份和展示识别性标识。目前战火已燃3天，在乌华人非常恐慌，急切等待尽快撤离，但是网传此次包机费用昂贵。
+撰稿：东京樱花团︱喜马拉雅的微尘
+![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-2-3.png)[*图片来源*](https://d5ttlem47o98b.cloudfront.net/s3fs-public/styles/banner/public/news_cover/1641372646_5V.JPG?itok=KwyD8jQz)
+2月27日消息，哔哩哔哩（俗称“B站”）社区发布公告称，已经就“俄乌之间的国际局势”处理有关不良信息 1642 条，并视情节严重程度对其中 57 个账号进行了禁言封禁处理。
 
-俄乌开战后，在乌的6000多华人最担心的就是自身安危和何时离开炮火纷飞的战场，24日中共国驻乌克兰大使馆紧急提醒华人，可车身贴中国国旗，意在可以避险。可是26日凌晨，中使馆又紧急提醒华人不要亮明身份及展示标识，没想到中使馆一天时间就变了。
+众所周知，中共是支持俄罗斯入侵乌克兰的背后黑手，急删俄乌局势言论，实则是做贼心虚。
 
-2月26日，网传中国驻乌克兰大使馆已经失联了，而在乌克兰的华人非常恐慌，甚至撕毁中国春联等中国标识。2月27日，中共国驻乌克兰大使的范先荣通过视讯发布致全体在乌中国同胞的公开信，他在视频中驳斥了已经逃离基辅的传言。他说：“很多人都想回国，但是目前的安全条件确实还不是所有的地方都具备，空中不时有飞弹、地上发生爆炸等，又有宵禁令，这种情况下无法确保安全，我们一定要等安全了再走。”
-
-但是，网传在乌克兰的外国人早在16日前都提前撤离了，甚至非洲的人都撤完了。有网友质疑，俄罗斯和中国的关系真的好吗？目前，在乌克兰的华人焦急地等待中国官方包机撤离，但网传包机费用相当昂贵。有网友披露，“包机回国费用105万人民币，我绝对相信中共能干出这种事。现在的中共，比胡温时代坏的太多了。柬埔寨回国十万，土耳其二十万，泰国六万，这还是官方自己爆出来的。有人从非洲花几万到老挝，准备进中国，被告知从哪来回哪去，回非洲坐飞机回国。有人在老挝花了十来万人民币还是没能回中国。”
-
-对于在乌华人撤离回国事宜，2月25日中国发出撤侨通知，27日人员还在登记中，中使馆称，要以通知为准。据称截止26日中午12时，已有7437位中国公民登记搭乘包机回国。但何时成行，要拭目以待。
-
-**中共的恶大多数人都领教过，但是对中共的坏有清醒认识的却没有几个，这也是人们一而再，再而三受害的主要原因。总是用自己的善良去揣度共匪的恶，怎么也想不到共匪恶的极致。没有底线是共匪的特点，只要共匪的恶超出你的想象，你永远都是输家。中共就是个魔鬼，魔鬼的本质就是要吃人，没有什么原因，他就是坏。奉劝那些还秉持着“国家还会害老百姓?”的童话幻想者，中共不等于中国，中共不等于中国人，中共是趴在中国和中国人身上的吸血鬼，不要让模糊不清的概念模糊了自己的双眼，看不清了事实，贻误了人生。**
-
-信息来源：[**撤侨天价机票？中国驻乌使馆一天两变**](https://m.secretchina.com/news/gb/2022/02/27/999116.html)
+信息来源：[**B站处置部分涉国际局势言论，倡议理性发布涉国际热点事件信息**](https://www.ithome.com/0/605/032.htm)
 
 *校对：东京樱花团/東洋武士*
 *发布：东京樱花团/tdownc2p*
