--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,31 +1,25 @@
 ---
-title: 普京下令俄罗斯的核威慑处于战备状态
+title: 中共双标救援政策放任中国同胞自灭，还试图阻止新中国联邦实施救援
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2083160/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/2083197/)
 
-**编译： Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip普京下令俄罗斯的核威慑处于战备状态.png)图片来源：politico.com
-乌克兰基辅——俄罗斯总统普京已下令核威慑力量在其入侵乌克兰与西方关系紧张之际，保持高度戒备。
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-普京周日在与他的高级官员会面时声称，北约主要大国与西方国家一起发表了“咄咄逼人的声明”，对包括总统本人在内的俄罗斯实施严厉的金融制裁，。
+2月28日，郭文贵先生于Gettr视频中透露，中共一贯流氓的双标嘴脸在乌克兰救援上体现的淋漓尽致，同时，新中国联邦由法治基金和法治社会主导的紧急救援行动不要钱、只救人。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/a61b0e5723b8e94b.png)图片来源新西兰农场
 
-普京命令俄罗斯国防部长和军队总参谋长，将核威慑力量置于“特殊的战斗职责制度”。
 
-他的这个命令是个威胁，在入侵乌克兰问题上，与西方的紧张局势将导致使用核武器。
+当前，全世界聚焦在激烈交战的俄乌战争，乌克兰正在发生人道灾难。然而，比爹亲娘亲的中共对困于乌克兰的中国公民提供两种处理方式，对于与自己有关联的亲友创造必要的救援条件，对于普通中国公民就以有导弹袭击危险为由无法实施救援。
 
-这位俄罗斯领导人本周威胁，要严厉报复任何直接干预乌克兰冲突的国家。
+即便新中国联邦的人道救援宣传工作还未全面铺开，但足已成功激怒中共。导致中共内部招集紧急会议，声称要坚决阻止新中国联邦调动强大的资源救援更多的中国同胞、美国友人等，要求放任在乌克兰的普通中国公民自生自灭。
 
-评论：文贵先生在今天直播中提醒道：乌克兰总统和全国人民坚定的信心和勇敢的抵抗，让入侵略者俄罗斯颜面尽失，原本以为速战速决的一大欺小以强欺弱的战争，已经拖延了三四天， 普京可能在穷凶恶极之时使用核武器，那将是地球好人类更大的灾难。
+事实上，目前中共在乌克兰的所有救援行动只是安排了两台大客车，准备把有一定级别的中共官员及家人（小姨子、小舅子等）或相关联人员运送到波兰。与此相对的是，为了救援中国同胞、美国友人等，新中国联邦派去救援的是全世界最安全的大力神飞机，与联合国安保组织机构合作，配备合法而专业的军人护卫。但是，如此美好的救援行动遭到中共严令阻止，中共不出手相救自己的国民，现在还要阻挠中国同胞有别的求生机会。中共向来不允许中国普通人民享有人权，否则就无法继续奴役人民，这就是流氓的中国共产党。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/aba534e848c76767.png)图片来源新西兰农场
+乌克兰并不是中共控制的地域，必将无法阻挡任何正义、合法的救援行动。而且令人兴奋的是，因这次人道救援行动新中国联邦与世界很多国家和机构立即形成了对等的、合作的、互信的关系，并且很多人都在寻求与我们合作。比如，乌克兰的某个社团向新中国联邦求救，希望可以让一些人有偿地搭上救援飞机，新中国联邦回复是不要钱、只救人，尽可能的多救一个是一个，毕竟每个人都是鲜活的生命。
 
-**新闻来源**:[politico.com][Putin puts Russia’s nuclear deterrent forces on alert](https://www.politico.com/news/2022/02/27/russia-putin-nuclear-weaponry-00012108)
+历来有竞争事情才会向着好的方法发展，在乌克兰的人道救援上，新中国联邦的救援行动超过所有中共的部门和机构，成为乌克兰上空飘荡的唯一来自中国人的救援力量。
 
-* * *
-
-***审核：文乐
-校对：小东
-发布：信心满满***
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-9.jpeg)
-
+最后，如果因为新中国联邦的救援行动而促使中共国和美国加速救援乌克兰也将是功德一件。
 
  
 
