--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,23 +1,27 @@
 ---
-title: 小粉红疯传撤侨画面“感谢祖国” 民间踢爆根本没开始
+title: 郭文贵精品视频-新中国联邦人紧急无条件救援乌克兰战区同胞
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083159/)
+`cindy` [轉載自GNews](https://gnews.org/zh-hans/2083196/)
 
-作者：东京樱花团｜Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-2793.png)
-据【看中国】2022年2月28日报道，俄乌战争情势不断升级，各国都在积极开展撤侨计划，中国驻乌克兰使馆也在舆论压力下于25 日宣布“启动撤侨计划”，但诡异的是，随后网络就开始流传“感谢祖国接我回家”的登机视频。民间踢爆大陆撤侨计划根本还没开始，乌克兰空域已被封锁，中方飞机不可能进入接人。
+撰稿：澳喜cindy
 
-网传视频大多数都是中国民众登上飞机的画面，同时配有“感谢祖国接我回家”、“再也不去乌克兰”，甚至是“再也不去乌克兰卖水果了”、“再也不去乌克兰卖天然气了”等字幕。也有一名自称“台湾小伙”的男子，发抖音大赞中国撤侨包机“连台胞都能搭”。但随后有网友踢爆，这名男子曾参与国台办的台青网红训练，其人根本不在乌克兰，而是在广东东莞。
+俄罗斯入侵乌克兰，战事朝着更加激烈的方向发展，双方死伤惨重。俄乌战争正在走向不确定的危险之中。
 
-根据中驻乌使馆发布的公告，撤侨登记时间至 27 日晚间 12 时截止，代表撤侨行动目前根本还没开始，仅在登记阶段而已。也有当地中国公民透露，现在乌克兰空域已经完全封锁，想要离开几乎不可能。对此，陆委会批评中共官方藉乌克兰国难，恶意政治操作及散布假讯息，令人不齿。
+郭先生代表新中国联邦人于26/2/2022 向驻乌克兰的中国同胞和美国人民发出通告：无条件地进行人道救援大行动！
 
-**既当裁判又想当运动员，吃了原告吃被告，当了婊子又要立牌坊，中共一直梦想着贏别人俩次，吃相之难看为实让人看不下去。不过江河日下，中共的造假水平也日益不济，往日造假还能掩人耳目，现如今“赤裸裸来去无牵挂”，我就这样，你能怎么着？一副死猪不怕开水烫的味道，脸皮厚也确实无人能比了。一个国家到了这个地步还能怎么样呢？无赖，无知，无耻，也该结束了！**
+与此同时我们看到中国驻乌克兰大使对国民的表态确实令人失望。
 
-信息来源：[**小粉红疯传撤侨画面“感谢祖国” 民间踢爆根本没开始**](https://m.secretchina.com/news/gb/2022/02/28/999164.html)
+新中国联邦人高效的争分夺秒的行动起来，很多战友争先恐后、毫不犹豫地报名奔赴危险的前线实施救援行动。
 
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+郭先生平时就总是告诉新中国联邦人要为真不破，说真话，做善事。此时我们身处第三次世界大战中，信息的真假至关重要。
+
+我们新中国联邦人5年来不遗余力地向全世界揭露中共的假丑恶罪行，唤醒沉睡的人们。如今非常时期我们更要多传播正能量的新闻和信息。战争是残酷的，野心家的愚蠢行动是不以大多数善良的人们的意志而改变的。为了世界的和平，尽我们所能。愿上天保佑我们每个人！
+
+*编辑：cindy*
+
+【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
+【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
