--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,52 +1,37 @@
 ---
-title: 有声&#124;灭共者之郭氏情报站（33）2022/02/27 文贵大直播
+title: 大直播后记：现代化战争是智慧的战争
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2083144/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083171/)
 
-配音：香草山教育部 – 子兵
-![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-**灭共者-郭氏情报站**
+#### 整理：清水冷香、Lucy Liu
+编辑：Mohegayer K. Simon
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-35.png)图片来源：墨尔本雅典娜农场设计组
+心理学、社交学、人际关系学、政治学、国际政治关系学，特别是现代社交媒体里边，最重要的就是战争心理研究的战争逻辑。乌克兰玩绝了，而且这个时候人家交了一大堆朋友——波兰、捷克。你们的战争就是我们的战争。你不要小看了，这是俄罗斯的死敌呀。
 
-1、弗拉基米尔·泽连斯基是乌克兰真正的民选总统，没有背后利益团体，穷光蛋。他所有的演讲和他的行动是一致的，说明他是纯外行政治家。国际认定泽连斯基是政治绅士先生：1.很棒的家庭，家人没跑。
+你看咱们中国人海外的欺民贼、民运。我们要灭共，这帮孙子要灭我们，他就没闹明白共产党是你们这帮人的敌人，都啥时候了，你还怎么取利弊呢？在生死面前是没有利没有弊的，只有敌我的关系。
 
-2.不怕死，全家准备殉国。3.没有和欧洲美国撕破脸，历史上很少有政治家能做到。泽连斯基用示弱，唤醒了民心。 2、俄罗斯的行动，用了最传统的直插式战争，没有使用AI战争。这相当于俄罗斯一个士兵，打一个乌克兰孩子，被世界唾弃。乌克兰接下去会很惨，俄罗斯穷凶极恶，甚至有动核武器的念头。
+乌克兰充分的利用这一条，让人认识到我的威胁就是你的威胁，我的战争就是你的战争，甚至让欧联盟在全世界面前一下子羞愧难当。马克龙说，哎呀，对不起，哥们儿，我这真是帮不了你。英国说，哥们儿，真对不起啊。连美国都说，你看这事确实不关美国事儿，咱也不是北约组织，也不是欧洲成员，我美国也没有帮助你的权利。美国这时候在旁边说，你们先打吗？你们打打嘛，叫你们背后老板出来嘛，就是中共嘛。你们先打。美国人在后面别着枪，在这儿一直掩藏后面那两杆枪，是吧，就等着，打嘛，瞄着后面那个人，是谁让他打的，谁戳动他打的，谁给他钱的。
 
-3、共产党开战，台湾只要坚持3个小时就赢了。美国，日本，澳大利亚，一定会上。美国只要3分钟，共产党3万多个基地立刻消失。台湾人受了共产党70年的窝囊气，有全世界支持，台湾一定会反击，会像乌克兰一样勇敢。
+老美太聪明了，你这一比兄弟，就咱中国人什么天天“美帝国主义，打倒美帝国主义，美国到处死人啦，都不行了”。中国人，你但凡到美国来转一圈你就知道，你就别说过去，也别说现在，也不是明天，就今天你认为强大的中国在任何角度跟美国比，是太阳和地球的差距，不是银河和地球的差距，不是银河无限大，地球一粒沙，你连个毛都不是。美国这个社会的科学能力，整个的经济能力，创新能力，还有人家的战略，人家整个国际战略，还有整个的宗教信仰。你跟人家比是啥呀？
 
-4、台湾20万现役，20万预备役，近50万专业军人。台湾没有时间打信息战，只能打技术战。GPS通信技术，电子战。大陆军人对技术的掌握和台湾没有可比性。但七哥最担心台湾的威胁是内部卖台贼：目前台湾人30%坚定，30%被共产党收买，30%傻乎乎。而乌克兰连政敌都和泽连斯基站在一起。
+就像国内的，我回到老家啊，我们老家那人，从小跟我一起长大的，坐那儿给他随便吃烧鸡喝酒，他会问出我很多话出来，哎呀，老七啊，这个你这钱也不够花的吧？你这也是缺钱吧啊。你说他问这话，我缺钱，我缺啥钱？你缺的是啥钱是吧？你在老家的地方吃只鸡就很大的事了。他天天惦记着我缺钱，我说我缺钱，天天缺钱，很缺钱。嗯啊，是吧？你那个楼能盖完吗？那得需要好几千好几万，是吧？我说是，需要好几十亿呢。哪里要那么多钱呢？还不如在老家种地好呢，你老家种地多好啊，我这很轻松。你睡得着觉吗？我说我睡不着觉，你想哪咋能睡着觉呢，是吧？就老家这种人来衡量我，他就不知道啊。
 
-5、美国一旦参与战争，共产党就会有动核武器的心，一定联合北朝鲜，伊朗，巴基斯坦。如果美国慢慢动手，就说明美国要这场世界大战，重整世界秩序；如果快战，就说明要维持世界秩序。重整世界秩序，世界人民将为之付出巨大的代价，但是无论如何共产党都消失。
+资料来源：[2022年2月27日文贵大直播](https://gtv.org/video/id=621b7633019ef64da651ee6c)
 
-6、中国人面临最大挑战不是共产党，不是美国，是被百年红毒烂掉的人心。七哥的建议正在进行中，这样对中国人代价最小，对美国也最有利。斩首中南坑7个老杂毛，对共产党造反的将军，全部赦免，甚至在美国拥有土地。维持世界秩序，全世界代价最小。这件事有几率发生！
+发布：wenly
 
-7、俄罗斯已经完了，两件事决定：1. 有普京的俄罗斯不会被世界认为是和平的力量，被世界唾弃；2. 俄罗斯人无法在世界上自由旅行和花钱了。最终只有2个奇怪的结局：1.和解；2.放核武器。
+更多资讯，请关注：
 
-8、台湾，新疆，西藏，香港独立，只会让中国人更好。中国人的智慧最有价值，遍布全球。AI世界只有类没有国，类大于国，未来的世界国没有土地和城墙，人类大融合。越是跨族通婚，人类越健康。国家矛盾，民族矛盾就是傻子。习不打台湾习就会被内部做掉；不做掉，美国就会病毒溯源，比打台湾还严重。若打台湾，中国人需要为此买单，面临的灾难需要几代人来消化。
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 
-9、喜联储、喜币会成为东欧神圣的阿拉丁。Hpay有其它版本，并没有公开。乌克兰人受新中国联邦帮助的都是 Hpay，塞浦路斯3小时点击率，超过了在线量的很多倍。
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
 
-10、SWIFT制裁有2个级别，1断网，2有条件的限制交易。美国人动手，就会直接断网级别。美国动手就会三板斧：1查封所有领导人资产；2断SWIFT，3直接断掉互联网根器。黄金，紧急储备上会有紧急措施，会让中共和俄罗斯的黄金变成废铁。
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 
-11、习近平和普京就是历史上的两个神经病，政治癫痫症，会被像屁一样放掉。
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 
-**上一期：**
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-**[灭共者之郭氏情报站（32）02/26/2022 文贵紧急直播 新中国联邦救援行动 – GNEWS](https://gnews.org/zh-hans/2078533/)**
-
-文字版原文：[灭共者之郭氏情报站（33）2022/02/27 文贵大直播](https://gnews.org/zh-hans/2078535/)
-
-音频处理：Fei797
-发稿：Fei797
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-1.jpg)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
