--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,53 +1,76 @@
 ---
-title: 有声&#124;灭共者之郭氏情报站（32）02/26/2022 文贵紧急直播 新中国联邦救援行动
+title: 部分俄罗斯银行正被从SWIFT银行信息系统中剔除
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2083028/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2083163/)
 
-配音：香草山教育部 – 子兵
-![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
-**灭共者-郭氏情报站**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image002-9.jpg)周三拍摄的俄罗斯驻华盛顿大使馆。美国和欧洲的盟友正在将选定的俄罗斯银行从 SWIFT （环球银行金融电信协会）消息系统中剔除。曼德尔·颜（Mandel Ngan）|法新社,盖蒂图片社
+据《NPR》作者马修·施瓦茨(Matthew S. Schwartz )，艾玛·鲍曼(Emma Bowman) 2022年 2 月 27 日报道
 
-**1、新中国联邦第一次参加国际救援，救援在乌克兰中国同胞及美国友人。**先预定10架飞机，大约先救出5000人。这件事只要同胞全部救，包括小粉红，但是战友优先。
+美国、加拿大和欧洲盟友正在采取行动，将某些俄罗斯银行从 SWIFT 银行消息系统中切断，这是新一轮严厉制裁的一部分，旨在惩罚俄罗斯对乌克兰的持续入侵。
 
-**2、救援以：**
-1.新中国联邦的战友及亲友，优先；
-2.美国友人；
-3.国际友人。
-**救援是不分种族，政治立场，宗教信仰，只要需要帮助的，就是救援的目标。** 如果不能离开乌克兰的，我们也会给予救援物资。将有10架飞机参加救援，以乌克兰首都基辅和基辅周围的几个机场为降落点，下周5前会到达，之后每天2架。接受信息，由联盟委员会统一协调，24小时为战友服务。法制基金、法制社会、联盟委员会也将提供至少30天的吃住用的补助，之后有需要会发起统一募捐。
+白宫发表声明说，部分原因是“我们承诺确保将选定的俄罗斯银行从 SWIFT 消息系统中剔除。这将确保这些银行与国际金融体系脱节，并打击它们在全球运营的能力。”
 
-**3、新中国联邦，与台湾农场，也会马上在帛琉共和國（Republic of Palau）建设基地，以应对随时可能爆发的台海战争。**同样，所有台湾的战友到帛琉后，至少30天的吃穿住行，将由新中国联邦、法制基金和法制社会负责。 到帛琉后，我们会想办法和其他国家协调，安排没有证件的战友及亲友到各个国家去。我们也会派救援飞机，每架350-500人，请战友们按规矩撤离，并且准备好相应的法律文件。
+SWIFT 是全球金融系统中的关键机制，每天支持数百万条安全消息，以促进全球银行间交易。
 
-**4、对救援行动小组的3个要求：**1. 准备一点当地的现金（碎钱），主要是欧元和美元；2. 千万不要好心当坏事，别做花里胡哨的的活，做实事；3. 不求名不求利，只求多救人，行动结果是最终评价的标准。
+哈佛大学戴维斯俄罗斯和欧亚研究中心执行主任亚历山德拉·瓦克鲁克斯（Alexandra Vacroux）将整个国家从 SWIFT 中剔除描述为“核选项”。瓦克鲁克斯上个月在接受 NPR 采访时表示，它可能会产生广泛的影响。
 
-**5、联盟委员会，紧急救援小组 的联系方式 之后会公布在GETTR、GTV、GNEWS上，以官方发布信息为准。**全球想参与救援的战友，请简单扼要的与联盟联系。最重要的是，战友要量力而为，不要冒险。任何私自参与救援的行为，都是不被接受的，所有参与的人员必须遵循国际联合宪章和新中国联邦宣言。
+她指出，当伊朗被从该系统中剔除时，“他们损失了一半的石油出口收入和 30% 的对外贸易。”
 
-**6、国内战友做什么？**什么都不要做，保护好自己，保护好家人，就是对新中国联邦最好的帮助。国内后面就是重灾区，救援飞机能飞乌克兰，但是不能飞中共国，国内战友务必做好准备。当前先救乌克兰，后面就是台湾。
+白宫表示，欧盟和美国将最终确定从 SWIFT 中被切断的特定银行名单。
 
-**7、在联合国救援组织下，不涉及政治立场的，由法制基金和法制社会主导，到乌克兰救援，包括中国同胞、美国 朋友，以及国际友人。**第一批将派出2架飞机，陆续10架飞机会参加救援。飞机上会标有国际救援组织、新中国联邦、法制基金和法制社会的标志和旗帜。飞机会返回：美国或欧洲某国（免签）。
+据一位不愿透露姓名的政府官员向记者介绍，最新制裁是盟国 “确保这场战争对普京来说是战略上的失败” 计划的一部分。
 
-**8、上飞机前先不做任何病毒测试，但是要按照有病毒情况做好防护，下飞机后由老班长安排做统一安排。**救援行动负责人安排，以文贵先生联盟公告为准。草根小哥负责G系列后勤保障；老班长全面联络；大卫负责前线；长岛哥总协调；唐平，小福利负责直播；如水负责财务，以及法治基金财务对接。小李归大卫调度。文疯而动，文斌，飞飞进入直播组。
+美国及其盟国表示，他们还将针对俄罗斯央行的资产实施限制，目标是该国可用于支撑卢布的 6,300 亿美元外汇储备。
 
-**9、Gnews，gettr，GTV发文务必准确。**战争时候，一个错误的信息会造成很严重的后果。如果不准确，宁可不发！！！ 新闻发布 以 文贵先生GETTR，GTV为准。英文，中文，俄文是发文的 3种主要语言。战友们，接下来就是高效的行动。0伤害，0风险。无私，无我。让世界看到爆料革命，新中国联邦是未来世界的希望，新中国联邦人反对战争，爱好和平！
+该组织中的国家表示，他们计划限制出售公民身份或 “黄金护照”，这允许富有的俄罗斯人通过投资成为其他国家的公民。一些欧洲国家是允许这种做法的。
 
-**上一期：**
+该组织还计划成立一个特别工作组，以查明和冻结受制裁的俄罗斯寡头及其亲属和同伙的资产，并努力防止他们将资产隐藏在海外。
 
-**[灭共者之郭氏情报站（31）2022/02/26 文贵大直播-EDU专场 – GNEWS](https://gnews.org/zh-hans/2071583/)**
+白宫官员周六表示，到目前为止，美国及其盟国已经瞄准了俄罗斯最大的 10 家金融机构。周四，拜登政府表示将阻止俄罗斯最大的银行 Sberbank 进入美国金融体系。政府还宣布对第二大银行 VTB 和其他三个金融机构实施新的金融制裁。
 
-文字版原文：[灭共者之郭氏情报站（32）02/26/2022 文贵紧急直播 新中国联邦救援行动](https://gnews.org/zh-hans/2078533/)
+美国还表示将加大力度打击虚假信息。
 
-音频处理：Fei797
-发稿：Fei797
+**德国与美国一道提供军事援助**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image004-9.jpg)周六，在乌克兰基辅的一条街道上，两辆汽车在燃烧时，乌克兰士兵在一军事设施外各就各位。<br>埃米利奥•莫雷纳蒂（Emilio Morenatti）|美联社（AP）
+与此同时，美国和德国正向乌克兰军队提供价值数亿美元的军事援助，试图击退俄罗斯的大规模入侵。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-1.jpg)
+五角大楼发言人约翰·柯比（John Kirby）周六对记者说，拜登总统周五批准了 3.5 亿美元的军事援助，其中包括标枪（Javelin）反坦克导弹、小型武器和防弹衣，以支持乌克兰的前线军队防御俄罗斯的袭击。柯比说，这使美国过去一年的援助总额达到 10 亿美元。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+德国还向乌克兰运送反坦克武器和导弹。“俄罗斯的袭击标志着一个转折点” 。总理奥拉夫·舒尔茨（Olaf Scholz）在一条推文中说。“我们有责任尽最大努力帮助乌克兰抵御普京的入侵军队。这就是我们向乌克兰的朋友提供1000 件反坦克武器和500 枚毒刺导弹的原因。”
 
+此举标志着柏林不将德国制造的武器，送入冲突地区的政策发生了突然转变。最近几周，这一立场引发了国际社会对德国的广泛批评，尤其是在众多西方盟国向乌克兰运送枪支、弹药和防空系统的情况下。 德国的政策逆转可能意味着欧洲对乌克兰的军事援助迅速增加。
+
+**乌克兰总统敦促公民****“****站稳脚跟****”**
+
+据报道，基辅发生了激烈的巷战，乌克兰军队保卫首都免受俄罗斯的持续入侵。当这座城市被导弹和火箭击中时，空袭警报整夜响起。乌克兰总统泽连斯基敦促乌克兰公民待在室内，躲避并“站稳脚跟”。
+
+泽连斯基自周五以来发布了两段视频，警告说他和他的家人是头号目标，并表明关于他呼吁他的军队投降的虚假信息正在传播。
+
+据英国广播公司翻译，泽连斯基在视频信息中说：“我们经受住并成功击退了敌人的攻击。战斗在我们州的许多城市和地区继续进行。我们正在保卫我们的国家，我们未来孩子的土地。”
+
+他说：“基辅和首都周边的主要城市都由我军控制，占领者想封锁我们国家的中心，把他们的傀儡安插在这里，就像在顿涅茨克一样。我们打破了他们的计划。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image006-4.jpg)周六，基辅西侧，乌克兰士兵站在损坏的乌克兰军车附近。 丹尼尔•里尔（Daniel Leal）| 法新社通过盖蒂图片社
+美国一名高级国防官员证实，俄罗斯人正面临乌克兰军队的顽强抵抗，尚未占领任何主要城市。截至当地时间周六下午，在入侵前部署在乌克兰附近的大约 190,000 名俄罗斯军队中，约有一半在乌克兰境内。
+
+这位美国官员说，俄罗斯军队在基辅外约 19 英里处，但俄罗斯的侦察却在城市内，可能是特种部队的一部分。数千人乘船登陆南部城市马里乌波尔（Mariupol），然后向北前往顿巴斯（Donbas）。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image008-3.jpg)基辅的一栋高层公寓楼在夜间被火箭击中受损。埃弗雷姆•卢卡茨基（Efrem Lukatsky）|美联社
+乌克兰卫生部长周六报告说，到目前为止，已有 198 人丧生，1000 多人受伤。一枚导弹在夜间击中了基辅西南部的一座高层公寓，造成数人受伤。“阻止俄罗斯战犯！”外交部长德米特罗·库莱巴（Dmytro Kuleba）在推文中说。
+
+自周四入侵开始以来，乌克兰的日常生活已经被颠覆。学校停课；许多家庭都躲在家里，但也有许多人试图逃离这个国家，堵住了高速公路。卫星图像显示，在西雷特（Siret） 过境点附近，试图进入罗马尼亚的人员、汽车和卡车出现了 4 英里长的交通堵塞。
+
+**近12万人逃离乌克兰**
+
+联合国表示，最近几天有近 12 万人逃往邻国。离开的大多数是妇女和儿童；不允许 18 至 60 岁的男性离境，因为他们可能会被征召入伍。
+
+白宫周五宣布，它将与欧洲盟友一道，制裁俄罗斯总统弗拉基米尔·普京（Vladimir Putin）和俄罗斯外交部长谢尔盖·拉夫罗夫（Sergey Lavrov）。制裁将包括旅行禁令。
+
+据路透社报道，土耳其总统塔伊普·埃尔多安（Tayyip Erdogan）周六在电话中告诉泽连斯基，他的政府正试图促成立即停火。同样在周六，联合国秘书长安东尼奥·古特雷斯（António Guterres）告诉泽连斯基，联合国将很快开始要求各国提供资金，以支持乌克兰的人道主义行动。
+
+俄罗斯周五否决了联合国安理会呼吁莫斯科停止入侵的决议。
+
+原文链接：[https://www.npr.org/2022/02/26/1083270999/ukraine-russia-swift-sanctions](https://www.npr.org/2022/02/26/1083270999/ukraine-russia-swift-sanctions)
+
+翻译：Nick｜校对：JS709| 编辑&发布：断播
 
  
 
