--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,34 +1,23 @@
 ---
-title: 有声&#124;新中国联邦救援乌克兰行动影响了世界
+title: 中共将会采用第三套方案攻台
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2082978/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2083057/)
 
-配音：香草山农场 – 纳米
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
-2022年2月26日，《新中国联邦》的发起人、缔造者一一郭文贵先生，向全世界公布了救援乌克兰的方案。这一决定引起了世界的关注，并影响了很多国家，改变了观望的态度。如德国180度转弯开始对乌克兰军事援助，俄罗斯被踢出了swift及所有交易系统，欧盟对俄关闭了所有领空及港口，众多外国志愿者加入了志愿军赴乌参加保卫战，英美等几十个国家把大量的武器和药品送到乌克兰……。就连被中共洗脑的部分中国人民也醒悟了，由原来的赞扬普京支持俄罗斯的侵略战争，改为支持乌克兰的正义的战争。
+撰稿：紐約磐石农场-在逺方
 
-一个新兴起的、代表中国人民利益的、还未被国际承认的新中国联邦，在其它国家遭受外敌侵略、其国人生灵涂碳的危难之际，代表中国人民毫不犹豫地伸出援助之手，送去急需的物资和药品，解救陷于危险的本国和友邦的人员，多么感人的行动啊。这就是伟大的国际主义精神，用实际行动向全世界宣告：中国人民不是自私自利的，中国人民不等于中国共产党，中国人民和全世界爱好和平的人民一样，愿意共同建设维护大家的安全美好的家园，决不允许任何独裁者、妄图称霸世界、奴役世界人民的邪恶组织和个人，欺压和屠杀无辜的平民，必须将他们彻底地消灭，连根铲除，全世界爱好和平的人民才能过上平安、幸福、美好的生活。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8D6818EA-3DFB-4072-9592-29A03CBAD1CB.jpeg)
 
-中国人不等于中共，彻底消灭共产党！
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-59.jpg)
-文字版原文：[新中国联邦救援乌克兰行动影响了世界](https://gnews.org/zh-hans/2078267/)
+在2月27日的大直播中，郭文贵先生表示，中共将会吸取俄罗斯的教训，使用第三套方案攻打台湾。
+郭先生说，如果没有美军或者其他联军参战，即使台湾的领导人拥有像乌克兰总统泽连斯基那样的政治智慧和勇气，以及全民共同抗击侵略者的决心，台湾最多能也只能抵抗中共20个小时的攻击。俄乌战争中，俄罗斯的表现让全世界跌破眼镜。在现代人工智能辅助的战争模式下，俄军却运用了传统的进攻战术，导致了惨重的失败。相反乌克兰却运用各种智慧策略和战略战术，成功地支撑到现在。然而，乌克兰将会遭受更加惨烈的打击，孤注一掷的普京政权有使用核武器的可能。
+当前中共正在密切关注俄乌战争事态的发展，习近平一定会从俄罗斯的失败中吸取教训，而采用第三套方案攻打台湾——即不顾及人道、人权和百姓伤亡，用导弹、甚至用准核武器，在最短的时间内，把台湾的东半岛和台中地区，所有的军事设施和政府机构完全摧毁。而台湾的国军部队，也一定会对中共的大连、福建、上海、广东、江西的基地进行反击，甚至可能还会占有优势。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+[新闻链接][https://www.gettr.com/post/px94dece36](https://www.gettr.com/post/px94dece36)
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/5CAB052F-A9F3-4B5C-9328-C3A74E709F0A.jpeg)
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+编輯/校正/发稿：玫瑰圓
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/6319C6AD-B91B-4B6F-A6AE-F5F20C941B31.jpeg)
 
  
 
