--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,25 +1,19 @@
 ---
-title: 转载新中国联邦人道救援公告
+title: 意大利五十岁以上的人不向疫苗强制令低头——自2月初以来接种率下降70%
 ---
-`XINYUAN` [轉載自GNews](https://gnews.org/zh-hans/2082838/)
+`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2082982/)
 
-中共国一直叫嚷着要从乌克兰撤回中国留学生等人员，但是却迟迟不见任何行动，而后又说乌克兰属于危险区域，很难营救，今天微博上又说通过大巴车运走了400个留学生，这就是中共国对待平民的态度，其实也是意料之中。而且，YouTube上有自媒体透露，中共有点权势的人早已被接回了国，只剩下他们认为的草民在恐惧中煎熬着，中共哪管他们的死活。直到2月26号新中国联邦郭先生发布的紧急直播，宣布新中国联邦和法治基金将与联合国救援组织合作，启动国际人道救援行动。我想他们才真正等到了获救的机会。下面是公告及相关内容。
+#### 翻译                           意大利达芬奇农场                         小白鸽  
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-28-alle-19.15.37.png)图片来源：ilparagone.it
+政府进一步的限制50岁以上的人，甚至包括那些从严格意义上讲并不拒绝接种新冠疫苗者，他们都离开了疫苗接种中心。尽管德拉吉政府颁布了强制令，但疫苗接种宣传活动仍然停滞不前。正如《24小时太阳报》所解释的那样，“2月结束时，免疫接种量减少三分之一（92.9万）。这一下降趋势反应在50岁以上这一特殊观察群体。1月28日至2月4日期间， 该年龄组的16.7万人被说服接种疫苗，而在最新的政府报告中减少到仅40.293人（2月19日至25日）。按百分比计算， 下降了70%。
 
-**新中国联邦与法治基金国际人道救援行动公告**
+所有可接种疫苗的人群， 儿童组（5岁至11岁）仍未接种任何新冠疫苗的人的数量最多。 直至6月15日，50岁以上的人只有在持有超级绿色通行证的前提下，才能进入工作场所。
 
-**为了应对当前乌克兰紧张局势，新中国联邦和法治基金将与联合国救援组织合作，启动国际人道救援行动，无偿安排专机协助有需要的人士撤离到安全中转国，并提供30天以内的免费食宿，符合条件的人士可以选择前往美、加、澳、新、欧盟等国。 救援对象：包括在乌克兰的新中国联邦战友及家人、华人同胞、美国及各国友人。**
+在对50岁以上人群的强制疫苗接种令生效前夕，有168.4万人尚未开始打新冠疫苗。开始时只说要打两针，然后变为三针，现在说秋天要打第四针。这是从未见过的现象。但是响应人数却在逐渐减少——接种数量从最初每周的167.802剂，到111.836剂， 再到73.935剂直至最近7天的48.293剂。
 
-**24小时救援联系方式如下：**
+原文链接：[https://www.ilparagone.it/attualita/vaccino-over-50-disertano-hub/](https://www.ilparagone.it/attualita/vaccino-over-50-disertano-hub/)
 
-**邮箱：[\[email protected\]](/cdn-cgi/l/email-protection#30627f7c7670657b6271797e7578757c601e797e767f) 或 [\[email protected\]](/cdn-cgi/l/email-protection#80cec6d3c3c0d5cbd2c1c9cec5c8c5ccd0aec9cec6cf) **
-
-**电话（短信或电话）：+1( 720)-657-6776  或   +1( 719)-224-4232**
-
-**新中国联邦 | 法治基金     2022年2月26日**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/55a74321a19d7731f134b350053dba28.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/image1-3-1.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-33.jpeg)
-另外，新中国联邦宣布，紧急救援滞留乌克兰的中国同胞和美国友人，在联合国国际救援组织下，与国际NGO组织合作，安排新中国联邦由法治基金和法治社会主导的对中国同胞和美国友人的紧急救援行动。 此行动无关政治，无关立场。 全球农场联合实施救援。 优先救助：新中国联邦同胞的家人朋友，中国同胞和美国友人。有能力前提下，可以救助符合国际救援标准的人员。
-
-这次乌克兰救援行动意义非常重大，这是新中国联邦第一次走上国际舞台，向全世界展示我们新中国人的实力和精神面貌，并把CCP和中国人分开，以防止大规模排华的发生，而且救援对象不仅是战友和普通中国人，还包括外国友人，请大家马上行动，在各个社交媒体平台，YouTube、Facebook、Instagram、微信、抖音以及微博等大力转发。感谢所有参与和支持这次行动的朋友们。
+编辑、上传：  Xiao   baige
 
  
 
