--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,36 +1,21 @@
 ---
-title: 大直播后记： 保命、保财、报仇——战争心理学
+title: 乌克兰因中共言行出现排华危机
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083200/)
+`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2083403/)
 
-#### 整理：清水冷香、Lucy Liu
-编辑：Mohegayer K. Simon
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-36.png)图片来源：墨尔本雅典娜农场设计组
-那个记者叫什么Marton John（音译：人名），那个傻货，他懂个屁呀！他觉得他在客厅是宣布主权一样，根本不知道我们过去干了啥，不知道现在共产党多怕我们，不知道为什么盘古龙头变成龟头了，因为他无知！他是在酒杯里边见世界。所以当时我说的保命，谁不想保命？保财，谁不捂住自己的钱包？谁不捂着自己的脑袋？你告诉我！报仇，你捂着脑袋捂着钱包，你不想想这谁让我抱脑袋报仇的？当然是共产党，那就找共产党，还用说吗？这就是一个战争心理学，你必须具备的素质。启发人的本能和消除人的本能。
+加拿大温哥华扬帆农场    平民正道
 
-七哥从第一天直播开始，你看明镜傻乎乎地问，他当时连直播的基本常识都没有，现在你看到我那时整个的直播，就从我直播之后他们才有了所谓直播设备，你拿个手机采访直播，你是疯子简直是。但是感谢他，我永远感谢明镜，不管他以后怎么说我，就感谢他。但是共产党没想明白的是，七哥当年用的社交媒体这一招，就像过去这几年七哥打仗，都在谈论我们的主体战争的时候，我们从侧面包围过去了。
+据台湾新闻《ETtoday》2月26日报道，随着俄乌战况愈演愈烈，在中共国内社交媒体上开始出现了大量“收留乌克兰美女”等趁火打劫式的恶俗言论之后，引发了国际社会特别是乌克兰当地民众的强烈愤慨。
 
-我崇拜中国的霍去病和卫青式的战争——以少胜多，出其不意，转移你的注意力，然后一举歼灭。我喜欢这个。我恨的就是共产党的所谓的三大战争，全是欺骗战争，就拿人去死去，就像越南战争，孩子没玩过枪就送到越南去了。今天你看到乌克兰人，他能不骄傲吗？看看我们中共国，上越南去的时候，60%是孩子，是学生，从来没摸过枪，上了火车才给你枪让你搂两下子。人家乌克兰咋不骄傲呢？
+报道称，中共国内以上的恶毒嘲讽言论被乌克兰大量媒体进行了广泛报道，并随即导致了当地出现的强烈反华情绪。据悉，目前已有中国留学生在外出购物时被当地人追踪、威胁和恐吓。
 
-人家卫青、霍去病冲到你背后，匈奴人还在前面冲呢，突然发现他后面那波人来了，这是谁呀？还没落完又一波，三波，打着打着，突然间主将才出来了，直接把刀放在你脸上了，现在结束，一刀下去，所有士兵的心理崩溃啊。这就叫宣判式心理学。——你们的头儿在在我的刀刃下呢，你们还要战吗？哎呀，不打了，不打了，你本身就筋疲力尽，全部跪下。这时候大将一挥手，长袍又往后一挥，崛起战马到安全地带去了，下边士兵收拾战场。
+对此，当地华人恳求中共网民不要再把同胞往火坑里推，并斥责道：小粉红们恶毒的调侃已导致乌克兰的华侨无法和当地人一起进入防空洞避难！因此，华人不得不把表露自己是中国人的一切特征都刻意隐藏起来。
 
-中共国呢？把人弄到了越南去，冲啊，把子弹打光，死了再上，就是靠死人。淮海战役，你看过淮海战役的真相吗？你看过整个当时东北的几场战役吗？全是老百姓，全是饿死人。你再看看平津湖，看看北朝鲜，你再比比乌克兰，我们说实在话，把自己的头塞到裤裆里，都觉得羞愧难当啊！
+评论指出，在全球都在制裁和谴责俄罗斯入侵乌克兰之际，唯有中共墙内掀起狂欢浪潮，而将海外华人置于危险境地。中共此时却纵容所谓“言论自由”，更彰显其险恶用心。在该暴政的推波助澜下，排华危机将一触即发！
 
-资料来源：[2022年2月27日文贵大直播](https://gtv.org/video/id=621b7633019ef64da651ee6c)
+* * *
 
-发布：wenly
-
-更多资讯，请关注：
-
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+编辑： 平民正道    发布：平民正道
 
  
 
