--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,19 +1,26 @@
 ---
-title: 中共做贼心虚 B站急删俄乌局势言论
+title: 有声&#124;香草山翻译部周刊&#124;2022年2月27日第37期
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083198/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2083378/)
 
-撰稿：东京樱花团︱喜马拉雅的微尘
-![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-2-3.png)[*图片来源*](https://d5ttlem47o98b.cloudfront.net/s3fs-public/styles/banner/public/news_cover/1641372646_5V.JPG?itok=KwyD8jQz)
-2月27日消息，哔哩哔哩（俗称“B站”）社区发布公告称，已经就“俄乌之间的国际局势”处理有关不良信息 1642 条，并视情节严重程度对其中 57 个账号进行了禁言封禁处理。
+配音：香草山教育部 – 子兵
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS-1.jpg)
 
-众所周知，中共是支持俄罗斯入侵乌克兰的背后黑手，急删俄乌局势言论，实则是做贼心虚。
+文字版原文：[香草山翻译部周刊|2022年2月27日第37期](https://gnews.org/zh-hans/2077212/)
 
-信息来源：[**B站处置部分涉国际局势言论，倡议理性发布涉国际热点事件信息**](https://www.ithome.com/0/605/032.htm)
+音频处理：Fei797
+发稿：Fei797
 
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-1.jpg)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
