--- a/gnews/49.md
+++ b/gnews/49.md
@@ -1,22 +1,25 @@
 ---
-title: 欧洲一些国家对乌克兰提供军事援助
+title: 美欧同意将部分俄罗斯银行从SWIFT系统中剔除
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2079127/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2079146/)
 
-作者：银河系农场 — 骄子
+作者：香草山农场-我不在這裡/日本东京方舟农场—Miyali7768(文玉）
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/1-GTV-Gnews-HEADER-8.png)
-2月26日，俄罗斯对乌克兰的侵略行动仍在继续。三个北约盟国捷克共和国、荷兰和葡萄牙表示，将帮助乌克兰同俄罗斯作战。捷克共和国会运送武器，包括机枪、冲锋枪、狙击步枪和相应弹药，葡萄牙承诺会派遣超过175名军人，荷兰表示会提供200枚高射刺客导弹以及其他国防武器，目前这些战略物资和人员正被紧急运送到乌克兰。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture00-1.jpg)
-德国也表示将向乌克兰提供武器，包括1000枚反坦克武器和500枚对空导弹。德国总理表示会尽最大努力帮助乌克兰抵御普京的入侵。
+2月26日，在乌克兰及国际多种力量的努力争取之后，美国联合加拿大、欧盟和英国等达成协意，对俄罗斯金融部门实施严厉的制裁，包括阻止其进入全球SWIFT金融体系，并首次对俄罗斯中央银行进行限制，以惩罚其对乌克兰的入侵。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture00-2.jpg)
+2 月 26 日，欧洲已开始为俄罗斯与 SWIFT 支付系统断开连接进行技术准备。SWIFT 的中断被称为“经济的核武器”。
 
-法国则积极参与了制裁俄罗斯的行动，对俄罗斯在英吉利海峡的船只进行了扣押。据悉该船只与俄罗斯间谍头目的家人有关，属于受到美国制裁的俄罗斯实体。
+这些制裁将使俄罗斯的银行不再能为贸易和金融活动进行支付，有效地阻止该国出口石油、煤炭和天然气等商品。也将使俄罗斯无法进口关键技术，如半导体和本国工业的机械。
+
+在这些措施中，对俄罗斯央行的限制针对的是克里姆林宫掌握的6000多亿美元的储备，以有效限制俄罗斯在西方制裁收紧的情况下支持卢布的能力。
 
 参考链接：
-1. [欧洲一些国家对乌克兰提供军事援助](https://opoyi.com/english/czech-republic-netherlands-portugal-to-help-ukraine-fight-russia)
-2. [欧洲一些国家对乌克兰提供军事援助](https://www.reuters.com/world/europe/france-seizes-ship-suspected-violating-russia-sanctions-official-2022-02-26/)
-3. [欧洲一些国家对乌克兰提供军事援助](https://www.reuters.com/world/europe/germany-supply-ukraine-with-anti-tank-weapons-missiles-scholz-2022-02-26/)
+1. [美欧同意将部分俄罗斯银行从SWIFT系统中剔除](https://www.cbsnews.com/news/swift-banking-system-russian-banks-removed-by-us-uk-eu/)
+2. [美欧同意将部分俄罗斯银行从SWIFT系统中剔除](https://www.usatoday.com/story/money/2022/02/24/swift-russia-banking-system-sanctions/6930931001/)
+3. [美欧同意将部分俄罗斯银行从SWIFT系统中剔除](https://asia.nikkei.com/Politics/Ukraine-conflict/Removal-of-Russian-banks-from-SWIFT-system-5-things-to-know)
+4. [美欧同意将部分俄罗斯银行从SWIFT系统中剔除](https://www.ukrinform.net/rubric-ato/3414072-zelensky-ukrainian-diplomats-worked-247-for-eu-countries-to-agree-on-decision-to-cut-russia-off-from-swift.html)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/calendar.png)
+![This image has an empty alt attribute; its file name is calendar.png](https://assets.gnews.org/wp-content/uploads/2022/02/calendar.png)
 
 总编：飞虹
 编辑：飞虹
