--- a/gnews/51.md
+++ b/gnews/51.md
@@ -1,23 +1,37 @@
 ---
-title: 2022年2月27日郭先生盖特 — 视频1「3分26秒」
+title: 全球各国对乌克兰的游行支持
 ---
-`喜联盟七哥盖特组 Miles Guo’s Gett` [轉載自GNews](https://gnews.org/zh-hans/2079010/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2079130/)
 
-听写：洛杉矶盘古农场 — Antsee-GTV
+作者：银河系农场—骄子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-GTV-Gnews-HEADER-8.png)
+2月27日，多家媒体报道，俄罗斯入侵乌克兰，引发了强烈的全球民众抗议。世界多个国家的老百姓都举行了大规模游行，谴责战争。
 
-Video link: https://gettr.com/post/px9tgede10
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1D48083C-9447-4610-BBE3-0A497BBF092E.jpeg)
-兄弟姐妹们，现在是28号（美东时间27号）下午6点，你健身了吗？
+从俄罗斯本土，到伦敦、纽约、德黑兰，从欧洲到美洲，数千人走上街头，支持乌克兰，抨击俄罗斯。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture00-3.jpg)
+民众自制的标语包括，支持乌克兰，要求普京下台，并把普京比作希特勒纳粹，敦促世界各国政府加强对俄罗斯的制裁。据不完全统计，上街游行的地区有意大利的罗马、瑞士、奥地利的维也纳、芬兰、法国的马赛和蒙彼利埃、西班牙的巴萨罗那、英国、以色列、爱沙尼亚、格鲁吉亚、阿根廷、加拿大等等，甚至在中共国墙内，都有勇士举着支持乌克兰的旗子。
 
-兄弟姐妹们，虽然…兄弟姐妹们，我这苹果上还在开着会，我把声音屏蔽了，然后健身，开会，录视频「同时进行」。救人很重要，先把自己救了，不管任何理由都要健身呐！希望兄弟姐妹们能看昨天的紧急大直播关于乌克兰救人 — 救人是我们现在的唯一目标。但是别着急，跟我们没有缘分的，没有姻缘的，结不成姻缘。别着急！
+俄罗斯驻各国大使馆的俄罗斯人也有人积极加入当地的反战游行，和本土的俄罗斯人一样为这个国家对乌克兰发动的战争表示谴责和耻辱，称这是全人类的灾难。
 
-疯了，太多人想救了！在乌克兰原来以为6000多人，现在就知道的已经20000多了。别说10架飞机了，光中国人30架都不够 — 太可怕了，30架到50架都不够，太疯狂了！
+参考链接：
+1. [全球各国对乌克兰的游行支持](https://mb.com.ph/2022/02/27/russia-out-worldwide-protests-in-solidarity-with-ukraine/)
+2. [全球各国对乌克兰的游行支持](https://gettr.com/post/px49u7764b)
+3. [全球各国对乌克兰的游行支持](https://gettr.com/post/px47541993)
 
-共产党这帮王八蛋听说以后马上通告不要上当受骗。你见过有开全世界最大的大力神飞机 — 一趟最起码物资就可能是几百万美元 — 去骗你去？去骗你一无分文，身在战区，素不相识的中国人吗？
+![This image has an empty alt attribute; its file name is calendar.png](https://assets.gnews.org/wp-content/uploads/2022/02/calendar.png)
 
-共产党：我R你八辈祖宗啊！你们这么骗老百姓啊？！你能不能拿几万美金开着你的拖拉机到乌克兰救救那在水深火热中的同胞？别只救你们的小姨子，你们的小舅子 — 行不行？！我R你八辈祖宗啊！天看着呢，作吧！老天会灭了你们的。太可怕了，兄弟姐妹们。
+总编：飞虹
+编辑：飞虹
+校对/发稿：Hetangyuese
 
-我们就是要行动和结果，要结果！啥都不说了。
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![This image has an empty alt attribute; its file name is MOS_LOGO_publish-14.png](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
 
  
 
