--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,26 +1,9 @@
 ---
-title: 郭文贵精品视频-新中国联邦人紧急无条件救援乌克兰战区同胞
+title: 2/28/2022 文贵盖特：面对乌克兰人道灾难，中共不光不管老百姓，只救自己人；还企图抹黑、阻止新中国联邦专业、合法地救援
 ---
-`cindy` [轉載自GNews](https://gnews.org/zh-hans/2083196/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2083338/)
 
-撰稿：澳喜cindy
-
-俄罗斯入侵乌克兰，战事朝着更加激烈的方向发展，双方死伤惨重。俄乌战争正在走向不确定的危险之中。
-
-郭先生代表新中国联邦人于26/2/2022 向驻乌克兰的中国同胞和美国人民发出通告：无条件地进行人道救援大行动！
-
-与此同时我们看到中国驻乌克兰大使对国民的表态确实令人失望。
-
-新中国联邦人高效的争分夺秒的行动起来，很多战友争先恐后、毫不犹豫地报名奔赴危险的前线实施救援行动。
-
-郭先生平时就总是告诉新中国联邦人要为真不破，说真话，做善事。此时我们身处第三次世界大战中，信息的真假至关重要。
-
-我们新中国联邦人5年来不遗余力地向全世界揭露中共的假丑恶罪行，唤醒沉睡的人们。如今非常时期我们更要多传播正能量的新闻和信息。战争是残酷的，野心家的愚蠢行动是不以大多数善良的人们的意志而改变的。为了世界的和平，尽我们所能。愿上天保佑我们每个人！
-
-*编辑：cindy*
-
-【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
-【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
+秘密翻译组-北美组
 
  
 
