--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,36 +1,35 @@
 ---
-title: 大直播后记：现代化战争是智慧的战争
+title: 有声&#124;《新中国联邦》一人一票投票法(三)
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083171/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2083263/)
 
-#### 整理：清水冷香、Lucy Liu
-编辑：Mohegayer K. Simon
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-35.png)图片来源：墨尔本雅典娜农场设计组
-心理学、社交学、人际关系学、政治学、国际政治关系学，特别是现代社交媒体里边，最重要的就是战争心理研究的战争逻辑。乌克兰玩绝了，而且这个时候人家交了一大堆朋友——波兰、捷克。你们的战争就是我们的战争。你不要小看了，这是俄罗斯的死敌呀。
+配音：香草山教育部 – 子兵
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/一人一票1.jpg)
+a、国家有了法律，并不是任何机构和个人都可以执法，必须由法律规定的合法的机构和人员才有执法权力。当今世界各国的执法机构基本都一样，是一个系统，即公检法系统。只有中共多了一个党的执法系统，叫中央纪律执行委员会(私设公堂)。从各国的执法情况来看，专制和独裁国家执法是最差的，没有公证可言。相对美国是执法较好的国家，但近几年也出现严重的腐败现象，如20年大选、太盟缠诉七哥案等，三权分立的监督形同虚设。所以借鉴他们的经验教训，监督机构也必须由平民组成。
 
-你看咱们中国人海外的欺民贼、民运。我们要灭共，这帮孙子要灭我们，他就没闹明白共产党是你们这帮人的敌人，都啥时候了，你还怎么取利弊呢？在生死面前是没有利没有弊的，只有敌我的关系。
+b、法律审判方面在法院进行，但判案必须由平民组成的陪审团执行。陪审团成员从平民中选出的大量的储备人员中盲选，原被告双方都可对陪审员提出质疑并调换。法官主要主持审判程序和法庭秩序，没有权力单独判案(双方和解的除外)。所有的(非隐私案件)都必须公开审理，允许民众和记者傍听、录音和录像，并公开发布在媒体上。
 
-乌克兰充分的利用这一条，让人认识到我的威胁就是你的威胁，我的战争就是你的战争，甚至让欧联盟在全世界面前一下子羞愧难当。马克龙说，哎呀，对不起，哥们儿，我这真是帮不了你。英国说，哥们儿，真对不起啊。连美国都说，你看这事确实不关美国事儿，咱也不是北约组织，也不是欧洲成员，我美国也没有帮助你的权利。美国这时候在旁边说，你们先打吗？你们打打嘛，叫你们背后老板出来嘛，就是中共嘛。你们先打。美国人在后面别着枪，在这儿一直掩藏后面那两杆枪，是吧，就等着，打嘛，瞄着后面那个人，是谁让他打的，谁戳动他打的，谁给他钱的。
+c、监督机构在《新中国联邦》宣言中明确了，由喜玛拉雅监督机构和国际合法机构共执行，我认为这还不够。因喜玛拉雅和未来的新政府没有任何政治经济关系，虽然不会形成腐败链条，但也有动力不足的因素。还有对于各级政府官员的日常工作生活的监督也没有国内民众方便。所以也必须给《新中国联邦》的公民赋予监督政府的权力。就弹劾各级政府的官员和机构来说，可以由公民在网上发起提议，签名人数超过某个数目时，就可以由全国公民或政府所管轄范围内的公民投票决定罢免与否。
 
-老美太聪明了，你这一比兄弟，就咱中国人什么天天“美帝国主义，打倒美帝国主义，美国到处死人啦，都不行了”。中国人，你但凡到美国来转一圈你就知道，你就别说过去，也别说现在，也不是明天，就今天你认为强大的中国在任何角度跟美国比，是太阳和地球的差距，不是银河和地球的差距，不是银河无限大，地球一粒沙，你连个毛都不是。美国这个社会的科学能力，整个的经济能力，创新能力，还有人家的战略，人家整个国际战略，还有整个的宗教信仰。你跟人家比是啥呀？
+d、公民除了对政府的监督外，对与国计民生及公民利益相关的各个部门、行业、企业，及相关的政策条例，和每年的效益也必须赋予公民监督的权力。在各部门、行业备注的大量专业人员中，每年固定或随机时段盲选部分人员，组成审核机构进行业务审查，结果在媒体公布，结合公民的实际感受进行投票，决定是否可行或调整。
 
-就像国内的，我回到老家啊，我们老家那人，从小跟我一起长大的，坐那儿给他随便吃烧鸡喝酒，他会问出我很多话出来，哎呀，老七啊，这个你这钱也不够花的吧？你这也是缺钱吧啊。你说他问这话，我缺钱，我缺啥钱？你缺的是啥钱是吧？你在老家的地方吃只鸡就很大的事了。他天天惦记着我缺钱，我说我缺钱，天天缺钱，很缺钱。嗯啊，是吧？你那个楼能盖完吗？那得需要好几千好几万，是吧？我说是，需要好几十亿呢。哪里要那么多钱呢？还不如在老家种地好呢，你老家种地多好啊，我这很轻松。你睡得着觉吗？我说我睡不着觉，你想哪咋能睡着觉呢，是吧？就老家这种人来衡量我，他就不知道啊。
+总之，要始终保证国家的所有决定权必须在全体平民的手中，以上内容必须写入法律中。
 
-资料来源：[2022年2月27日文贵大直播](https://gtv.org/video/id=621b7633019ef64da651ee6c)
+文字版原文：[《新中国联邦》一人一票投票法(三)](https://gnews.org/zh-hans/2075923/)
 
-发布：wenly
+音频处理：Fei797
+发稿：Fei797
 
-更多资讯，请关注：
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e-1.jpg)
 
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
 
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
