--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,31 +1,41 @@
 ---
-title: 白宫：普京人为制造并不存在的威胁,为进一步侵略乌克兰寻找理由
+title: 俄乌战争：据报道俄罗斯军队资金不足装备不合格
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2083417/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2083580/)
 
-作者：小小小鸟 （酷翻组）
-采集：玫瑰新闻组
+***评论：普京大帝的权力野心造就了乌克兰和俄罗斯可怕的战争灾难，乌克兰人民的勇敢智慧和坚毅无畏，成功地破坏了俄罗斯速战速决的计划。愿世界战争不再，和平早日到来！***
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3012.jpg)
+**据《福克斯新闻》作者：Peter Aitken，2022年2月26日报道：**
 
-白宫新闻秘书普萨基2月27日称，俄罗斯总统普京正在制造并不存在的威胁，以便为进一步侵略乌克兰而进行辩护，美国发誓将站出来支持乌克兰，并可能对莫斯科实施能源制裁。美国及其盟国已经对俄罗斯实施了严厉的制裁，以削弱其入侵乌克兰的经济。
+俄罗斯军队似乎主要是未经训练的应征者，履行强制服役。
 
-普萨基说，这些制裁可以与我们对待伊朗的情况相提并论，切断了他们与全球社会银行系统的联系。“我们现在还制裁了他们80%的银行和金融部门。这使得普京总统和俄罗斯政府不仅很难做生意，而且也很难资助他们的军事和创新领域使其在本国有进一步的发展。因此，我们已经采取了严厉的措施。当然，我们还可以考虑做更多的事情”，她接着说。
+俄罗斯入侵乌克兰费劲似乎因资金不足，装备不够，无法处理俄罗斯总统弗拉基米尔·普京所希望的迅速接管问题。
 
-在回答一个问题时，她说，对俄罗斯的能源制裁也正在讨论之列。“这确实是我们在这场冲突的过程中从普京总统那里看到的一种模式，即制造并不存在的威胁，以便为进一步的侵略辩护。全球社会和美国人民应该通过这个棱镜看穿他。我们已经看到他一次又一次地这样做”，普萨基在采访中告诉美国广播公司（ABC）。俄罗斯从来没有受到过北约的威胁，这都是普京总统的一个借口。我们将站出来，她说：“我们有能力保护自己，但我们也需要指出我们在这里看到的普京总统的真相”。乌克兰总统弗拉基米尔-泽连斯基正勇敢地站出来反对普京和俄罗斯领导人的入侵。“当拜登总统与乌克兰总统进行最后一次交谈时，泽连斯基总统要求美国为其提供额外的安全援助。这正是我们所提供的东西，而且我们将与他保持密切的联系。拜登总统正在与他保持沟通，正如我们所有人一样，”她说。
+一位美国官员周六表示，俄罗斯对入侵行动缺乏动力，感到“越来越沮丧”，特别是在该国北部。尽管经过几个月的计划和准备，俄罗斯还没有取得空中优势，乌克兰还保留着指挥和控制权。
 
-众议院共和党领袖凯文-麦卡锡在周日脱口秀节目的另一次采访中称，普京是鲁莽的、邪恶的和危险的。“他这样做可能有两个原因，一是因为这场战争进展不顺利，他被卷入了一个漩涡，从而试图通过谈判找到一条出路使自己变得更强大”，第二是他的情绪不稳定，他甚至是想尝试核武器这条路。在这个时候，世界上没有一个国家应该与普京站在一起”。麦卡锡说：“每个人都应该团结起来，基于他刚刚在过去几小时内声称要采取的行动”。
+而一位美国高级国防官员告诉福克斯新闻记者珍妮弗·格里芬，俄罗斯军队没有在夜间移动或战斗。大多数运动都是在黎明前开始，在白天进行，因为他们没有夜视仪，也没有接受过夜视仪的训练，这导致进展比预期慢。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/vt3.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/02/a77iz-zlibf.jpg)**图片来源：福克斯新闻网**![](https://assets.gnews.org/wp-content/uploads/2022/02/vff.png)
+2022年2月25日星期五，在乌克兰哈尔科夫郊区，乌克兰军人从一个停用的俄罗斯军用多管火箭发射器旁走过。周五，俄罗斯军队向乌克兰首都发起进攻，枪声和爆炸声越来越接近政府所在地，这是对一个民主国家的入侵，加剧了人们对欧洲更广泛战争的担忧，并引发了全世界对俄罗斯的制止。(AP Photo/Vadim Ghirda)
 
-前国务卿赖斯在另一次电视采访中指出，普京已经陷入了她个人从未见过的境地。“我不知道他在那个黑暗的世界里处于什么样的位置，但我要说的是：我们必须确保他真的明白，试图越过第五条界限的代价将是非常大的，对一个国家的攻击就是对所有国家的攻击。因此，波罗的海国家确实会受到美利坚合众国的保护”。
+部分问题可能是，俄罗斯军队是应征入伍的，没有经过严格的训练。士兵总委员会称，许多人不知道他们为什么在那里。
 
-“如果他在乌克兰遇到了很大的阻力，如果他不能轻易取胜，如果他不能实现他的目标，他有可能会撤军。但我想确保他真的会这样做。我想确保他不会将加里宁格勒收归于俄罗斯，这是已被波罗的海国家切断的俄罗斯领土”，赖斯说。“因此，我们在加强北约在波罗的海和波兰部队方面所做的工作，如果可能的话，这是让他知道代价会非常高的一种方式”。
+入侵前几天，俄罗斯妇女开始在社交媒体上发帖称，她们的儿子在俄罗斯军队中完成了义务兵役，被派往乌克兰边境，随后，她们就被噤声了。
 
-原文链接：
-[https://www.indiatoday.in/world/russia-ukraine-war/story/putin-is-manufacturing-threats-that-don-t-exist-to-justify-further-aggression-in-ukraine-white-house-1918641-2022-02-28](https://www.indiatoday.in/world/russia-ukraine-war/story/putin-is-manufacturing-threats-that-don-t-exist-to-justify-further-aggression-in-ukraine-white-house-1918641-2022-02-28)
+乌克兰武装部队陆军报告说，俄罗斯军队在星期五晚上的激烈战斗后，在科诺托普停下来寻找食物和燃料。该声明建议当地人可以提供燃料和糖，但没有提供具体建议。
 
-**校对：sherryok (水云间)**
-**审核校对：Barry Jack
-上传排版：V在途中**
+据乌克兰新闻社UNIAN报道，当地人声称，俄罗斯士兵“不惜一切代价”试图购买猪油和月光酒。据报道，这些士兵说他们不知道自己在哪里，但他们“要去基辅”。
+
+**原文连接**：[https://www.foxnews.com/world/ukraine-russian-troops-underfunded-equipment-subpar](https://www.foxnews.com/world/ukraine-russian-troops-underfunded-equipment-subpar)
+
+翻译：洛杉矶盘古农场 — TrueSky
+校对：洛杉矶盘古农场 — Mike Li
+评论：洛杉矶盘古农场 — Wendy
+编辑：洛杉矶盘古农场 — Wendy
+发布：洛杉矶盘古农场 – 彩虹 Rainbow
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
