--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,66 +1,47 @@
 ---
-title: 俄罗斯已表示将通过扣押在俄罗斯的外国人的资金来应对扣押俄罗斯的资金
+title: 聚焦：乌克兰总统泽连斯基正在拯救世界（上）
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2083646/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2083712/)
 
-[https://gtv.org/video/id=621caf1e4353d33974c3dda3](https://gtv.org/video/id=621caf1e4353d33974c3dda3)
+作者：丁过
 
-This Just in also from Moscow and Russia is saying
-这刚刚也来自莫斯科而且俄罗斯说
+编辑与校对：冰糖葫芦喵
 
-that it will respond to the seizure of money of Russian citizens and companies
-它将回应扣押俄罗斯公民和公司的钱
+**在俄罗斯入侵乌克兰前，美欧已经明确表态拒绝出兵乌克兰，几乎所有的人都认为乌克兰将不堪一击。**
 
-abroad by seizing funds of foreigners and foreign companies in Russia
-通过在俄罗斯扣押外国人和外国公司的资金到国外
+据爱沙尼亚前国防部长、欧洲议会议员特拉斯披露，普京很藐视乌克兰，他计划在1到4天内完成对乌克兰的占领，因此只携带了几天的后勤补给和火力弹药。
 
-so tit for tat on that one
-所以以牙还牙
+但是，**乌克兰军民在总统泽连斯基的带领下，面对从三面来犯的俄军予以迎头痛击，使普京速战速决的计划彻底落空。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2345截图20220222145924_副本.png)乌克兰总统泽连斯基（图片来源：网络）
+其直接结果是普京就此陷入了困境。据BBC2月28日报道，泽连斯基在国内的支持率飙升至91%，同时获得了巨大的国际声望，引来了全世界对乌克兰的广泛关注和援助。
 
-That’s according to the RIA News Agency
-这是根据 RIA 通讯社的报道
+**新中囯联邦创始人郭文贵先生在最近的直播中，对不怕死的泽连斯基满是溢美之词，称泽连斯基正在成为欧洲乃至世界的领䄂。**
 
-quoting the deputy head of Russia’s security council Dmitry Medvedev
-根据俄罗斯安全委员会副主席德米特里·梅德韦杰夫
+泽连斯基确实配享这样的荣耀：
 
-He says Moscow does not rule out
-他说莫斯科不排除
+**普京之所以敢于入侵乌克兰，是因为俄罗斯和中共国结成了实质上的同盟关系。**
 
-nationalizing the assets of companies registered in the United States European Un-ion
-将在美国、欧盟注册的公司的资产国有化
+**中俄结盟**的目的是在军事上对抗北约，在政治经济上对抗欧美，**终极目标是成为世界霸主。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/普京习近平-3-e1646094923509.jpg)习近平与普京（图片来源：网络）
+**俄乌战争的爆发表明，脆弱的国际关系已经重回弱肉强食的丛林时代，是人类文明倒退的标志性事件。**
 
-and what he calls other unfriendly jurisdictions
-以及他所谓的其他不友好的司法管辖区
+**此前普京向西方提出，“北约停止东扩，**部署退回1997年以前，放弃在乌克兰、东欧、外高加索、中亚的任何军事活动”。
 
-So what is happening with the the war here
-那么这里的战争发生了什么
+实质上这是彻底改变欧洲现状的要求，暴露了俄罗斯要接管或主导欧洲的图谋，所有的北约成员国都不可能同意，尤其是那些在历史上遭受俄国反复侵略、被前苏联共产主义长期毒害的东欧国家。
 
-the hot war, as you might say
-正如你所说，热战
+**如果北约接受普京的条件，北约将马上解体。**
 
-could be followed by some sort of economic war as well
-之后也可能发生某种经济战争
+抛出不可能被西方接受的条件，仅仅是**普京**计划的第一步，他**的如意算盘是迅速拿下乌克兰后，继续对东欧大兵压境，一步一步逼迫北约从东欧撒出军事力量，简单说就是缴械北约。**
 
-**原视频链接**[https://twitter.com/skynews/status/1497513596217135105?s=24](https://twitter.com/skynews/status/1497513596217135105?s=24)
+**接下来还有精彩内容，请看：聚焦：泽连斯基正在拯救世界（下）**
 
-Date:02/27/2022
-原视频标题: Russia has said it will respond to the seizure of Russian money by seizing the funds of foreigners in Russia
-俄罗斯已表示将通过扣押在俄罗斯的外国人的资金来应对扣押俄罗斯的资金
-原视频日期：2022/02/26
-原视频链接https://twitter.com/skynews/status/1497513596217135105?s=24
-任务编号：3872
-视频时间段 : 0:00-1:00
+新闻来源链接：
 
-英听校: 洛杉矶盘古农场 – Layka
-翻译: 洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场-银龙
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+[https://info.51.ca/news/world/2022-02/1074995.html](https://info.51.ca/news/world/2022-02/1074995.html)
 
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+[https://news.ltn.com.tw/news/world/breakingnews/3842894](https://news.ltn.com.tw/news/world/breakingnews/3842894)
+
+
 
  
 
