--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,37 +1,32 @@
 ---
-title: 新中国联邦在乌克兰的救援行动
+title: 短视频：个人享有自由和人权，不受政府和任何组织约束
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2083433/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2083585/)
 
-作者：香草山 翻译组 – 雪莲花 （Snow Lily）
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-俄罗斯于二月二十五日入侵乌克兰后， 乌克兰的几大城市和地区遭受到俄罗斯的武力袭击，数千名中共国公民被困在乌克兰。中共国政府一方面在国内宣传支持这场战争， 任意放肆五毛和粉红们趁人之危，用诸如“这回可以娶到漂亮的乌克兰女人做老婆喽”的话公开在网络上嘲笑乌克兰， 致使乌克兰出现排华现象，当地华人苦不堪言； 另一方面中共以战区危险为借口，没有撤侨和保护侨民的行动， 使当地中共国公民处于极度危险的境地。
+翻译：Annabelle
+校对：Lish
+字幕：qingjing
+编辑：文泓
 
-面对一奶同胞们在异国的遭遇， 郭文贵先生于二月二十六日紧急召开网络在线会议， 在联合国国际救援组织下，与国际NGO组织合作，安排新中国联邦由法治基金和法治社会主导的对中国同胞和美国友人的紧急救援行动。通过联合国安保组织，有专业军人保卫， 委派新中国联邦的骨干力量，准备租用十架次大力神飞机到乌克兰前线，将相关人士接送到较安全的欧洲免签国家或北美地区。被救出的人员交通费用免费，并给予救援后一个月的免费吃住。 一切费用均由法治基金，法制社会负担。新中国联邦人听到号召后，立即调动人力和物质资源，如：俄语翻译，寻找有NGO经验的人士，准备衣服和药品，后勤接应， 及救援随行新闻记者等。新中国联邦人把这一消息（见下图）通过网络社交媒体平台努力广泛传播到世界各地。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-39.png)图片来源：视频截屏
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3A63C474-6F53-4CA3-BB75-AE548AB19DD6-1.jpeg)
 
-众所周知， 微信是华人使用最多的社交平台，它一直是中共在海内外的大外宣工具。面对被封号的危险，有战友将这一救援信息发在了微信上。由于中共对华人的层层信息封锁，很多华人从来没听说过新中国联邦，但这救援信息使得他们第一次听到了新中国联邦的声音 （见下图）！
+我们不会允许这个在北美洲北部的国家再堕落下去，因为有人对权利的饥渴，抛弃了我们每个人拥有的自由。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_4BAFCD1DA1F7-1-2.jpeg)
+它们（自由）属于我们，我们每一个人都不一样，这就是为什么每个人的权力和自由都是那么的重要，对吧？
 
-相反，中共国政府对此又是做何反应的呢？中共国给在乌克兰的中国公民发出了以下信息，警告当地中国人不要随意搭机逃难，以防上当。这一举动显露了中共当局不把中国人的生命当回事的丑恶嘴脸！
+因为你代表你这个人，你是一个个体，而不是一个家庭，也不是一个团体；你不是其他组织的一部分，你不是省的一部分，而你是作为一个独立的加拿大人来拥有这些权利。这才是最重要的！
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_D2E7A3A09A9C-1-2.jpeg)
+视频链接：[𝙍𝙄𝙎𝙀𝙈𝙀𝙇𝘽𝙊𝙐𝙍𝙉𝙀 在 Twitter: “Victoria Canada 🇨🇦 This is one Epic Speech 💣 Former Politician Brian Peckford 💣🔥👊 https://t.co/SfRNmnO3Xn” / Twitter](https://twitter.com/risemelbourne/status/1492983608474169345?t=98is_v8fiZNX49MIz0iblA&amp;s=19)
 
-二月二十八日的文贵盖特透露，新中国联邦的救援活动激怒了中共当局。中共在内部会议上表示要坚决阻止郭文贵领导的新中国联邦的救援活动。中共担心如果新中国联邦成功出手，被救出的华人对比中共对生命的冷漠，将对中共政权造成威胁。在新中国联邦紧急救援的声明发出后，中共国不得已准备了两辆大客车摆样子，实际上，他们真正救援的只是中共官员在乌克兰的家属或亲信，并不是普通的中国公民。郭先生说，中共不会让中国公民享受任何好的东西，不允许中国人得到任何应有的尊重。中共让百姓只听它的，不能有其它选择，因为只有这样，它才能奴役百姓。救援还在进行时，但对待同一事物的看法和采取的措施，已经不难分辨出中共独裁政权的邪恶。这次救援活动开启了新中国联邦与很多国家和机构形成对等，相互合作，信任的关系， 同时新中国联邦能促使和加速中共国政府的撤侨 行动也是新中国联邦的一个胜利。
+发布：文泓
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二月小图.tif)
-
-审核/编辑/发布：谐趣园
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
