--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,29 +1,29 @@
 ---
-title: 美国计划将俄罗斯加密货币纳入制裁清单
+title: 大直播后记：世界上第一个AI参与的信息战争
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2083361/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083566/)
 
-**撰稿：日本东京方舟农场  海星**
+#### 整理：流氓兔、Lucy Liu
+编辑：skyandmoon2012
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-38.png)图片来源：墨尔本雅典娜农场设计组
+前天，我听到这词，我就一激灵——“政治绅士先生”。你要叫川普，川普一定骂人家祖宗：你们这帮孙子骗我是吧？我要爆你们的料！马克龙，是吧！最可怕的，咱们中国人最爱干的事儿，战争没开始，自己先咬起来了，逮住爹也咬，娘也咬，然后全世界人都是坏人，就自己是冤枉的，到处树敌，结果怎么样？这位绅士先生坚持了不到17个小时。英国已经不是欧盟国家了，约翰逊说：“这哥们不简单，真扛啊他，他真打呀！”话音未落，就一系列的媒体出来了：孩子，士兵离别，老人被撵，大楼被炸，全是平民！然后俄兵被干倒。
 
-近期，针对俄罗斯日趋激烈的侵略行为，美国政府计划将加密货币纳入制裁清单。
+大家记住，第二招太牛了，这叫什么？战争中的信息战。你看到过俄罗斯发出的信息谁信啊？有人信吗？它发啥都没人信，这哥们就找人一看：我干了它130架坦克，30架飞机，30架护卫机，然后多少人。所有社交媒体孩子出来唱国歌，模特哭倒，老人痛哭，然后人在坦克前面阻挡坦克，你见俄国有一个这样的视频出现在西方的主流媒体上吗？这是战争信息中的利用和媒体。泽连斯基牛了！你可能不知道，这是他一个发小帮他干的。Telegram本来就是俄罗斯人用的，Telegram大老板UAE在这事上是跟俄国站一边的，阿布扎比就跟它站在一边儿的，在Telegram上咵咵就出来了，还有Facebook，还有我们的GETTR，咣咣咣牛吧？又开启了先河。
 
-据《自由时报》报导，为了让俄罗斯对侵略乌克兰的行为付出相应代价，美国拜登政府正在考虑对其实施进一步经济制裁，将加密货币也纳入制裁清单。
+这一条都不算绝的，他最绝在哪儿？这哥们儿说：马上告诉欧洲，你们要真想帮我，能不能帮个小忙？在GPS网络控制上帮帮我忙。千万别忘了全世界所有的任何一个事件（包括盖特），世界上AI工程师、数据工程师、写代码的工程师，乌克兰第一。别忘了，盖特里边几个核心人物，我们最早用的也是乌克兰的，今天喜联储里边的大概有50个乌克兰人，人家厉害吧！人家在欧洲，在旁边几个小国，周围像波兰、捷克、拉斯韦克，人家有几个AI数据中心帮助泽连斯基建立。这是第一个世界上AI参与的战争。不但这个，这哥们还在媒体信息，GPS等方面使用上了。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-32.jpeg)（图片来源：Blockchain）
+更重要的，这哥们玩这个邪的，开辟了战争的新篇章：示弱！这场戏跟生活中演真戏小丑一样，我用我的勇敢，让人们看到我被欺负，整个民心和世界被唤醒了，既不抱怨也不翻脸，这叫政治绅士、战争绅士，和一个真正有智慧的国家领袖。现在已经不是国家领袖了，是世界领袖了，直接就昨天从国家领袖成世界领袖了！而且有一帮小孩和美女，给达赖喇嘛、诺贝尔奖的获得者、世界NGO、联合国，每天发几个带上自己照片和联络方式的求救函。这太聪明了，完全是一个示弱公关！这战略，这哥们，在人类这个信息时代，玩大了！
 
-该报导称，中共官媒央视财经近期曝光俄罗斯政府及富豪为躲避多国制裁，将财富透过加密货币形式藏匿，总金额高达1兆美元。
+资料来源：[2022年2月27日文贵大直播](https://gtv.org/video/id=621b7633019ef64da651ee6c)
 
-该报导指出，以加密货币形式藏匿的资金虽然不易被发现，增加了欧美对俄罗斯实施经济制裁的难度，但美国政府早前便已有制裁加密货币的经验。去年9月，美国政府将涉嫌洗钱及勒索的俄罗斯加密货币交易所 SUEX OTC 和 Chatex 列入了黑名单，有效地遏制了犯罪分子通过加密货币转移或获取资金。
+发布：wenly
 
-此前，美国政府和盟国已共同宣布对俄罗斯实施经济制裁，将其部分银行从SWIFT系统中剔除。
-
-参考链接：
-1. [https://ec.ltn.com.tw/article/breakingnews/3843064](https://ec.ltn.com.tw/article/breakingnews/3843064)
-2. [https://gnews.org/zh-hans/2072270/](https://gnews.org/zh-hans/2072270/)
-
-素材采编：海星
-编辑：老孙
-发布：文曦
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
