--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,43 +1,31 @@
 ---
-title: 一旦对台开战，台湾可能采取的反击方案
+title: 白宫：普京人为制造并不存在的威胁,为进一步侵略乌克兰寻找理由
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2083261/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2083417/)
 
-**整理：文晋、Lucy Liu
-编辑：Candy**
+作者：小小小鸟 （酷翻组）
+采集：玫瑰新闻组
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/台湾.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3012.jpg)
 
+白宫新闻秘书普萨基2月27日称，俄罗斯总统普京正在制造并不存在的威胁，以便为进一步侵略乌克兰而进行辩护，美国发誓将站出来支持乌克兰，并可能对莫斯科实施能源制裁。美国及其盟国已经对俄罗斯实施了严厉的制裁，以削弱其入侵乌克兰的经济。
 
-现在台湾在没有美军和联军出兵支持的情况下，能够坚持抵抗多长时间呢？超不过20个小时。在拥有他们（乌克兰）这样的领导智慧，拥有他这样的勇气和全民同心的情况下超不过20个小时，一定的，那个代价是巨大的。
+普萨基说，这些制裁可以与我们对待伊朗的情况相提并论，切断了他们与全球社会银行系统的联系。“我们现在还制裁了他们80%的银行和金融部门。这使得普京总统和俄罗斯政府不仅很难做生意，而且也很难资助他们的军事和创新领域使其在本国有进一步的发展。因此，我们已经采取了严厉的措施。当然，我们还可以考虑做更多的事情”，她接着说。
 
-我再给大家重申这件事情：现在俄罗斯叫世界跌破了眼镜。大家认为整个俄罗斯的现代化战争、立体化战争，所谓的AI的战争到来的时候，对这个基辅周围突然立体化的打击，几乎几个小时的事，不会超过一天。
+在回答一个问题时，她说，对俄罗斯的能源制裁也正在讨论之列。“这确实是我们在这场冲突的过程中从普京总统那里看到的一种模式，即制造并不存在的威胁，以便为进一步的侵略辩护。全球社会和美国人民应该通过这个棱镜看穿他。我们已经看到他一次又一次地这样做”，普萨基在采访中告诉美国广播公司（ABC）。俄罗斯从来没有受到过北约的威胁，这都是普京总统的一个借口。我们将站出来，她说：“我们有能力保护自己，但我们也需要指出我们在这里看到的普京总统的真相”。乌克兰总统弗拉基米尔-泽连斯基正勇敢地站出来反对普京和俄罗斯领导人的入侵。“当拜登总统与乌克兰总统进行最后一次交谈时，泽连斯基总统要求美国为其提供额外的安全援助。这正是我们所提供的东西，而且我们将与他保持密切的联系。拜登总统正在与他保持沟通，正如我们所有人一样，”她说。
 
-但是俄罗斯军方并没有采取这些作战，而是最传统的直插式，然后分别包围，空军作为轰炸，战略性威胁，然后虚假信息、喊口号，这是传统得不能再传统了，5000年来都是这个样子的。这个情况下，你看看一个这么强大的、一个完全可以说是一个壮丁在打一个七、八岁的孩子，结果是如此之悲惨。
+众议院共和党领袖凯文-麦卡锡在周日脱口秀节目的另一次采访中称，普京是鲁莽的、邪恶的和危险的。“他这样做可能有两个原因，一是因为这场战争进展不顺利，他被卷入了一个漩涡，从而试图通过谈判找到一条出路使自己变得更强大”，第二是他的情绪不稳定，他甚至是想尝试核武器这条路。在这个时候，世界上没有一个国家应该与普京站在一起”。麦卡锡说：“每个人都应该团结起来，基于他刚刚在过去几小时内声称要采取的行动”。
 
-这个孩子躲猫猫哭、示弱，引起了全世界的同情，一下子拖到现在了。这已经是传奇，但是接下来，乌克兰会非常非常的惨。俄罗斯只要不倒，一定会很惨，甚至想动用核武器的可能都有。这事他们绝对敢，太丢人了。我现在就打一个孩子啊，越打越追不着。我就不能打他屁股了，我可能要拿刀拿斧子，甚至拿枪，就是穷凶极恶。
+前国务卿赖斯在另一次电视采访中指出，普京已经陷入了她个人从未见过的境地。“我不知道他在那个黑暗的世界里处于什么样的位置，但我要说的是：我们必须确保他真的明白，试图越过第五条界限的代价将是非常大的，对一个国家的攻击就是对所有国家的攻击。因此，波罗的海国家确实会受到美利坚合众国的保护”。
 
-反过来说到台湾，现在习太阳大家都看着，他一定是把他的第三个方案拿出来：咱必须快。就是一开始的时候就不顾及世界什么人道人权，无辜的老百姓，他就不考虑这个。而且最快的办法就是导弹，甚至准核武器，现在和导弹之间的距离越来越小了。比如说一个导弹的杀伤力多少？有没有这个核杀伤力的这种作用？带不带核材料，你很难确定的。
+“如果他在乌克兰遇到了很大的阻力，如果他不能轻易取胜，如果他不能实现他的目标，他有可能会撤军。但我想确保他真的会这样做。我想确保他不会将加里宁格勒收归于俄罗斯，这是已被波罗的海国家切断的俄罗斯领土”，赖斯说。“因此，我们在加强北约在波罗的海和波兰部队方面所做的工作，如果可能的话，这是让他知道代价会非常高的一种方式”。
 
-这个世界上有很多，特别是中国有很多这种模糊的这种杀伤力导弹，直接就给你过去，就把整个台中、东半岛所有的军事设施，然后整个高雄台北的主要政府机构军队，他就是给你来个狂轰乱炸。这种炸的时候可能是非常之快。 连着炸上几个小时十个小时，台湾肯定有一波极为猛烈的反击。台湾这个时候一定对准大连、福建、上海等沿海，广东、江西的基地，台湾的武器都是美国的，一定会上，而且可能还会占优势。
+原文链接：
+[https://www.indiatoday.in/world/russia-ukraine-war/story/putin-is-manufacturing-threats-that-don-t-exist-to-justify-further-aggression-in-ukraine-white-house-1918641-2022-02-28](https://www.indiatoday.in/world/russia-ukraine-war/story/putin-is-manufacturing-threats-that-don-t-exist-to-justify-further-aggression-in-ukraine-white-house-1918641-2022-02-28)
 
-大家别忘了，今天的乌克兰，真正赢还是北约在后面撑着它的，北约用了技术上的资源和美国派出的技术上的部队。这叫什么？代理人战争。核心老大在旁边指导呢，要不然乌克兰一个小时也撑不住就完了。老百姓也懂，泽连斯基也懂。
-
-台湾绝对不一样的。台湾，如果能撑过仨小时，我觉得台湾就赢了，不用撑过一天。为什么？美国、日本一定上，澳大利亚这邻居一定上，甚至是直接参与战争。而且如果上的话，我说三分钟，美国要是玩儿狠的话，三分钟，共匪的三万多个基地绝对从天上就下去了，一定是这结局；要么就是美军已经跟台湾台军勾兑好了。台军怎么反导弹，只要导弹过来，我这儿的导弹就直接打到你上海、北京、广州、深圳、大连基地。
-
-可能第一波，共匪觉得自己很牛叉，说不定谁死的人多呢，这个时候共匪会疯狂：可能拿出什么核武器威胁呀，甚至真敢动两下子，都是有可能的。但是我今天先跟你分享，台湾的部队，不管如何，我觉得这次一定会大战，一定会打仗。
-
-我相信台湾人不会输乌克兰人，因为台湾人70年来受这窝囊气，你想什么人受得了70年呢？而且这全家人都在岛上呢，更重要的是台湾有全世界的支持，美军和台湾就像我和卡丽熙这个关系。切身利益、自身安全、共同生死的这种关系，能不打吗？那和乌克兰是啥关系呢？ 是战友的战友。
-
-资料来源：2022.2.27文贵大直播
-
-***发布：Candy***
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**校对：sherryok (水云间)**
+**审核校对：Barry Jack
+上传排版：V在途中**
 
  
 
