--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,21 +1,66 @@
 ---
-title: 200岁的听诊器进化版：超听诊器
+title: “我们将摧毁占领者”：泽连斯基向普京发出警告
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2083162/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2083234/)
 
-撰稿：东京樱花团︱盖特第一批注册
-![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-13.png)[*图片来源*](https://news.yahoo.co.jp/articles/076cc1b659c85968382a0193adabb85646a76071/images/000)
-听诊器已经使用了200多年，没有任何重大技术革新，其使用取决于医务人员的经验和听力，医生难免会错过一些东西。为了解决这个问题，日本医疗器材公司AMI正在开发一种新型听诊器——“超听诊器”。
+**编译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰总统泽伦斯基：我们将摧毁入侵者.png)图片来源:dailymail.co.uk
+克里琴科对基辅居民实行宵禁，直到星期一，乌克兰平民死亡人数达到 219。
 
-2月28日，日清纺控股公司宣布与生产新型“超级听诊器”的初创公司AMI（鹿儿岛市）建立资本和商业联盟，将投资1.5亿日元以支持产品开发，包括技术合作，目标是在明年夏天实现商业化。该公司正在全国各地的多个医疗机构进行临床研究。集团已将“生命与保健”作为其战略业务领域之一，预计这将是具体产品商业化的开始。
+抵抗总统沃洛德米尔·泽连斯基(Volodmyr Zelensky)今天承诺要“摧毁占领者”，他说，他的国家军队已经成功击退了向基辅推进的俄罗斯军队。
 
-超听诊器安装了利用心跳分析诊断心脏病的软件，是一种AI听诊器。超听诊器结合视频聊天系统可以实现远程听诊，达到远程医疗的目的。
+泽连斯基在给被围困国家人民的视频信息中，指责克里姆林宫试图夺取首都，推翻政府并建立一个“像顿涅茨克一样”的“傀儡”政权，这是战争贩子普京在发动全面入侵战争之前正式承认的两个分离主义地区之一。
 
-信息来源：[**聴診器 200年ぶりに大きく進化 日清紡HDが「超聴診器」のAMIに出資、技術協力**](https://news.yahoo.co.jp/articles/076cc1b659c85968382a0193adabb85646a76071)
+他称“我们打破了他们的企图”，并补充说：“我们国家的许多城市和地区都在进行战斗，我们知道，我们正在保护我们的国家、土地和孩子的未来。 基辅和首都周边主要城市还在我军的控制中。
 
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-9.jpg)
+“每个乌克兰人都应该记住一件事：如果你能阻止并摧毁占领者——那就去做吧。 每个能够回到乌克兰的人——回来保卫乌克兰吧。”
+
+与此同时，基辅的宵禁一直持续到周一早上 8 点，以确保最有效的城市防御和人民的安全。之前的每日宵禁时间是晚上 10 点到早上 7 点。
+
+市长维塔利·克里琴科说：“宵禁期间，街上的所有平民都将被视为敌人破坏或侦察组人员。”
+
+此前，基辅的一座高层公寓楼今天早上被一枚毁灭性的导弹击中，导致乌克兰的平民死亡人数达到 198 人。
+
+俄罗斯国防部在推特上发布的情报更新中说，俄罗斯尚未获得对乌克兰领空的控制权，这大大降低了俄罗斯空军的效力。
+
+但武装部队部长詹姆斯·赫佩今天表示，没有理由认为“完美的结局指日可待”，因为他警告说，冲突可能会持续数月。
+
+他告诉BBC：“没有人应该认为这已经结束了。在乌克兰、它的武装部队和非常悲惨的乌克兰人民面前，从过去 48 小时内我们所看到，这将会是几天、几周、几个月的时间。”
+
+正如乌克兰军队说，他们今天已经击退了俄罗斯对其首都的袭击，泽连斯基在一段激情的视频中发誓，要留下来和他的人民继续战斗。
+
+“我就在这里。我们不会放下任何武器。我们将保卫我们的国家，因为我们的武器就是我们的真理，”他在办公室外说道，并谴责说他已经投降或逃跑的说法是虚假信息。
+
+身穿军装的总统补充说：“互联网上出现了很多虚假信息，称我呼吁我军放下武器，撤离正在进行中。”
+
+“事实是，这是我们的土地、我们的国家、我们的孩子，我们将保护这一切。 这就是我想告诉你的。荣耀归于乌克兰”
+
+今天令人震惊的画面显示，一枚导弹将朱利尼机场附近的一座塔楼撕裂，而内部的闭路电视也显示了该地点被击中后的破坏程度。
+
+图片显示，该建筑物的侧面至少有五层楼的洞被炸开，下面的街道上散落着碎石。据报道，有两人在轰炸中丧生。
+
+安东·赫拉申科还表示，俄罗斯谎称没有炮击民用基础设施，声称至少有 40 个此类地点遭到袭击。乌克兰周六晚些时候报道称，该国东部有 19 人在炮击中丧生。
+
+俄罗斯军队袭击造成平民死亡，迄今为止总数达到 219 人，其中包括三名儿童。
+
+乌克兰卫生部长今天表示，约有 1,200 人（包括 33 名儿童）受伤。
+
+与此同时，俄罗斯军队也向乌克兰的军事设施发射了一连串巡航导弹。
+
+来自世界各地的支持不断涌入，包括剑桥公爵和公爵夫人，他们说他们与乌克兰人民“站在一起”，为他们的未来“勇敢地战斗”。
+
+**新闻来源**：[dailymail.co.uk][‘We will destroy the occupiers’: Zelensky’s warning shot to Putin as Mayor Vitali Klitschko imposes a curfew on Kyiv residents until MONDAY and Ukrainian civilian death toll hits 219](https://www.dailymail.co.uk/news/article-10554483/Zelensky-fires-warning-shot-Putin-noose-tightens-Kyiv.html)
+
+* * *
+
+***审核：文乐
+校对：小东
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-9.jpeg)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
