--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,27 +1,23 @@
 ---
-title: 韩囯将从3月起停止中共病毒疫苗接种
+title: 中共将会采用第三套方案攻台
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2082870/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2083057/)
 
-撰稿：銀河系农场-骄子
+撰稿：紐約磐石农场-在逺方
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7D060BC2-5E5D-4938-91E6-4114EB063104.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8D6818EA-3DFB-4072-9592-29A03CBAD1CB.jpeg)
 
+在2月27日的大直播中，郭文贵先生表示，中共将会吸取俄罗斯的教训，使用第三套方案攻打台湾。
+郭先生说，如果没有美军或者其他联军参战，即使台湾的领导人拥有像乌克兰总统泽连斯基那样的政治智慧和勇气，以及全民共同抗击侵略者的决心，台湾最多能也只能抵抗中共20个小时的攻击。俄乌战争中，俄罗斯的表现让全世界跌破眼镜。在现代人工智能辅助的战争模式下，俄军却运用了传统的进攻战术，导致了惨重的失败。相反乌克兰却运用各种智慧策略和战略战术，成功地支撑到现在。然而，乌克兰将会遭受更加惨烈的打击，孤注一掷的普京政权有使用核武器的可能。
+当前中共正在密切关注俄乌战争事态的发展，习近平一定会从俄罗斯的失败中吸取教训，而采用第三套方案攻打台湾——即不顾及人道、人权和百姓伤亡，用导弹、甚至用准核武器，在最短的时间内，把台湾的东半岛和台中地区，所有的军事设施和政府机构完全摧毁。而台湾的国军部队，也一定会对中共的大连、福建、上海、广东、江西的基地进行反击，甚至可能还会占有优势。
 
+[新闻链接][https://www.gettr.com/post/px94dece36](https://www.gettr.com/post/px94dece36)
 
-韩国政府于2月28日周一表示，由于中共病毒疫苗的有效性存疑，政府决定从3月开始停止接种中共病毒疫苗。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/5CAB052F-A9F3-4B5C-9328-C3A74E709F0A.jpeg)
 
-在中央灾害和安全对策会议上，政府宣布从3月1日周二起，将中共病毒疫苗通行证暂停使用，该通行证用途涵盖11种，包括餐馆、咖啡厅、大型活动和超过50人的集会。同时公共卫生中心、诊所和筛查诊所将停止签发中共病毒阴性证书，服务企业不再需要二维码验证程序。
+编輯/校正/发稿：玫瑰圓
 
-韩国政府最近因实施中共病毒疫苗强制面临一系列的诉讼，当地法院决定暂停疫苗通行证，韩国政府遂出此决定。
-
-新闻來源：[http://www.koreabiomed.com/news/articleView.html?idxno=13210](http://www.koreabiomed.com/news/articleView.html?idxno=13210)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1064B0CE-D742-4020-848C-27D308EB3B74.jpeg)
-
-编輯/校対/发稿：玫瑰圓
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0D8243C6-6266-4598-8A2B-F53FE4CCC6E7.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/6319C6AD-B91B-4B6F-A6AE-F5F20C941B31.jpeg)
 
  
 
